Fix many footnotes and unify layout

--- a/tex/p024.tex
+++ b/tex/p024.tex
@@ -29,7 +29,7 @@
 \vs p024 1:8 On these Paradise spheres of the Spirit the seven associate circuit supervisors and the first order of the Supreme Power Centres effect a liaison which, under the direction of the Supreme Executives, results in the sub\hyp{}Paradise co\hyp{}ordination of all material and spiritual circuits passing out to the seven superuniverses.
 \vs p024 1:9 On the headquarters worlds of each superuniverse are stationed the secondary supervisors for the local universes of time and space. The major and minor sectors are administrative divisions of the supergovernments but are not concerned in these matters of spirit\hyp{}energy supervision. I do not know how many secondary circuit supervisors there are in the grand universe, but on Uversa there are 84,691 of these beings. Secondary supervisors are being created right along; from time to time they appear in groups of 70 on the worlds of the Supreme Executives. We obtain them on requisition as we arrange for the establishment of separate circuits of spirit energy and liaison power to the newly evolving universes of our jurisdiction.
 \vs p024 1:10 A tertiary circuit supervisor functions on the headquarters world of every local universe. This order, like the secondary supervisors, is of continuous creation, being created in groups of 700. They are assigned to the local universes by the Ancients of Days.
-\vs p024 1:11 Circuit supervisors are created for their specific tasks, and they eternally serve in the groups of their original assignment. They are not rotated in service and hence make an agelong study of the problems found in the realms of their original assignment. For example: Tertiary circuit supervisor number 572,842 has functioned on Salvington since the early concept of your local universe, and he is a member of the personal staff of Michael of Nebadon.
+\vs p024 1:11 Circuit supervisors are created for their specific tasks, and they eternally serve in the groups of their original assignment. They are not rotated in service and hence make an agelong study of the problems found in the realms of their original assignment. For example: Tertiary circuit supervisor number\fnst{In 1955 text ``No.'' instead of ``number''.} 572,842 has functioned on Salvington since the early concept of your local universe, and he is a member of the personal staff of Michael of Nebadon.
 \vs p024 1:12 \pc Whether acting in the local or higher universes, circuit supervisors direct all concerned as to the proper circuits to employ for the transmission of all spirit messages and for the transit of all personalities. In their work of circuit supervision these efficient beings utilize all agencies, forces, and personalities in the universe of universes. They employ the unrevealed “high spirit personalities of circuit control” and are ably assisted by numerous staffs composed of personalities of the Infinite Spirit. It is they who would isolate an evolutionary world if its Planetary Prince should rebel against the Universal Father and his vicegerent Son. They are able to throw any world out of certain universe circuits of the higher spiritual order, but they cannot annul the material currents of the power directors.
 \vs p024 1:13 \pc The Universe Circuit Supervisors have something of the same relationship to spirit circuits that the Universe Power Directors have to material circuits. The two orders are complemental, together having the oversight of all spirit and all material circuits that are controllable and manipulatable by creatures.
 \vs p024 1:14 The circuit supervisors exercise certain oversight of those mind circuits which are spirit associated much as the power directors have certain jurisdiction over those phases of mind which are physical\hyp{}energy associated --- mechanical mind. In general the functions of each order are expanded by liaison with the other, but the circuits of pure mind are subject to the supervision of neither. Neither are the two orders co\hyp{}ordinate; in all their manifold labours the Universe Circuit Supervisors are subject to the Seven Supreme Power Directors and their subordinates.
