--- a/tex/p029.tex
+++ b/tex/p029.tex
@@ -77,7 +77,7 @@
 \vs p029 4:20 The mechanical controllers are competent to directionize the flow of energy and to facilitate its concentration into the specialized currents or circuits. These mighty beings have much to do with the segregation, directionization, and intensification of the physical energies and with the equalization of the pressures of the interplanetary circuits. They are expert in the manipulation of 21 of the 30 physical energies of space, constituting the power charge of a superuniverse. They are also able to accomplish much towards the management and control of 6 of the 9 more subtle forms of physical energy. By placing these controllers in proper technical relationship to each other and to certain of the power centres, the associate power directors are enabled to effect unbelievable changes in power adjustment and energy control.
 \vs p029 4:21 The Master Physical Controllers often function in batteries of hundreds, thousands, and even millions and by varying their positions and formations are able to effect energy control in a collective as well as an individual capacity. As requirements vary, they can upstep and accelerate the energy volume and movement or detain, condense, and retard the energy currents. They influence energy and power transformations somewhat as so\hyp{}called catalytic agents augment chemical reactions. They function by inherent ability and in co\hyp{}operation with the Supreme Power Centres.
 \vs p029 4:22 \ublistelem{3.}\bibnobreakspace \bibemph{Energy Transformers.} The number of these beings in a superuniverse is unbelievable. There are almost 1,000,000 in Satania alone, and the usual quota is 100 for each inhabited world.
-\vs p029 4:23 The energy transformers are the conjoint creation of the Seven Supreme Power Directors and the Seven Centre\fnc{In 1955 text ``Central'', but there is no mention of the Seven \bibemph{Central} Supervisors anywhere in the text and there are multiple references to the Seven \bibemph{Centre} Supervisors; the primary description of them is given at \bibref[29:2.10]{p029 2:10}.} Supervisors. They are among the more personal orders of physical controllers, and except when an associate power director is present on an inhabited world, the transformers are in command. They are the planetary inspectors of all departing seraphic transports. All classes of celestial life can utilize the less personal orders of the physical controllers only by liaison with the more personal orders of the associate directors and the energy transformers.
+\vs p029 4:23 The energy transformers are the conjoint creation of the Seven Supreme Power Directors and the Seven Centre\fnst{In 1955 text ``Central'', but there is no mention of the Seven \bibemph{Central} Supervisors anywhere in the text and there are multiple references to the Seven \bibemph{Centre} Supervisors; the primary description of them is given at \bibref[29:2.10]{p029 2:10}.} Supervisors. They are among the more personal orders of physical controllers, and except when an associate power director is present on an inhabited world, the transformers are in command. They are the planetary inspectors of all departing seraphic transports. All classes of celestial life can utilize the less personal orders of the physical controllers only by liaison with the more personal orders of the associate directors and the energy transformers.
 \vs p029 4:24 These transformers are powerful and effective living\tunemarkup{pgnexus10}{\linebreak} switches, being able to dispose themselves for or against a given power disposition or directionization. They are also skillful in their efforts to insulate the planets against the powerful energy streams passing between gigantic planetary and starry neighbours. Their energy\hyp{}transmutive attributes render them most serviceable in the important task of maintaining universal energy balance, or power equilibrium. At one time they seem to consume or store energy; at other times they appear to exude or liberate energy. The transformers are able to increase or to diminish the “storage\hyp{}battery” potential of the living and dead energies of their respective realms. But they deal only with physical and semimaterial energies, they do not directly function in the domain of life, neither do they change the forms of living beings.
 \vs p029 4:25 In some respects the energy transformers are the most remarkable and mysterious of all semimaterial living creatures. They are in some unknown manner physically differentiated, and by varying their liaison relationships, they are able to exert a profound influence upon the energy which passes through their associated presences. The status of the physical realms seems to undergo a transformation under their skillful manipulation. \bibemph{They can and do change the physical form of the energies of space.} With the aid of their fellow controllers they are actually able to change the form and potential of 27 of the 30 physical energies of the superuniverse power charge. That three of these energies are beyond their control proves that they are not instrumentalities of the Unqualified Absolute.
 \vs p029 4:26 \pc The remaining four groups of the Master Physical Controllers are hardly persons within any acceptable definition of that word. These transmitters, associators, dissociators, and frandalanks are wholly automatic in their reactions; nevertheless they are in every sense intelligent. We are greatly limited in our knowledge of these wonderful entities because we cannot communicate with them. They appear to understand the language of the realm, but they cannot communicate with us. They seem fully able to receive our communications but quite powerless to make response.
