--- a/tex/p036.tex
+++ b/tex/p036.tex
@@ -39,7 +39,7 @@
 \vs p036 3:3 When, in accordance with approved formulas, the physical patterns have been provided, then do the Life Carriers catalyse this lifeless material, imparting through their persons the vital spirit spark; and forthwith do the inert patterns become living matter.
 \vs p036 3:4 \pc The vital spark --- the mystery of life --- is bestowed through the Life Carriers, not by them. They do indeed supervise such transactions, they formulate the life plasm itself, but it is the Universe Mother Spirit who supplies the essential factor of the living plasm. From the Creative Daughter of the Infinite Spirit comes that energy spark which enlivens the body and presages the mind.
 \vs p036 3:5 \pc In the bestowal of life the Life Carriers transmit nothing of their personal natures, not even on those spheres where new orders of life are projected. At such times they simply initiate and transmit the spark of life, start the required revolutions of matter in accordance with the physical, chemical, and electrical specifications of the ordained plans and patterns. Life Carriers are living catalytic presences which agitate, organize, and vitalize the otherwise inert elements of the material order of existence.
-\vs p036 3:6 \pc The Life Carriers of a planetary corps are given a certain period in which to establish life on a new world, approximately 500,000 years of the time of that planet. At the termination of this period, indicated by certain developmental attainments of the planetary life, they cease implantation efforts, and they may not subsequently add anything\fnc{In the 1955 text ``any thing'' two words.} new or supplemental to the life of that planet.
+\vs p036 3:6 \pc The Life Carriers of a planetary corps are given a certain period in which to establish life on a new world, approximately 500,000 years of the time of that planet. At the termination of this period, indicated by certain developmental attainments of the planetary life, they cease implantation efforts, and they may not subsequently add anything\fnst{In 1955 text ``any thing'' two words.} new or supplemental to the life of that planet.
 \vs p036 3:7 During the ages intervening between life establishment and the emergence of human creatures of moral status, the Life Carriers are permitted to manipulate the life environment and otherwise favourably directionize the course of biologic evolution. And this they do for long periods of time.
 \vs p036 3:8 When the Life Carriers operating on a new world have once succeeded in producing a being with will, with the power of moral decision and spiritual choice, then and there their work terminates --- they are through; they may manipulate the evolving life no further. From this point forward the evolution of living things must proceed in accordance with the endowment of the inherent nature and tendencies which have already been imparted to, and established in, the planetary life formulas and patterns. The Life Carriers are not permitted to experiment or to interfere with will; they are not allowed to dominate or arbitrarily influence moral creatures.
 \vs p036 3:9 Upon the arrival of a Planetary Prince they prepare to leave, though two of the senior carriers and twelve custodians may volunteer, by taking temporary renunciation vows, to remain indefinitely on the planet as advisers in the matter of the further development and conservation of the life plasm. Two such Sons and their twelve associates are now serving on Urantia.
