--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -78,7 +78,7 @@
 \vs p042 4:13 \pc The relative integrity of matter is assured by the fact that energy can be absorbed or released only in those exact amounts which Urantia scientists have designated quanta. This wise provision in the material realms serves to maintain the universes as going concerns.
 \vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860\fnst{This ``magic number'' is explained by Sir James Jeans in his book ``The Universe Around Us'' (1930, p.138) as follows: the energy needed to separate two charges $+e$ and $-e$ at a distance $r$ is $e^2/(4\pi\epsilon_0 r)$; equating it to the energy of photon $h\nu$ we have $h\nu=hc/\lambda = e^2/(4\pi\epsilon_0 r)$, whence we obtain $\lambda/r = 4\pi\epsilon_0 hc/e^2 \approx 861.02$.} times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
 \usection{Wave\hyp{}Energy Manifestations}
-\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the γ-rays\fnc{In 1955 text ``Y rays''.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
+\vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the γ-rays\fnst{In 1955 text ``Y rays''.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
 \vs p042 5:2 \pc Wavelike energy manifestations --- from the standpoint of XX century Urantia scientific enlightenment --- may be classified into the following 10 groups:
 \vs p042 5:3 \ublistelem{1.}\bibnobreakspace \bibemph{Infraultimatonic rays ---} the borderland revolutions of ultimatons as they begin to assume definite form. This is the 1\ts{st} stage of emergent energy in which wavelike phenomena can be detected and measured.
 \vs p042 5:4 \ublistelem{2.}\bibnobreakspace \bibemph{Ultimatonic rays.} The assembly of energy into the minute spheres of the ultimatons occasions vibrations in the content of space which are discernible and measurable. And long before physicists ever discover the ultimaton, they will undoubtedly detect the phenomena of these rays as they shower in upon Urantia. These short and powerful rays represent the initial activity of the ultimatons as they are slowed down to that point where they veer towards the electronic organization of matter. As the ultimatons aggregate into electrons, condensation occurs with a consequent storage of energy.
@@ -129,7 +129,7 @@
 \vs p042 9:4 But not all the suppositions of natural philosophy are valid; for example, the hypothetical ether, which represents an ingenious attempt of man to unify his ignorance of space phenomena. The philosophy of the universe cannot be predicated on the observations of so\hyp{}called science. If such a metamorphosis could not be seen, a scientist would be inclined to deny the possibility of developing a butterfly out of a caterpillar.
 \vs p042 9:5 Physical stability associated with biologic elasticity is present in nature only because of the well\hyp{}nigh infinite wisdom possessed by the Master Architects of creation. Nothing less than transcendental wisdom could ever design units of matter which are at the same time so stable and so efficiently flexible.
 \usection{Universal Nonspiritual Energy Systems\\(\subtitlefont Material Mind Systems)}
-\vs p042 10:1 The endless sweep of relative cosmic reality,\fnc{In 1955 text no comma after ``reality''.} from the absoluteness of Paradise monota to the absoluteness of space potency, is suggestive of certain evolutions of relationship in the nonspiritual realities of the First Source and Centre --- those realities which are concealed in space potency, revealed in monota, and provisionally disclosed on intervening cosmic levels. This eternal cycle of energy, being circuited in the Father of universes, is absolute and, being absolute, is expansile in neither fact nor value; nevertheless the Primal Father is even now --- as always --- self\hyp{}realizing of an ever\hyp{}expanding arena of time\hyp{}space, and of time\hyp{}space\hyp{}transcended, meanings, an arena of changing relationships wherein energy\hyp{}matter is being progressively subjected to the overcontrol of living and divine spirit through the experiential striving of living and personal mind.
+\vs p042 10:1 The endless sweep of relative cosmic reality,\fnst{In 1955 text no comma after ``reality''.} from the absoluteness of Paradise monota to the absoluteness of space potency, is suggestive of certain evolutions of relationship in the nonspiritual realities of the First Source and Centre --- those realities which are concealed in space potency, revealed in monota, and provisionally disclosed on intervening cosmic levels. This eternal cycle of energy, being circuited in the Father of universes, is absolute and, being absolute, is expansile in neither fact nor value; nevertheless the Primal Father is even now --- as always --- self\hyp{}realizing of an ever\hyp{}expanding arena of time\hyp{}space, and of time\hyp{}space\hyp{}transcended, meanings, an arena of changing relationships wherein energy\hyp{}matter is being progressively subjected to the overcontrol of living and divine spirit through the experiential striving of living and personal mind.
 \vs p042 10:2 The universal nonspiritual energies are reassociated in the living systems of non\hyp{}Creator minds on various levels, certain of which may be depicted as follows:
 \vs p042 10:3 \ublistelem{1.}\bibnobreakspace \bibemph{Preadjutant\hyp{}spirit minds.} This level of mind is nonexperiencing and on the inhabited worlds is ministered by the Master Physical Controllers. This is mechanical mind, the nonteachable intellect of the most primitive forms of material life, but the nonteachable mind functions on many levels beside that of primitive planetary life.
 \vs p042 10:4 \ublistelem{2.}\bibnobreakspace \bibemph{Adjutant\hyp{}spirit minds.} This is the ministry of a local universe Mother Spirit functioning through her 7 adjutant mind\hyp{}spirits on the teachable (nonmechanical) level of material mind. On this level material mind is experiencing: as subhuman (animal) intellect in the first 5 adjutants; as human (moral) intellect in the 7 adjutants; as superhuman (midwayer) intellect in the last 2 adjutants.
