--- a/tex/p043.tex
+++ b/tex/p043.tex
@@ -19,7 +19,7 @@
 \vs p043 1:3 Edentia and its associated worlds have a true atmosphere, the usual three\hyp{}gas mixture which is characteristic of such architectural creations, and which embodies the two elements of Urantian atmosphere plus that morontia gas suitable for the respiration of morontia creatures. But while this atmosphere is both material and morontial, there are no storms or hurricanes; neither is there summer nor winter. This absence of atmospheric disturbances and of seasonal variation makes it possible to embellish all outdoors on these especially created worlds.
 \vs p043 1:4 The Edentia highlands are magnificent physical features, and their beauty is enhanced by the endless profusion of life which abounds throughout their length and breadth. Excepting a few rather isolated structures, these highlands contain no work of creature hands. Material and morontial ornamentations are limited to the dwelling areas. The lesser elevations are the sites of special residences and are beautifully embellished with both biologic and morontia art.
 \vs p043 1:5 \pc Situated on the summit of the seventh highland range are the resurrection halls of Edentia, wherein awaken the ascending mortals of the secondary modified order of ascension. These chambers of creature reassembly are under the supervision of the Melchizedeks. The first of the receiving spheres of Edentia (like the planet Melchizedek near Salvington) also has special resurrection halls, wherein the mortals of the modified orders of ascension are reassembled.
-\vs p043 1:6 The Melchizedeks also maintain two special colleges on Edentia. One, the emergency school, is devoted to the study of problems growing out of the Satania rebellion. The other, the bestowal school, is dedicated to the mastery of the new problems arising out of the fact that Michael made his final bestowal on one of the worlds of Norlatiadek. This latter college was established almost 40,000 years ago, immediately after the announcement by Michael that Urantia had been selected as the world for his final bestowal.\fnc{\ldots{}established almost \bibtextul{four} thousand years ago, immediately after\ldots{} \bibexpl{The second edition correction appears to be warranted based on a reference at \bibref[119:7.2]{p0119 7:2} in the text: “The public announcement that Michael had selected Urantia as the theatre for his final bestowal was made shortly after we learned about the default of Adam and Eve. And thus, for more than thirty-five thousand years, your world occupied a very conspicuous place in the councils of the entire universe.” The default occurred about 37,800 years ago, so “almost forty thousand” and “more than thirty-five thousand” would seem to be equally reasonable descriptions. The committee concluded that the problem here is identical in origin to that of \bibref[41:4.4]{p041 4:4} in the text: the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by the loss of a zero before the number was formatted into words for printing.}}
+\vs p043 1:6 The Melchizedeks also maintain two special colleges on Edentia. One, the emergency school, is devoted to the study of problems growing out of the Satania rebellion. The other, the bestowal school, is dedicated to the mastery of the new problems arising out of the fact that Michael made his final bestowal on one of the worlds of Norlatiadek. This latter college was established almost 40,000\fnst{In 1955 text ``four thousand''. The second edition correction appears to be warranted based on a reference at \bibref[119:7.2]{p119 7:2} in the text: “The public announcement that Michael had selected Urantia as the theatre for his final bestowal was made shortly after we learned about the default of Adam and Eve. And thus, for more than thirty-five thousand years, your world occupied a very conspicuous place in the councils of the entire universe.” The default occurred about 37,800 years ago, so “almost forty thousand” and “more than thirty-five thousand” would seem to be equally reasonable descriptions. The committee concluded that the problem here is identical in origin to that of \bibref[41:4.4]{p041 4:4} in the text: the number in question was written as a numeral in the manuscript (40,000 not forty thousand), and the error was caused by the loss of a zero before the number was formatted into words for printing.} years ago, immediately after the announcement by Michael that Urantia had been selected as the world for his final bestowal.
 \vs p043 1:7 \pc The sea of glass, the receiving area of Edentia, is near the administrative centre and is encircled by the headquarters amphitheatre. Surrounding this area are the governing centres for the 70 divisions of constellation affairs. One half of Edentia is divided into 70 triangular sections, whose boundaries converge at the headquarters buildings of their respective sectors. The remainder of this sphere is one vast natural park, the gardens of God.
 \vs p043 1:8 During your periodic visits to Edentia, though the entire planet is open to your inspection, most of your time will be spent in that administrative triangle whose number corresponds to that of your current residential world. You will always be welcome as an observer in the legislative assemblies.
 \vs p043 1:9 The morontia area assigned to ascending mortals resident on Edentia is located in the mid\hyp{}zone of the 35\ts{th} triangle adjoining the headquarters of the finaliters, situated in the 36\ts{th} triangle. The general headquarters of the univitatia occupies an enormous area in the mid\hyp{}region of the 34\ts{th} triangle immediately adjoining the residential reservation of the morontia citizens. From these arrangements it may be seen that provision is made for the accommodation of at least 70 major divisions of celestial life, and also that each of these 70 triangular areas is correlated with some one of the 70 major spheres of morontia training.
@@ -89,7 +89,7 @@
 \vs p043 7:5 These citizens of the constellation are not actually members of the artisan corps, but they freely work with all groups and contribute much to making the constellation worlds the chief spheres for the realization of the magnificent artistic possibilities of transition culture. They do not function beyond the confines of the constellation headquarters worlds.
 \usection{The Edentia Training Worlds}
 \vs p043 8:1 The physical endowment of Edentia and its surrounding spheres is well\hyp{}nigh perfect; they could hardly equal the spiritual grandeur of the spheres of Salvington, but they far surpass the glories of the training worlds of Jerusem. All these Edentia spheres are energized directly by the universal space currents, and their enormous power systems, both material and morontial, are expertly supervised and distributed by the constellation centres, assisted by a competent corps of Master Physical Controllers and Morontia Power Supervisors.
-\vs p043 8:2 The time spent on the 70 training worlds of transition morontia culture associated with the Edentia age of mortal ascension, is the most settled period in an ascending mortal’s career up to the status of a finaliter; this is really the typical morontia life. While you are re\hyp{}keyed each time you pass from one major cultural world to another, you retain the same morontia body, and there are no periods of personality unconsciousness.\fnc{While you are \bibtextul{rekeyed} each time\ldots{} \bibexpl{The only other occurrence of re-keyed is in hyphenated form \bibref[48:2.21]{p048 2:21} in the text. Words formed with the “re-” prefix, fall under the same general Chicago Manual of Style rule, but this instance is covered by an exception: “a) When the first vowel of the added word would\ldots{}suggest mispronunciation, the hyphen is retained.” In this case, the un-hyphenated form appears to indicate that the first syllable is pronounced with a short e, causing the reader to stumble. Insertion of the hyphen resolves the problem.}}
+\vs p043 8:2 The time spent on the 70 training worlds of transition morontia culture associated with the Edentia age of mortal ascension, is the most settled period in an ascending mortal’s career up to the status of a finaliter; this is really the typical morontia life. While you are re\hyp{}keyed\fnst{In 1955 text ``rekeyed''.} each time you pass from one major cultural world to another, you retain the same morontia body, and there are no periods of personality unconsciousness.
 \vs p043 8:3 Your sojourn on Edentia and its associated spheres will be chiefly occupied with the mastery of group ethics, the secret of pleasant and profitable interrelationship between the various universe and superuniverse orders of intelligent personalities.
 \vs p043 8:4 On the mansion worlds you completed the unification of the evolving mortal personality; on the system capital you attained Jerusem citizenship and achieved the willingness to submit the self to the disciplines of group activities and co\hyp{}ordinated undertakings; but now on the constellation training worlds you are to achieve the real socialization of your evolving morontia personality. This supernal cultural acquirement consists in learning how to:
 \vs p043 8:5 \ublistelem{1.}\bibnobreakspace Live happily and work effectively with 10 diverse fellow morontians, while 10 such groups are associated in companies of 100 and then federated in corps of 1,000.
