--- a/tex/p044.tex
+++ b/tex/p044.tex
@@ -8,7 +8,7 @@
 \uminitoc{The Harmony Workers}
 \uminitoc{Mortal Aspirations and Morontia Achievements}
 \author{Archangel}
-\vs p044 0:1 Among the courtesy colonies of the various divisional and universe headquarters worlds may be found the unique order of composite personalities denominated the celestial artisans. These beings are the master artists and artisans of the morontia and lower spirit realms. They are the spirits and semispirits who are engaged in morontia embellishment and in spiritual beautification. Such artisans are distributed throughout the grand universe --- on the headquarters worlds of the superuniverses, the local universes, the constellations, and systems, as well as on all spheres settled in light and life; but their chief realm of activity is in the constellations and especially on the 770 worlds surrounding each headquarters sphere.\fnc{Among the courtesy colonies of the various divisional and universe headquarters \bibtextul{worlds,} may be found the unique order of composite personalities\ldots{} \bibexpl{This is the only one of the committee's recommendations that allows the reasonableness of the original but recommends the change because both publishers have long since adopted the change.}}
+\vs p044 0:1 Among the courtesy colonies of the various divisional and universe headquarters worlds, may be found the unique order of composite personalities denominated the celestial artisans. These beings are the master artists and artisans of the morontia and lower spirit realms. They are the spirits and semispirits who are engaged in morontia embellishment and in spiritual beautification. Such artisans are distributed throughout the grand universe --- on the headquarters worlds of the superuniverses, the local universes, the constellations, and systems, as well as on all spheres settled in light and life; but their chief realm of activity is in the constellations and especially on the 770 worlds surrounding each headquarters sphere.
 \vs p044 0:2 Though their work may be almost incomprehensible to the material mind, it should be understood that the morontia and spirit worlds are not without their high arts and supernal cultures.
 \vs p044 0:3 \pc The celestial artisans are not created as such; they are a selected and recruited corps of beings composed of certain teacher personalities native to the central universe and their volunteer pupils drawn from the ascending mortals and numerous other celestial groups. The original teaching corps of these artisans was sometime assigned by the Infinite Spirit in collaboration with the Seven Master Spirits and consisted of 7,000 Havona instructors, 1,000 to each of the seven divisions of artisans. With such a nucleus to start with, there has developed through the ages this brilliant body of skillful workers in spirit and morontia affairs.
 \vs p044 0:4 Any morontia personality or spirit entity is eligible for admission to the corps of the celestial artisans; that is, any being below the rank of inherent divine sonship. Ascending sons of God from the evolutionary spheres may, after their arrival on the morontia worlds, apply for admission to the artisan corps and, if sufficiently gifted, may choose such a career for a longer or shorter period. But no one may enlist with the celestial artisans for less than one millennium, one thousand years of superuniverse time.
