--- a/tex/p056.tex
+++ b/tex/p056.tex
@@ -55,7 +55,7 @@
 \vs p056 7:5 Each new evolutionary attainment within a sector of creation, as well as every new invasion of space by divinity manifestations, is attended by simultaneous expansions of Deity functional\hyp{}revelation within the then existing and previously organized units of all creation. This new invasion of the administrative work of the universes and their component units may not always appear to be executed exactly in accordance with the technique herewith outlined because it is the practice to send forth advance groups of administrators to prepare the way for the subsequent and successive eras of new administrative overcontrol. Even God the Ultimate foreshadows his transcendental overcontrol of the universes during the later stages of a local universe settled in light and life.
 \vs p056 7:6 It is a fact that, as the creations of time and space are progressively settled in evolutionary status, there is observed a new and fuller functioning of God the Supreme concomitant with a corresponding withdrawing of the first three manifestations of God the Sevenfold. If and when the grand universe becomes settled in light and life, what then will be the future function of the Creator\hyp{}Creative manifestations of God the Sevenfold if God the Supreme assumes direct control of these creations of time and space? Are these organizers and pioneers of the time\hyp{}space universes to be liberated for similar activities in outer space? We do not know, but we speculate much concerning these and related matters.
 \vs p056 7:7 \pc As the frontiers of experiential Deity are extended out into the domains of the Unqualified Absolute, we envision the activity of God the Sevenfold during the earlier evolutionary epochs of these creations of the future. We are not all in agreement respecting the future status of the Ancients of Days and the superuniverse Master Spirits. Neither do we know whether or not the Supreme Being will therein function as in the 7 superuniverses. But we all conjecture that the Michaels, the Creator Sons, are destined to function in these outer universes. Some hold that the future ages will witness some closer form of union between the associated Creator Sons and Divine Ministers; it is even possible that such a creator union might eventuate in some new expression of associate\hyp{}creator identity of an ultimate nature. But we really know nothing about these possibilities of the unrevealed future.
-\vs p056 7:8 We do know, however, that in the universes of time and space, God the Sevenfold provides a progressive approach to the Universal Father, and that this evolutionary approach is experientially unified in God the Supreme. We might conjecture that such a plan must prevail in the outer universes; on the other hand, the new orders of beings that may sometime inhabit these universes may be able to approach Deity on ultimate levels and by absonite techniques. In short, we have not the slightest concept of what technique of deity approach may become operative in the future universes of outer space.\fnc{We might conjecture that such a plan must prevail in the outer universes; on the other \bibtextul{hand} the new orders\ldots{} \bibexpl{The structure of the sentence calls for a comma here. In the 1955 text, \bibtextul{hand} was at the end of the line --- so the comma could easily have been dropped.}}
+\vs p056 7:8 We do know, however, that in the universes of time and space, God the Sevenfold provides a progressive approach to the Universal Father, and that this evolutionary approach is experientially unified in God the Supreme. We might conjecture that such a plan must prevail in the outer universes; on the other hand,\fnst{In 1955 text no comma after ``hand''.} the new orders of beings that may sometime inhabit these universes may be able to approach Deity on ultimate levels and by absonite techniques. In short, we have not the slightest concept of what technique of deity approach may become operative in the future universes of outer space.
 \vs p056 7:9 Nevertheless, we deem that the perfected superuniverses will in some way become a part of the Paradise\hyp{}ascension careers of those beings who may inhabit these outer creations. It is quite possible that in that future age we may witness outer\hyp{}spacers approaching Havona through the 7 superuniverses, administered by God the Supreme with or without the collaboration of the Seven Master Spirits.
 \usection{The Supreme Unifier}
 \vs p056 8:1 The Supreme Being has a threefold function in the experience of mortal man: First, he is the unifier of time\hyp{}space divinity, God the Sevenfold; second, he is the maximum of Deity which finite creatures can actually comprehend; third, he is mortal man’s only avenue of approach to the transcendental experience of consorting with absonite mind, eternal spirit, and Paradise personality.
