--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -14,7 +14,7 @@
 \vs p057 1:1 Urantia is of origin in your sun, and your sun is one of the multifarious offspring of the Andronover nebula, which was onetime organized as a component part of the physical power and material matter of the local universe of Nebadon. And this great nebula itself took origin in the universal force\hyp{}charge of space in the superuniverse of Orvonton, long, long ago.
 \vs p057 1:2 At the time of the beginning of this recital, the Primary Master Force Organizers of Paradise had long been in full control of the space\hyp{}energies which were later organized as the Andronover nebula.
 \vs p057 1:3 \pc \bibemph{987,000,000,000} years ago associate force organizer and then acting inspector number 811,307 of the Orvonton series, travelling out from Uversa, reported to the Ancients of Days that space conditions were favourable for the initiation of materialization phenomena in a certain sector of the, then, easterly segment of Orvonton.
-\vs p057 1:4 \pc \bibemph{900,000,000,000} years ago,\fnc{No comma in 1955 edition.} the Uversa archives testify, there was recorded a permit issued by the Uversa Council of Equilibrium to the superuniverse government authorizing the dispatch of a force organizer and staff to the region previously designated by inspector number 811,307. The Orvonton authorities commissioned the original discoverer of this potential universe to execute the mandate of the Ancients of Days calling for the organization of a new material creation.
+\vs p057 1:4 \pc \bibemph{900,000,000,000} years ago,\fnst{In 1955 text no comma after ``ago''.} the Uversa archives testify, there was recorded a permit issued by the Uversa Council of Equilibrium to the superuniverse government authorizing the dispatch of a force organizer and staff to the region previously designated by inspector number 811,307. The Orvonton authorities commissioned the original discoverer of this potential universe to execute the mandate of the Ancients of Days calling for the organization of a new material creation.
 \vs p057 1:5 The recording of this permit signifies that the force organizer and staff had already departed from Uversa on the long journey to that easterly space sector where they were subsequently to engage in those protracted activities which would terminate in the emergence of a new physical creation in Orvonton.
 \vs p057 1:6 \pc \bibemph{875,000,000,000} years ago the enormous Andronover nebula number 876,926 was duly initiated. Only the presence of the force organizer and the liaison staff was required to inaugurate the energy whirl which eventually grew into this vast cyclone of space. Subsequent to the initiation of such nebular revolutions, the living force organizers simply withdraw at right angles to the plane of the revolutionary disk, and from that time forward, the inherent qualities of energy ensure the progressive and orderly evolution of such a new physical system.
 \vs p057 1:7 At about this time the narrative shifts to the functioning of the personalities of the superuniverse. In reality the story has its proper beginning at this point --- at just about the time the Paradise force organizers are preparing to withdraw, having made the space\hyp{}energy conditions ready for the action of the power directors and physical controllers of the superuniverse of Orvonton.
