--- a/tex/p059.tex
+++ b/tex/p059.tex
@@ -32,7 +32,7 @@
 \vs p059 1:14 \pc The trilobite fossils of these times present certain basic uniformities coupled with certain well\hyp{}marked variations. The early animals developing from the three original life implantations were characteristic; those appearing in the Western Hemisphere were slightly different from those of the Eurasian group and from the Australasian or Australian\hyp{}Antarctic type.
 \vs p059 1:15 \pc \bibemph{370,000,000} years ago the great and almost total submergence of North and South America occurred, followed by the sinking of Africa and Australia. Only certain parts of North America remained above these shallow Cambrian seas. 5,000,000 years later the seas were retreating before the rising land. And all of these phenomena of land sinking and land rising were undramatic, taking place slowly over millions of years.
 \vs p059 1:16 The trilobite fossil\hyp{}bearing strata of this epoch outcrop here and there throughout all the continents except in central Asia. In many regions these rocks are horizontal, but in the mountains they are tilted and distorted because of pressure and folding. And such pressure has, in many places, changed the original character of these deposits. Sandstone has been turned into quartz, shale has been changed to slate, while limestone has been converted into marble.
-\vs p059 1:17 \pc \bibemph{360,000,000} years ago the land was still rising. North and South America were well up. Western Europe and the British Isles were emerging, except parts of Wales, which were deeply submerged. There were no great ice sheets during these ages. The supposed glacial deposits appearing in connection with these strata in Europe, Africa, China, and Australia are due to isolated mountain glaciers or to the displacement of glacial debris of later origin. The world climate was oceanic, not continental. The southern seas were warmer then than now, and they extended northward over North America up to the polar regions. The Gulf Stream coursed over the central portion of North America, being deflected eastward to bathe and warm the shores of Greenland, making that now ice\hyp{}mantled continent a veritable tropic paradise.\fnc{tropic \bibtextul{Paradise.} \bibexpl{Changed to lower case.}}
+\vs p059 1:17 \pc \bibemph{360,000,000} years ago the land was still rising. North and South America were well up. Western Europe and the British Isles were emerging, except parts of Wales, which were deeply submerged. There were no great ice sheets during these ages. The supposed glacial deposits appearing in connection with these strata in Europe, Africa, China, and Australia are due to isolated mountain glaciers or to the displacement of glacial debris of later origin. The world climate was oceanic, not continental. The southern seas were warmer then than now, and they extended northward over North America up to the polar regions. The Gulf Stream coursed over the central portion of North America, being deflected eastward to bathe and warm the shores of Greenland, making that now ice\hyp{}mantled continent a veritable tropic Paradise.
 \vs p059 1:18 \pc The marine life was much alike the world over and consisted of the seaweeds, one\hyp{}celled organisms, simple sponges, trilobites, and other crustaceans --- shrimps, crabs, and lobsters. 3,000 varieties of brachiopods appeared at the close of this period, only 200 of which have survived. These animals represent a variety of early life which has come down to the present time practically unchanged.
 \vs p059 1:19 But the trilobites were the dominant living creatures. They were sexed animals and existed in many forms; being poor swimmers, they sluggishly floated in the water or crawled along the sea bottoms, curling up in self\hyp{}protection when attacked by their later appearing enemies. They grew in length from 5 to 30\,cm and developed into four distinct groups: carnivorous, herbivorous, omnivorous, and “mud eaters.” The ability of the latter group largely to subsist on inorganic matter --- being the last multicelled animal that could --- explains their great increase and long survival.
 \vs p059 1:20 This was the biogeologic picture of Urantia at the end of that long period of the world’s history, embracing 50,000,000 years, designated by your geologists as the \bibemph{Cambrian.}
@@ -48,7 +48,7 @@
 \vs p059 2:9 \pc This was the great age of individual animal organismal evolution, though many of the basic changes, such as the transition from plant to animal, had previously occurred. The marine fauna developed to the point where every type of life below the vertebrate scale was represented in the fossils of those rocks which were laid down during these times. But all of these animals were marine organisms. No land animals had yet appeared except a few types of worms which burrowed along the seashores, nor had the land plants yet overspread the continents; there was still too much carbon dioxide in the air to permit of the existence of air breathers. Primarily, all animals except certain of the more primitive ones are directly or indirectly dependent on plant life for their existence.
 \vs p059 2:10 The trilobites were still prominent. These little animals existed in tens of thousands of patterns and were the predecessors of modern crustaceans. Some of the trilobites had from 25 to 4,000 tiny eyelets; others had aborted eyes. As this period closed, the trilobites shared domination of the seas with several other forms of invertebrate life. But they utterly perished during the beginning of the next period.
 \vs p059 2:11 Lime\hyp{}secreting algae were widespread.\tunemarkup{pgkoboaurahd}{\linebreak} There existed thousands of species of the early ancestors of the corals. Sea worms were abundant, and there were many varieties of jellyfish which have since become extinct. Corals and the later types of sponges evolved. The cephalopods were well developed, and they have survived as the modern pearly nautilus, octopus, cuttlefish, and squid.
-\vs p059 2:12 There were many varieties of shell animals, but their shells were not then so much needed for defensive purposes as in subsequent ages. The gastropods were present in the waters of the ancient seas, and they included single\hyp{}shelled drills, periwinkles, and snails. The bivalve gastropods have come on down through the intervening millions of years much as they then existed and embrace the mussels, clams, oysters, and scallops. The valve\hyp{}shelled organisms also evolved, and these brachiopods lived in those ancient waters much as they exist today; they even had hinged, notched, and other sorts of protective arrangements of their valves.\fnc{The bivalve gastropods\ldots{}embrace the \bibtextul{muscles,} clams, oysters, and scallops. \bibexpl{Muscles is an acceptable variant (\bibemph{Webster}) and there are no other instances with this meaning, so standardization is not required, but the committee determined that the form “muscles” is now so uncommon for this meaning that adoption of the modern form “mussels” is justified.}}
+\vs p059 2:12 There were many varieties of shell animals, but their shells were not then so much needed for defensive purposes as in subsequent ages. The gastropods were present in the waters of the ancient seas, and they included single\hyp{}shelled drills, periwinkles, and snails. The bivalve gastropods have come on down through the intervening millions of years much as they then existed and embrace the muscles\fnst{The archaic word for ``mussels''.}, clams, oysters, and scallops. The valve\hyp{}shelled organisms also evolved, and these brachiopods lived in those ancient waters much as they exist today; they even had hinged, notched, and other sorts of protective arrangements of their valves.
 \vs p059 2:13 \pc So ends the evolutionary story of the second great period of marine life, which is known to your geologists as the \bibemph{Ordovician.}
 \usection{The Second Great Flood Stage\\The Coral Period --- The Brachiopod Age}
 \vs p059 3:1 \bibemph{300,000,000} years ago another great period of land submergence began. The southward and northward encroachment of the ancient Silurian seas made ready to engulf most of Europe and North America. The land was not elevated far above the sea so that not much deposition occurred about the shore lines. The seas teemed with lime\hyp{}shelled life, and the falling of these shells to the sea bottom gradually built up very thick layers of limestone. This is the first widespread limestone deposit, and it covers practically all of Europe and North America but only appears at the earth’s surface in a few places. The thickness of this ancient rock layer averages about 300\,m, but many of these deposits have since been greatly deformed by tilting, upheavals, and faulting, and many have been changed to quartz, shale, and marble.
