--- a/tex/p061.tex
+++ b/tex/p061.tex
@@ -52,7 +52,7 @@
 \vs p061 3:10 Mammalian life continued to evolve. Enormous herds of horses joined the camels on the western plains of North America; this was truly the age of horses as well as of elephants. The horse’s brain is next in animal quality to that of the elephant, but in one respect it is decidedly inferior, for the horse never fully overcame the deep\hyp{}seated propensity to flee when frightened. The horse lacks the emotional control of the elephant, while the elephant is greatly handicapped by size and lack of agility. During this period an animal evolved which was somewhat like both the elephant and the horse, but it was soon destroyed by the rapidly increasing cat family.
 \vs p061 3:11 \pc As Urantia is entering the so\hyp{}called “horseless age,” you should pause and ponder what this animal meant to your ancestors. Men first used horses for food, then for travel, and later in agriculture and war. The horse has long served mankind and has played an important part in the development of human civilization.
 \vs p061 3:12 \pc The biologic developments of this period contributed much toward the setting of the stage for the subsequent appearance of man. In central Asia the true types of both the primitive monkey and the gorilla evolved, having a common ancestor, now extinct. But neither of these species is concerned in the line of living beings which were, later on, to become the ancestors of the human race.
-\vs p061 3:13 The dog family was represented by several groups, notably wolves and foxes; the cat tribe, by panthers and large sabre\hyp{}toothed tigers, the latter first evolving in North America. The modern cat and dog families increased in numbers all over the world. Weasels, martens, otters, and raccoons thrived and developed throughout the northern latitudes.\fnc{Weasels, \bibtextul{martins,} otters, and raccoons\ldots{} \bibexpl{A single mistaken keystroke could have produced martins from an intended martens. It is also possible, however, that the original form was the author’s choice, being a correct, though less common, variant. (We cannot assert that the author would not use an unusual variant, because coons was used for raccoons only two pages previously. (\bibref[61:2.7]{p061 2:7} in the text.) However, even if originally correct, this usage of “martin” is no longer current so the modernization of the spelling is reasonable.}}
+\vs p061 3:13 The dog family was represented by several groups, notably wolves and foxes; the cat tribe, by panthers and large sabre\hyp{}toothed tigers, the latter first evolving in North America. The modern cat and dog families increased in numbers all over the world. Weasels, martens\fnst{In 1955 text misspelled as ``martins''.}, otters, and raccoons thrived and developed throughout the northern latitudes.
 \vs p061 3:14 Birds continued to evolve, though few marked changes occurred. Reptiles were similar to modern types --- snakes, crocodiles, and turtles.
 \vs p061 3:15 \pc Thus drew to a close a very eventful and interesting period of the world’s history. This age of the elephant and the horse is known as the \bibemph{Miocene.}
 \usection{The Recent Continental\hyp{}Elevation Stage\\The Last Great Mammalian Migration}
@@ -95,7 +95,7 @@
 \vs p061 7:15 In North America, during the last glaciation, the horse, tapir, llama, and sabre\hyp{}toothed tiger became extinct. In their places sloths, armadillos, and water hogs came up from South America.
 \vs p061 7:16 The enforced migration of life before the advancing ice led to an extraordinary commingling of plants and of animals, and with the retreat of the final ice invasion, many arctic species of both plants and animals were left stranded high upon certain mountain peaks, whither they had journeyed to escape destruction by the glacier. And so, today, these dislocated plants and animals may be found high up on the Alps of Europe and even on the Appalachian Mountains of North America.
 \vs p061 7:17 \pc The ice age is the last completed geologic period, the so\hyp{}called \bibemph{Pleistocene,} over 2,000,000 years in length.
-\vs p061 7:18 \pc \bibemph{35,000} years ago marks the termination of the great ice age excepting in the polar regions of the planet. This date is also significant in that it approximates the arrival of a Material Son and Daughter and the beginning of the Adamic dispensation, roughly corresponding to the beginning of the \bibemph{Holocene} or postglacial period.\fnc{\ldots{}corresponding to the beginning of the \bibtextul{Holocene} or postglacial period. \bibexpl{All other geologic periods are italicized; including ‘Pleistocene’ and ‘Cenozoic’ on this same page.}}
+\vs p061 7:18 \pc \bibemph{35,000} years ago marks the termination of the great ice age excepting in the polar regions of the planet. This date is also significant in that it approximates the arrival of a Material Son and Daughter and the beginning of the Adamic dispensation, roughly corresponding to the beginning of the \bibemph{Holocene}\fnst{In 1955 text ``Holocene'', not italicized.} or postglacial period.
 \vs p061 7:19 \pc This narrative, extending from the rise of mammalian life to the retreat of the ice and on down to historic times, covers a span of almost 50,000,000 years. This is the last --- the current --- geologic period and is known to your researchers as the \bibemph{Cenozoic} or recent\hyp{}times era.
 \vsetoff
 \vs p061 7:20 [Sponsored by a Resident Life Carrier.]
