--- a/tex/p069.tex
+++ b/tex/p069.tex
@@ -36,7 +36,7 @@
 \vs p069 3:6 Smiths were the first nonreligious group to enjoy special privileges. They were regarded as neutrals during war, and this extra leisure led to their becoming, as a class, the politicians of primitive society. But through gross abuse of these privileges the smiths became universally hated, and the medicine men lost no time in fostering hatred for their competitors. In this first contest between science and religion, religion (superstition) won. After being driven out of the villages, the smiths maintained the first inns, public lodginghouses, on the outskirts of the settlements.
 \vs p069 3:7 \ublistelem{4.}\bibnobreakspace \bibemph{Master and slave.} The next differentiation of labour grew out of the relations of the conqueror to the conquered, and that meant the beginning of human slavery.
 \vs p069 3:8 \ublistelem{5.}\bibnobreakspace \bibemph{Differentiation based on diverse physical and mental endowments.} Further divisions of labour were favoured by the inherent differences in men; all human beings are not born equal.
-\vs p069 3:9 The early specialists in industry were the flint flakers and stone masons; next came the smiths. Subsequently group specialization developed; whole families and clans dedicated themselves to certain sorts of labour. The origin of one of the earliest castes of priests, apart from the tribal medicine men, was due to the superstitious exaltation of a family of expert swordmakers.\fnc{\ldots{}the flint flakers and \bibtextul{stonemasons;} \bibexpl{The original is clear, and is a correct form, but of nine occurrences in the text this is the only instance in which the compound form is found; this change is therefore a reasonable standardization of the text.}}
+\vs p069 3:9 The early specialists in industry were the flint flakers and stone masons\fnst{In 1955 text ``stonemasons'' one word.}; next came the smiths. Subsequently group specialization developed; whole families and clans dedicated themselves to certain sorts of labour. The origin of one of the earliest castes of priests, apart from the tribal medicine men, was due to the superstitious exaltation of a family of expert swordmakers.
 \vs p069 3:10 \pc The first group specialists in industry were rock salt exporters and potters. Women made the plain pottery and men the fancy. Among some tribes sewing and weaving were done by women, in others by the men.
 \vs p069 3:11 The early traders were women; they were employed as spies, carrying on commerce as a side line. Presently trade expanded, the women acting as intermediaries --- jobbers. Then came the merchant class, charging a commission, profit, for their services. Growth of group barter developed into commerce; and following the exchange of commodities came the exchange of skilled labour.
 \usection{The Beginnings of Trade}
