--- a/tex/p074.tex
+++ b/tex/p074.tex
@@ -24,7 +24,7 @@
 \vs p074 2:5 \pc Soon after their awakening, Adam and Eve were escorted to the formal reception on the great mound to the north of the temple. This natural hill had been enlarged and made ready for the installation of the world’s new rulers. Here, at noon, the Urantia reception committee welcomed this Son and Daughter of the system of Satania. Amadon was chairman of this committee, which consisted of twelve members embracing a representative of each of the six Sangik races; the acting chief of the midwayers; Annan, a loyal daughter and spokesman for the Nodites; Noah, the son of the architect and builder of the Garden and executive of his deceased father’s plans; and the two resident Life Carriers.
 \vs p074 2:6 The next act was the delivery of the charge of planetary custody to Adam and Eve by the senior Melchizedek, chief of the council of receivership on Urantia. The Material Son and Daughter took the oath of allegiance to the Most Highs of Norlatiadek and to Michael of Nebadon and were proclaimed rulers of Urantia by Van, who thereby relinquished the titular authority which for over 150,000 years he had held by virtue of the action of the Melchizedek receivers.
 \vs p074 2:7 And Adam and Eve were invested with kingly robes on this occasion, the time of their formal induction into world rulership. Not all of the arts of Dalamatia had been lost to the world; weaving was still practised in the days of Eden.
-\vs p074 2:8 Then was heard the archangels’ proclamation, and the broadcast voice of Gabriel decreed the second judgment roll call of Urantia and the resurrection of the sleeping survivors of the second dispensation of grace and mercy on 606 of Satania. The dispensation of the Prince has passed; the age of Adam, the third planetary epoch, opens amidst scenes of simple grandeur; and the new rulers of Urantia start their reign under seemingly favourable conditions, notwithstanding the world\hyp{}wide confusion occasioned by lack of the co\hyp{}operation of their predecessor in authority on the planet.\fnc{The dispensation of the Prince has \bibtextul{passed,} the age of Adam,\ldots{} \bibexpl{The initial clause is a complete sentence; a semicolon is the correct way of linking the two parts of the larger sentence.}}
+\vs p074 2:8 Then was heard the archangels’ proclamation, and the broadcast voice of Gabriel decreed the second judgment roll call of Urantia and the resurrection of the sleeping survivors of the second dispensation of grace and mercy on 606 of Satania. The dispensation of the Prince has passed;\fnst{In 1955 text comma instead of semicolon after ``passed''.} the age of Adam, the third planetary epoch, opens amidst scenes of simple grandeur; and the new rulers of Urantia start their reign under seemingly favourable conditions, notwithstanding the world\hyp{}wide confusion occasioned by lack of the co\hyp{}operation of their predecessor in authority on the planet.
 \usection{Adam and Eve Learn about the Planet}
 \vs p074 3:1 And now, after their formal installation, Adam and Eve became painfully aware of their planetary isolation. Silent were the familiar broadcasts, and absent were all the circuits of extraplanetary communication. Their Jerusem fellows had gone to worlds running along smoothly with a well\hyp{}established Planetary Prince and an experienced staff ready to receive them and competent to co\hyp{}operate with them during their early experience on such worlds. But on Urantia rebellion had changed everything. Here the Planetary Prince was very much present, and though shorn of most of his power to work evil, he was still able to make the task of Adam and Eve difficult and to some extent hazardous. It was a serious and disillusioned Son and Daughter of Jerusem who walked that night through the Garden under the shining of the full moon, discussing plans for the next day.
 \vs p074 3:2 Thus ended the first day of Adam and Eve on isolated Urantia, the confused planet of the Caligastia betrayal; and they walked and talked far into the night, their first night on earth --- and it was so lonely.
