--- a/tex/p079.tex
+++ b/tex/p079.tex
@@ -53,7 +53,7 @@
 \vs p079 5:3 \pc More than 300,000 years ago the main body of the yellow race entered China from the south as coastwise migrants. Each millennium they penetrated farther and farther inland, but they did not make contact with their migrating Tibetan brethren until comparatively recent times.
 \vs p079 5:4 Growing population pressure caused the northward\hyp{}moving yellow race to begin to push into the hunting grounds of the red man. This encroachment, coupled with natural racial antagonism, culminated in increasing hostilities, and thus began the crucial struggle for the fertile lands of farther Asia.
 \vs p079 5:5 The story of this agelong contest between the red and yellow races is an epic of Urantia history. For over 200,000 years these two superior races waged bitter and unremitting warfare. In the earlier struggles the red men were generally successful, their raiding parties spreading havoc among the yellow settlements. But the yellow man was an apt pupil in the art of warfare, and he early manifested a marked ability to live peaceably with his compatriots; the Chinese were the first to learn that in union there is strength. The red tribes continued their internecine conflicts, and presently they began to suffer repeated defeats at the aggressive hands of the relentless Chinese, who continued their inexorable march northward.
-\vs p079 5:6 \pc 100,000 years ago the decimated tribes of the red race were fighting with their backs to the retreating ice of the last glacier, and when the land passage to the West\fnc{the land passage to the \bibtextul{west,} over the Bering isthmus\ldots{} \bibexpl{The change from “west” to “east,” as found in many printings, is geographically correct but typographically impossible; the committee adopted the alternate “West” referring to the Western Hemisphere --- the word thus indicating a place rather than a direction of travel.}}, over the Bering isthmus, became passable, these tribes were not slow in forsaking the inhospitable shores of the Asiatic continent. It is 85,000 years since the last of the pure red men departed from Asia, but the long struggle left its genetic imprint upon the victorious yellow race. The northern Chinese peoples, together with the Andonite Siberians, assimilated much of the red stock and were in considerable measure benefited thereby.
+\vs p079 5:6 \pc 100,000 years ago the decimated tribes of the red race were fighting with their backs to the retreating ice of the last glacier, and when the land passage to the West\fnst{In 1955 text ``west'' in lower case. The change from “west” to “east,” as found in many printings, is geographically correct but typographically impossible; the committee adopted the alternate “West” referring to the Western Hemisphere --- the word thus indicating a place rather than a direction of travel.}, over the Bering isthmus, became passable, these tribes were not slow in forsaking the inhospitable shores of the Asiatic continent. It is 85,000 years since the last of the pure red men departed from Asia, but the long struggle left its genetic imprint upon the victorious yellow race. The northern Chinese peoples, together with the Andonite Siberians, assimilated much of the red stock and were in considerable measure benefited thereby.
 \vs p079 5:7 The North American Indians never came in contact with even the Andite offspring of Adam and Eve, having been dispossessed of their Asiatic homelands some 50,000 years before the coming of Adam. During the age of Andite migrations the pure red strains were spreading out over North America as nomadic tribes, hunters who practised agriculture to a small extent. These races and cultural groups remained almost completely isolated from the remainder of the world from their arrival in the Americas down to the end of the first millennium of the Christian era, when they were discovered by the white races of Europe. Up to that time the Eskimos were the nearest to white men the northern tribes of red men had ever seen.
 \vs p079 5:8 The red and the yellow races are the only human stocks that ever achieved a high degree of civilization apart from the influences of the Andites. The oldest Amerindian culture was the Onamonalonton centre in California, but this had long since vanished by 35,000\,B.C. In Mexico, Central America, and in the mountains of South America the later and more enduring civilizations were founded by a race predominantly red but containing a considerable admixture of the yellow, orange, and blue.
 \vs p079 5:9 These civilizations were evolutionary products of the Sangiks, notwithstanding that traces of Andite blood reached Peru. Excepting the Eskimos in North America and a few Polynesian Andites in South America, the peoples of the Western Hemisphere had no contact with the rest of the world until the end of the first millennium after Christ. In the original Melchizedek plan for the improvement of the Urantia races it had been stipulated that 1,000,000 of the pure\hyp{}line descendants of Adam should go to upstep the red men of the Americas.
