--- a/tex/p080.tex
+++ b/tex/p080.tex
@@ -51,7 +51,7 @@
 \vs p080 5:5 \pc The strongholds of the blue man which persisted longest were in southern France, but the last great military resistance was overcome along the Somme. The later conquest progressed by commercial penetration, population pressure along the rivers, and by continued intermarriage with the superiors, coupled with the ruthless extermination of the inferiors.
 \vs p080 5:6 When the tribal council of the Andite elders had adjudged an inferior captive to be unfit, he was, by elaborate ceremony, committed to the shaman priests, who escorted him to the river and administered the rites of initiation to the “happy hunting grounds” --- lethal submergence. In this way the white invaders of Europe exterminated all peoples encountered who were not quickly absorbed into their own ranks, and thus did the blue man come to an end --- and quickly.
 \vs p080 5:7 \pc The Cro\hyp{}Magnoid blue man constituted the biologic foundation for the modern European races, but they have survived only as absorbed by the later and virile conquerors of their homelands. The blue strain contributed many sturdy traits and much physical vigour to the white races of Europe, but the humour and imagination of the blended European peoples were derived from the Andites. This Andite\hyp{}blue union, resulting in the northern white races, produced an immediate lapse of Andite civilization, a retardation of a transient nature. Eventually, the latent superiority of these northern barbarians manifested itself and culminated in present\hyp{}day European civilization.
-\vs p080 5:8 \pc By 5000\,B.C. the evolving white races were dominant throughout all of northern Europe, including northern Germany, northern France, and the British Isles. Central Europe was for some time controlled by the blue man and the round\hyp{}headed Andonites. The latter were mainly situated in the Danube valley and were never entirely displaced by the Andites.\fnc{Central Europe was for \bibtextul{sometime} controlled by the blue man\ldots{} \bibexpl{The two-word form is correct as the reference is to an indefinite period of time rather than to an indefinite point in time. (See \bibemph{Webster’s})}}
+\vs p080 5:8 \pc By 5000\,B.C. the evolving white races were dominant throughout all of northern Europe, including northern Germany, northern France, and the British Isles. Central Europe was for some time\fnst{In 1955 text ``sometime'' one word.} controlled by the blue man and the round\hyp{}headed Andonites. The latter were mainly situated in the Danube valley and were never entirely displaced by the Andites.
 \usection{The Andites along the Nile}
 \vs p080 6:1 From the times of the terminal Andite migrations, culture declined in the Euphrates valley, and the immediate centre of civilization shifted to the valley of the Nile. Egypt became the successor of Mesopotamia as the headquarters of the most advanced group on earth.
 \vs p080 6:2 The Nile valley began to suffer from floods shortly before the Mesopotamian valleys but fared much better. This early setback was more than compensated by the continuing stream of Andite immigrants, so that the culture of Egypt, though really derived from the Euphrates region, seemed to forge ahead. But in 5000\,B.C., during the flood period in Mesopotamia, there were seven distinct groups of human beings in Egypt; all of them, save one, came from Mesopotamia.
