--- a/tex/p086.tex
+++ b/tex/p086.tex
@@ -15,7 +15,7 @@
 \vs p086 1:3 This ever\hyp{}present dread of bad luck was paralysing. Why work hard and reap bad luck --- nothing for something --- when one might drift along and encounter good luck --- something for nothing? Unthinking men forget good luck --- take it for granted --- but they painfully remember bad luck.
 \vs p086 1:4 Early man lived in uncertainty and in constant fear of chance --- bad luck. Life was an exciting game of chance; existence was a gamble. It is no wonder that partially civilized people still believe in chance and evince lingering predispositions to gambling. Primitive man alternated between two potent interests: the passion of getting something for nothing and the fear of getting nothing for something. And this gamble of existence was the main interest and the supreme fascination of the early savage mind.
 \vs p086 1:5 The later herders held the same views of chance and luck, while the still later agriculturists were increasingly conscious that crops were immediately influenced by many things over which man had little or no control. The farmer found himself the victim of drought, floods, hail, storms, pests, and plant diseases, as well as heat and cold. And as all of these natural influences affected individual prosperity, they were regarded as good luck or bad luck.
-\vs p086 1:6 This notion of chance and luck strongly pervaded the philosophy of all ancient peoples. Even in recent times in Ecclesiastes\fnc{In the 1955 text: ``in the Wisdom of Solomon'', The quote is \bibemph{not} from the Wisdom of Solomon, but from Ecclesiastes~9:11-12. Note that at \bibref[121:6.3]{p121 6:3} the book Wisdom of Solomon is mentioned and the comment there unambiguously corresponds to the apocryphal book known by that name. Therefore, it cannot be asserted that here the biblical book Ecclesiastes is simply referred to as ``Wisdom of Solomon''. This is simply a mistake on the part of either the human source or the Brilliant Evening Star who sponsored this revelation and I have now corrected it.} it is said: “I returned and saw that the race is not to the swift, nor the battle to the strong, neither bread to the wise, nor riches to men of understanding, nor favour to men of skill; but fate and chance befall them all. For man knows not his fate; as fishes are taken in an evil net, and as birds are caught in a snare, so are the sons of men snared in an evil time when it falls suddenly upon them.”
+\vs p086 1:6 This notion of chance and luck strongly pervaded the philosophy of all ancient peoples. Even in recent times in Ecclesiastes\fnst{In 1955 text: ``in the Wisdom of Solomon'', The quote is \bibemph{not} from the Wisdom of Solomon, but from Ecclesiastes~9:11-12. Note that at \bibref[121:6.3]{p121 6:3} the book Wisdom of Solomon is mentioned and the comment there unambiguously corresponds to the apocryphal book known by that name. Therefore, it cannot be asserted that here the biblical book Ecclesiastes is simply referred to as ``Wisdom of Solomon''. This is simply a mistake on the part of either the human source or the Brilliant Evening Star who sponsored this revelation and I have now corrected it.} it is said: “I returned and saw that the race is not to the swift, nor the battle to the strong, neither bread to the wise, nor riches to men of understanding, nor favour to men of skill; but fate and chance befall them all. For man knows not his fate; as fishes are taken in an evil net, and as birds are caught in a snare, so are the sons of men snared in an evil time when it falls suddenly upon them.”
 \usection{The Personification of Chance}
 \vs p086 2:1 Anxiety was a natural state of the savage mind. When men and women fall victims to excessive anxiety, they are simply reverting to the natural estate of their far\hyp{}distant ancestors; and when anxiety becomes actually painful, it inhibits activity and unfailingly institutes evolutionary changes and biologic adaptations. Pain and suffering are essential to progressive evolution.
 \vs p086 2:2 The struggle for life is so painful that certain backward tribes even yet howl and lament over each new sunrise. Primitive man constantly asked, “Who is tormenting me?” Not finding a material source for his miseries, he settled upon a spirit explanation. And so was religion born of the fear of the mysterious, the awe of the unseen, and the dread of the unknown. Nature fear thus became a factor in the struggle for existence first because of chance and then because of mystery.
@@ -55,7 +55,7 @@
 \vs p086 5:14 The shadow came, later on, to be feared and revered equally with the breath. The reflection of oneself in the water was also sometimes looked upon as proof of the double self, and mirrors were regarded with superstitious awe. Even now many civilized persons turn the mirror to the wall in the event of death. Some backward tribes still believe that the making of pictures, drawings, models, or images removes all or a part of the soul from the body; hence such are forbidden.
 \vs p086 5:15 The soul was generally thought of as being identified with the breath, but it was also located by various peoples in the head, hair, heart, liver, blood, and fat. The “crying out of Abel’s blood from the ground” is expressive of the onetime belief in the presence of the ghost in the blood. The Semites taught that the soul resided in the bodily fat, and among many the eating of animal fat was taboo. Head hunting was a method of capturing an enemy’s soul, as was scalping. In recent times the eyes have been regarded as the windows of the soul\fnst{The Mighty Messenger at \bibref[42:12.12]{p042 12:12} says ``the material eyes are truly the windows of the spirit\hyp{}born soul''.}.
 \vs p086 5:16 Those who held the doctrine of three or four souls believed that the loss of one soul meant discomfort, two illness, three death. One soul lived in the breath, one in the head, one in the hair, one in the heart. The sick were advised to stroll about in the open air with the hope of recapturing their strayed souls. The greatest of the medicine men were supposed to exchange the sick soul of a diseased person for a new one, the “new birth.”
-\vs p086 5:17 The children of Badonan developed a belief in two souls, the breath and the shadow. The early Nodite races regarded man as consisting of two persons, soul and body. This philosophy of human existence was later reflected in the Greek viewpoint. The Greeks themselves believed in three souls; the vegetative resided in the stomach, the animal in the heart, the intellectual in the head. The Eskimos believe that man has three parts: body, soul, and name.\fnc{The children of \bibtextul{Badanon} developed a belief in two souls, \bibexpl{Badonan is the correct spelling; Badanon was, no doubt, the result of an inadvertent key transposition.}}
+\vs p086 5:17 The children of Badonan\fnst{In 1955 text ``Badanon''.} developed a belief in two souls, the breath and the shadow. The early Nodite races regarded man as consisting of two persons, soul and body. This philosophy of human existence was later reflected in the Greek viewpoint. The Greeks themselves believed in three souls; the vegetative resided in the stomach, the animal in the heart, the intellectual in the head. The Eskimos believe that man has three parts: body, soul, and name.
 \usection{The Ghost\hyp{}Spirit Environment}
 \vs p086 6:1 Man inherited a natural environment, acquired a social environment, and imagined a ghost environment. The state is man’s reaction to his natural environment, the home to his social environment, the church to his illusory ghost environment.
 \vs p086 6:2 Very early in the history of mankind the realities of the imaginary world of ghosts and spirits became universally believed, and this newly imagined spirit world became a power in primitive society. The mental and moral life of all mankind was modified for all time by the appearance of this new factor in human thinking and acting.
