--- a/tex/p092.tex
+++ b/tex/p092.tex
@@ -91,7 +91,7 @@
 \vs p092 7:4 All these religions have arisen as a result of man’s variable intellectual response to his identical spiritual leading. They can never hope to attain a uniformity of creeds, dogmas, and rituals --- these are intellectual; but they can, and some day will, realize a unity in true worship of the Father of all, for this is spiritual, and it is forever true, in the spirit all men are equal.
 \vs p092 7:5 \pc Primitive religion was largely a material\hyp{}value consciousness, but civilization elevates religious values, for true religion is the devotion of the self to the service of meaningful and supreme values. As religion evolves, ethics becomes the philosophy of morals, and morality becomes the discipline of self by the standards of highest meanings and supreme values --- divine and spiritual ideals. And thus religion becomes a spontaneous and exquisite devotion, the living experience of the loyalty of love.
 \vs p092 7:6 The quality of a religion is indicated by:
-\vs p092 7:7 \ublistelem{1.}\bibnobreakspace Level of values --- loyalties.\fnc{1. \bibtextul{Level values} --- loyalties. \bibexpl{“Level values” has no discernible meaning in this context.}}
+\vs p092 7:7 \ublistelem{1.}\bibnobreakspace Level of values\fnst{In 1955 text ``Level values''. “Level values” has no discernible meaning in this context.} --- loyalties.
 \vs p092 7:8 \ublistelem{2.}\bibnobreakspace Depth of meanings --- the sensitization of the individual to the idealistic appreciation of these highest values.
 \vs p092 7:9 \ublistelem{3.}\bibnobreakspace Consecration intensity --- the degree of devotion to these divine values.
 \vs p092 7:10 \ublistelem{4.}\bibnobreakspace The unfettered progress of the personality in this cosmic path of idealistic spiritual living, realization of sonship with God and never\hyp{}ending progressive citizenship in the universe.
