--- a/tex/p096.tex
+++ b/tex/p096.tex
@@ -44,7 +44,7 @@
 \vs p096 4:3 Moses had endeavoured to teach these Bedouins the idea of El Elyon, but before leaving Egypt, he had become convinced they would never fully comprehend this doctrine. Therefore he deliberately determined upon the compromise adoption of their tribal god of the desert as the one and only god of his followers. Moses did not specifically teach that other peoples and nations might not have other gods, but he did resolutely maintain that Yahweh was over and above all, especially to the Hebrews. But always was he plagued by the awkward predicament of trying to present his new and higher idea of Deity to these ignorant slaves under the guise of the ancient term Yahweh, which had always been symbolized by the golden calf of the Bedouin tribes.
 \vs p096 4:4 \pc The fact that Yahweh was the god of the fleeing Hebrews explains why they tarried so long before the holy mountain of Sinai, and why they there received the ten commandments which Moses promulgated in the name of Yahweh, the god of Horeb. During this lengthy sojourn before Sinai the religious ceremonials of the newly evolving Hebrew worship were further perfected.
 \vs p096 4:5 \pc It does not appear that Moses would ever have succeeded in the establishment of his somewhat advanced ceremonial worship and in keeping his followers intact for a quarter of a century had it not been for the violent eruption of Horeb during the third week of their worshipful sojourn at its base. “The mountain of Yahweh was consumed in fire, and the smoke ascended like the smoke of a furnace, and the whole mountain quaked greatly.” In view of this cataclysm it is not surprising that Moses could impress upon his brethren the teaching that their God was “mighty, terrible, a devouring fire, fearful, and all\hyp{}powerful.”
-\vs p096 4:6 Moses proclaimed that Yahweh was the Lord God of Israel, who had singled out the Hebrews as his chosen people; he was building a new nation, and he wisely nationalized his religious teachings, telling his followers that Yahweh was a hard taskmaster, a “jealous God.” But nonetheless he sought to enlarge their concept of divinity when he taught them that Yahweh was the “God of the spirits of all flesh,” and when he said, “The eternal God is your refuge, and underneath are the everlasting arms.” Moses taught that Yahweh was a covenant\hyp{}keeping God; that he “will not forsake you, neither destroy you, nor forget the covenant of your fathers because the Lord loves you and will not forget the oath by which he swore to your fathers.”\fnc{But \bibtextul{none the less} he sought to enlarge their concept\ldots{} \bibexpl{The difference between “none the less” and “nonetheless” as followed throughout the 1955 text --- except at this point --- is thus: “None the less” is used where the meaning is a comparative roughly equivalent to “no less,” and the latter could be substituted without a change in meaning. “Nonetheless” is interchangeable with “nevertheless” and is used when the meaning approximates “even so.”}}
+\vs p096 4:6 Moses proclaimed that Yahweh was the Lord God of Israel, who had singled out the Hebrews as his chosen people; he was building a new nation, and he wisely nationalized his religious teachings, telling his followers that Yahweh was a hard taskmaster, a “jealous God.” But nonetheless\fnst{In 1955 text ``none the less'' three words.} he sought to enlarge their concept of divinity when he taught them that Yahweh was the “God of the spirits of all flesh,” and when he said, “The eternal God is your refuge, and underneath are the everlasting arms.” Moses taught that Yahweh was a covenant\hyp{}keeping God; that he “will not forsake you, neither destroy you, nor forget the covenant of your fathers because the Lord loves you and will not forget the oath by which he swore to your fathers.”
 \vs p096 4:7 Moses made a heroic effort to uplift Yahweh to the dignity of a supreme Deity when he presented him as the “God of truth and without iniquity, just and right in all his ways.” And yet, despite this exalted teaching, the limited understanding of his followers made it necessary to speak of God as being in man’s image, as being subject to fits of anger, wrath, and severity, even that he was vengeful and easily influenced by man’s conduct.
 \vs p096 4:8 Under the teachings of Moses this tribal nature god, Yahweh, became the Lord God of Israel, who followed them through the wilderness and even into exile, where he presently was conceived of as the God of all peoples. The later captivity that enslaved the Jews in Babylon finally liberated the evolving concept of Yahweh to assume the monotheistic role of the God of all nations.
 \vs p096 4:9 The most unique and amazing feature of the religious history of the Hebrews concerns this continuous evolution of the concept of Deity from the primitive god of Mount Horeb up through the teachings of their successive spiritual leaders to the high level of development depicted in the Deity doctrines of the Isaiahs, who proclaimed that magnificent concept of the loving and merciful Creator Father.
