--- a/tex/p100.tex
+++ b/tex/p100.tex
@@ -41,7 +41,7 @@
 \vs p100 4:2 Religious perplexities are inevitable; there can be no growth without psychic conflict and spiritual agitation. The organization of a philosophic standard of living entails considerable commotion in the philosophic realms of the mind. Loyalties are not exercised in behalf of the great, the good, the true, and the noble without a struggle. Effort is attendant upon clarification of spiritual vision and enhancement of cosmic insight. And the human intellect protests against being weaned from subsisting upon the nonspiritual energies of temporal existence. The slothful animal mind rebels at the effort required to wrestle with cosmic problem solving.
 \vs p100 4:3 But the great problem of religious living consists in the task of unifying the soul powers of the personality by the dominance of LOVE. Health, mental efficiency, and happiness arise from the unification of physical systems, mind systems, and spirit systems. Of health and sanity man understands much, but of happiness he has truly realized very little. The highest happiness is indissolubly linked with spiritual progress. Spiritual growth yields lasting joy, peace which passes all understanding.
 \vs p100 4:4 \pc In physical life the senses tell of the existence of things; mind discovers the reality of meanings; but the spiritual experience reveals to the individual the true values of life. These high levels of human living are attained in the supreme love of God and in the unselfish love of man. If you love your fellow men, you must have discovered their values. Jesus loved men so much because he placed such a high value upon them. You can best discover values in your associates by discovering their motivation. If someone irritates you, causes feelings of resentment, you should sympathetically seek to discern his viewpoint, his reasons for such objectionable conduct. If once you understand your neighbour, you will become tolerant, and this tolerance will grow into friendship and ripen into love.
-\vs p100 4:5 In the mind’s eye conjure up a picture of one of your primitive ancestors of cave\hyp{}dwelling times --- a short, misshapen, filthy, snarling hulk of a man standing, legs spread, club upraised, breathing hate and animosity as he looks fiercely just ahead. Such a picture hardly depicts the divine dignity of man. But allow us to enlarge the picture. In front of this animated human crouches a sabre\hyp{}toothed tiger. Behind him, a woman and two children. Immediately you recognize that such a picture stands for the beginnings of much that is fine and noble in the human race, but the man is the same in both pictures. Only, in the second sketch you are favoured with a widened horizon. You therein discern the motivation of this evolving mortal. His attitude becomes praiseworthy because you understand him. If you could only fathom the motives of your associates, how much better you would understand them. If you could only know your fellows, you would eventually fall in love with them.\fnc{\bibtextul{Only} in the second sketch you are favoured with a widened horizon. \bibexpl{The comma after “Only” is required to convey the intended meaning, which approximates “however, in the second sketch you are favoured\ldots{}” as opposed to the meaning without the comma which would be “It is only in the the second sketch that you are favoured\ldots{}” Also note that for the sentence to work without the comma, “\ldots{}sketch you are\ldots{}” would have to be inverted to “\ldots{}sketch are you\ldots{}” in order to be grammatically correct.}}
+\vs p100 4:5 In the mind’s eye conjure up a picture of one of your primitive ancestors of cave\hyp{}dwelling times --- a short, misshapen, filthy, snarling hulk of a man standing, legs spread, club upraised, breathing hate and animosity as he looks fiercely just ahead. Such a picture hardly depicts the divine dignity of man. But allow us to enlarge the picture. In front of this animated human crouches a sabre\hyp{}toothed tiger. Behind him, a woman and two children. Immediately you recognize that such a picture stands for the beginnings of much that is fine and noble in the human race, but the man is the same in both pictures. Only,\fnst{In 1955 text no comma after ``Only''. The comma after “Only” is required to convey the intended meaning, which approximates “however, in the second sketch you are favoured\ldots{}” as opposed to the meaning without the comma which would be “It is only in the the second sketch that you are favoured\ldots{}” Also note that for the sentence to work without the comma, “\ldots{}sketch you are\ldots{}” would have to be inverted to “\ldots{}sketch are you\ldots{}” in order to be grammatically correct.} in the second sketch you are favoured with a widened horizon. You therein discern the motivation of this evolving mortal. His attitude becomes praiseworthy because you understand him. If you could only fathom the motives of your associates, how much better you would understand them. If you could only know your fellows, you would eventually fall in love with them.
 \vs p100 4:6 You cannot truly love your fellows by a mere act of the will. Love is only born of thoroughgoing understanding of your neighbour’s motives and sentiments. It is not so important to love all men today as it is that each day you learn to love one more human being. If each day or each week you achieve an understanding of one more of your fellows, and if this is the limit of your ability, then you are certainly socializing and truly spiritualizing your personality. Love is infectious, and when human devotion is intelligent and wise, love is more catching than hate. But only genuine and unselfish love is truly contagious. If each mortal could only become a focus of dynamic affection, this benign virus of love would soon pervade the sentimental emotion\hyp{}stream of humanity to such an extent that all civilization would be encompassed by love, and that would be the realization of the brotherhood of man.
 \usection{Conversion and Mysticism}
 \vs p100 5:1 The world is filled with lost souls, not lost in the theologic sense but lost in the directional meaning, wandering about in confusion among the isms and cults of a frustrated philosophic era. Too few have learned how to install a philosophy of living in the place of religious authority. (The symbols of socialized religion are not to be despised as channels of growth, albeit the river bed is not the river.)
