--- a/tex/p102.tex
+++ b/tex/p102.tex
@@ -81,7 +81,7 @@
 \vs p102 8:1 The highest evidence of the reality and efficacy of religion consists in the \bibemph{fact of human experience;} namely, that man, naturally fearful and suspicious, innately endowed with a strong instinct of self\hyp{}preservation and craving survival after death, is willing fully to trust the deepest interests of his present and future to the keeping and direction of that power and person designated by his faith as God. That is the one central truth of all religion. As to what that power or person requires of man in return for this watchcare and final salvation, no two religions agree; in fact, they all more or less disagree.
 \vs p102 8:2 Regarding the status of any religion in the evolutionary scale, it may best be judged by its moral judgments and its ethical standards. The higher the type of any religion, the more it encourages and is encouraged by a constantly improving social morality and ethical culture. We cannot judge religion by the status of its accompanying civilization; we had better estimate the real nature of a civilization by the purity and nobility of its religion. Many of the world’s most notable religious teachers have been virtually unlettered. The wisdom of the world is not necessary to an exercise of saving faith in eternal realities.
 \vs p102 8:3 The difference in the religions of various ages is wholly dependent on the difference in man’s comprehension of reality and on his differing recognition of moral values, ethical relationships, and spirit realities.
-\vs p102 8:4 \pc Ethics is the external social or racial mirror which faithfully reflects the otherwise unobservable progress of internal spiritual and religious developments. Man has always thought of God in the terms of the best he knew, his deepest ideas and highest ideals. Even historic religion has always created its God conceptions out of its highest recognized values. Every intelligent creature gives the name of God to the best and highest thing he knows.\fnc{Ethics is the \bibtextul{eternal} social or racial mirror which faithfully reflects\ldots{} \bibexpl{While it may be possible to extract some meaning from the original wording, changing “eternal” to “external” on the basis of an assumed dropped keystroke in the original, suddenly makes the sentence not only clear in meaning but also reveals a contrastive point which is completely absent from the original. (This also resolves the otherwise completely opaque “Ethics is the eternal\ldots{}racial mirror\ldots{}”)}}
+\vs p102 8:4 \pc Ethics is the external\fnst{In 1955 text ``eternal''. While it may be possible to extract some meaning from the original wording, changing “eternal” to “external” on the basis of an assumed dropped keystroke in the original, suddenly makes the sentence not only clear in meaning but also reveals a contrastive point which is completely absent from the original. (This also resolves the otherwise completely opaque “Ethics is the eternal\ldots{}racial mirror\ldots{}”)} social or racial mirror which faithfully reflects the otherwise unobservable progress of internal spiritual and religious developments. Man has always thought of God in the terms of the best he knew, his deepest ideas and highest ideals. Even historic religion has always created its God conceptions out of its highest recognized values. Every intelligent creature gives the name of God to the best and highest thing he knows.
 \vs p102 8:5 Religion, when reduced to terms of reason and intellectual expression, has always dared to criticize civilization and evolutionary progress as judged by its own standards of ethical culture and moral progress.
 \vs p102 8:6 While personal religion precedes the evolution of human morals, it is regretfully recorded that institutional religion has invariably lagged behind the slowly changing mores of the human races. Organized religion has proved to be conservatively tardy. The prophets have usually led the people in religious development; the theologians have usually held them back. Religion, being a matter of inner or personal experience, can never develop very far in advance of the intellectual evolution of the races.
 \vs p102 8:7 But religion is never enhanced by an appeal to the so\hyp{}called miraculous. The quest for miracles is a harking back to the primitive religions of magic. True religion has nothing to do with alleged miracles, and never does revealed religion point to miracles as proof of authority. Religion is ever and always rooted and grounded in personal experience. And your highest religion, the life of Jesus, was just such a personal experience: man, mortal man, seeking God and finding him to the fullness during one short life in the flesh, while in the same human experience there appeared God seeking man and finding him to the full satisfaction of the perfect soul of infinite supremacy. And that is religion, even the highest yet revealed in the universe of Nebadon --- the earth life of Jesus of Nazareth.
