--- a/tex/p105.tex
+++ b/tex/p105.tex
@@ -39,7 +39,7 @@
 \vs p105 3:5 \ublistelem{4.}\bibnobreakspace \bibemph{The Third Source and Centre.} Third Person of Deity, the Conjoint Actor; infinite integrator of Paradise cosmic energies with the spirit energies of the Eternal Son; perfect co\hyp{}ordinator of the motives of will and the mechanics of force; unifier of all actual and actualizing reality. Through the ministrations of his manifold children the Infinite Spirit reveals the mercy of the Eternal Son while at the same time functioning as the infinite manipulator, forever weaving the pattern of Paradise into the energies of space. This selfsame Conjoint Actor, this God of Action, is the perfect expression of the limitless plans and purposes of the Father\hyp{}Son while functioning himself as the source of mind and the bestower of intellect upon the creatures of a far\hyp{}flung cosmos.
 \vs p105 3:6 \ublistelem{5.}\bibnobreakspace \bibemph{The Deity Absolute.} The causational, potentially personal possibilities of universal reality, the totality of all Deity potential. The Deity Absolute is the purposive qualifier of the unqualified, absolute, and nondeity realities. The Deity Absolute is the qualifier of the absolute and the absolutizer of the qualified --- the destiny inceptor.
 \vs p105 3:7 \ublistelem{6.}\bibnobreakspace \bibemph{The Unqualified Absolute.} Static, reactive, and abeyant; the unrevealed cosmic infinity of the I AM; totality of nondeified reality and finality of all nonpersonal potential. Space limits the function of the Unqualified, but the presence of the Unqualified is without limit, infinite. There is a concept periphery to the master universe, but the presence of the Unqualified is limitless; even eternity cannot exhaust the boundless quiescence of this nondeity Absolute.
-\vs p105 3:8 \ublistelem{7.}\bibnobreakspace \bibemph{The Universal Absolute.} Unifier of the deified and the undeified; correlator of the absolute and the relative. The Universal Absolute (being static, potential, and associative) compensates the tension between the ever\hyp{}existent and the uncompleted.\fnc{Unifier of the deified and the undeified; \bibtextul{corelater} of the absolute\ldots{} \bibexpl{Although it is possible that the original word (which is not found in either Webster’s or the OED) was a coined extension of corelation and corelative (both of which are found), it is not readily apparent how corelater would differ in meaning from correlator(s), the now standard form, which is found five times elsewhere in the text. The more likely situation is that two separate typographical errors were made when this word was set. The first was a dropped keystroke error at the end of a line of type; the second was an incorrect keystroke error, substituting e for o. This doubly misspelled word would still be difficult to catch in proofing because it would sound the same if read out loud, and interestingly enough, if it looked odd to a proofreader and consequently led him or her to consult the dictionary, the spelling could neither be confirmed nor denied by either Webster’s or the OED --- neither dictionary contained correlator or corelater --- and without an electronically searchable text, it is unlikely that the evidence of the otherwise unanimous usage within the revelation itself could have been brought to bear on the problem.}}
+\vs p105 3:8 \ublistelem{7.}\bibnobreakspace \bibemph{The Universal Absolute.} Unifier of the deified and the undeified; correlator\fnst{In 1955 text ``corelater''. Although it is possible that the original word (which is not found in either Webster’s or the OED) was a coined extension of corelation and corelative (both of which are found), it is not readily apparent how corelater would differ in meaning from correlator(s), the now standard form, which is found five times elsewhere in the text. The more likely situation is that two separate typographical errors were made when this word was set. The first was a dropped keystroke error at the end of a line of type; the second was an incorrect keystroke error, substituting e for o. This doubly misspelled word would still be difficult to catch in proofing because it would sound the same if read out loud, and interestingly enough, if it looked odd to a proofreader and consequently led him or her to consult the dictionary, the spelling could neither be confirmed nor denied by either Webster’s or the OED --- neither dictionary contained correlator or corelater --- and without an electronically searchable text, it is unlikely that the evidence of the otherwise unanimous usage within the revelation itself could have been brought to bear on the problem.} of the absolute and the relative. The Universal Absolute (being static, potential, and associative) compensates the tension between the ever\hyp{}existent and the uncompleted.
 \vs p105 3:9 \pc The Seven Absolutes of Infinity constitute the beginnings of reality. As mortal minds would regard it, the First Source and Centre would appear to be antecedent to all absolutes. But such a postulate, however helpful, is invalidated by the eternity coexistence of the Son, the Spirit, the three Absolutes, and the Paradise Isle.
 \vs p105 3:10 It is a \bibemph{truth} that the Absolutes are manifestations of the I AM\hyp{}First Source and Centre; it is a \bibemph{fact} that these Absolutes never had a beginning but are co\hyp{}ordinate eternals with the First Source and Centre. The relationships of absolutes in eternity cannot always be presented without involving paradoxes in the language of time and in the concept patterns of space. But regardless of any confusion concerning the origin of the Seven Absolutes of Infinity, it is both fact and truth that all reality is predicated upon their eternity existence and infinity relationships.
 \usection{Unity, Duality, and Triunity}
