--- a/tex/p106.tex
+++ b/tex/p106.tex
@@ -54,7 +54,7 @@
 \vs p106 4:3 What changes will be inaugurated by the full emergence of the Ultimate we do not know. But as the Supreme is now spiritually and personally present in Havona, so also is the Ultimate there present but in the absonite and superpersonal sense. And you have been informed of the existence of the Qualified Vicegerents of the Ultimate, though you have not been informed of their present whereabouts or function.
 \vs p106 4:4 But irrespective of the administrative repercussions attendant upon the emergence of Ultimate Deity, the personal values of his transcendental divinity will be experiencible by all personalities who have been participants in the actualization of this Deity level. Transcendence of the finite can lead only to ultimate attainment. God the Ultimate exists in transcendence of time and space but is nonetheless subabsolute notwithstanding inherent capacity for functional association with absolutes.
 \usection{Coabsolute or Fifth\hyp{}Phase Association}
-\vs p106 5:1 The Ultimate is the apex of transcendental reality even as the Supreme is the capstone of evolutionary\hyp{}experiential reality. And the actual emergence of these two experiential Deities lays the foundation for the second experiential Trinity. This is the Trinity Absolute, the union of God the Supreme, God the Ultimate, and the unrevealed Consummator of Universe Destiny. And this Trinity has theoretical capacity to activate the Absolutes of potentiality --- Deity, Universal, and Unqualified. But the completed formation of this Trinity Absolute could take place only after the completed evolution of the entire master universe, from Havona to the fourth and outermost space level.\fnc{\ldots{}the union of God the Supreme, God the Ultimate, and the \bibtextul{Unrevealed} Consummator of Universe Destiny. \bibexpl{The lowercase version appears to be correct because “unrevealed” does not seem to be part of the name but is solely descriptive (the title being found in several places without unrevealed preceding it). In the one other case in which “unrevealed” is found in conjunction with Consummator of Universe Destiny, it is not capitalized \bibref[0:12.7]{p00 12:7} in the text. [“Unrevealed” is found in one other location as a capitalized component of a title --- The “Unrevealed Creative Agencies of the Ancients of Days” \bibref[30:1.108]{p030 1:108} --- so such a format is possible.]}}
+\vs p106 5:1 The Ultimate is the apex of transcendental reality even as the Supreme is the capstone of evolutionary\hyp{}experiential reality. And the actual emergence of these two experiential Deities lays the foundation for the second experiential Trinity. This is the Trinity Absolute, the union of God the Supreme, God the Ultimate, and the unrevealed\fnst{In 1955 text ``Unrevealed''. The lowercase version appears to be correct because “unrevealed” does not seem to be part of the name but is solely descriptive (the title being found in several places without unrevealed preceding it). In the one other case in which “unrevealed” is found in conjunction with Consummator of Universe Destiny, it is not capitalized \bibref[0:12.7]{p000 12:7} in the text. “Unrevealed” is found in one other location as a capitalized component of a title --- The “Unrevealed Creative Agencies of the Ancients of Days” \bibref[30:1.108]{p030 1:108} --- so such a format is possible.} Consummator of Universe Destiny. And this Trinity has theoretical capacity to activate the Absolutes of potentiality --- Deity, Universal, and Unqualified. But the completed formation of this Trinity Absolute could take place only after the completed evolution of the entire master universe, from Havona to the fourth and outermost space level.
 \vs p106 5:2 It should be made clear that these experiential Trinities are correlative, not only of the personality qualities of experiential Divinity, but also of all the other\hyp{}than\hyp{}personal qualities which characterize their attained Deity unity. While this presentation deals primarily with the personal phases of the unification of the cosmos, it is nonetheless true that the impersonal aspects of the universe of universes are likewise destined to undergo unification as is illustrated by the power\hyp{}personality synthesis now going on in connection with the evolution of the Supreme Being. The spirit\hyp{}personal qualities of the Supreme are inseparable from the power prerogatives of the Almighty, and both are complemented by the unknown potential of Supreme mind. Neither can God the Ultimate as a person be considered apart from the other\hyp{}than\hyp{}personal aspects of Ultimate Deity. And on the absolute level the Deity and the Unqualified Absolutes are inseparable and indistinguishable in the presence of the Universal Absolute.
 \vs p106 5:3 Trinities are, in and of themselves, not personal, but neither do they contravene personality. Rather do they encompass it and correlate it, in a collective sense, with impersonal functions. Trinities are, then, always \bibemph{deity} reality but never \bibemph{personality} reality. The personality aspects of a trinity are inherent in its individual members, and as individual persons they are \bibemph{not} that trinity. Only as a collective are they trinity; that \bibemph{is} trinity. But always is trinity inclusive of all encompassed deity; trinity is deity unity.
 \vs p106 5:4 The three Absolutes --- Deity, Universal, and Unqualified --- are not trinity, for all are not deity. Only the deified can become trinity; all other associations are triunities or triodities.
