--- a/tex/p112.tex
+++ b/tex/p112.tex
@@ -30,7 +30,7 @@
 \vs p112 1:4 \ublistelem{3.}\bibnobreakspace \bibemph{Value status.} Personality can be experientially realized in the progressive realms of the material, the morontial, and the spiritual.
 \vs p112 1:5 \pc Personality has a perfected range of cosmic dimensional performance. The dimensions of finite personality are three, and they are roughly functional as follows:
 \vs p112 1:6 \ublistelem{1.}\bibnobreakspace \bibemph{Length} represents direction and nature of progression --- movement through space and according to time --- evolution.
-\vs p112 1:7 \ublistelem{2.}\bibnobreakspace \bibemph{Vertical depth} embraces the organismal drives and attitudes, the varying levels of self\hyp{}realization and the general phenomenon of reaction to environment.\fnc{\bibtextul{\bibemph{Vertical}} depth embraces the organismal drives and attitudes \bibexpl{“Depth” should be italicized as it is the substantive paralleled by the other items in the context (“Breadth” and “Length” --- both italicized) and “Vertical” is merely the modifier.}}
+\vs p112 1:7 \ublistelem{2.}\bibnobreakspace \bibemph{Vertical depth}\fnst{In 1955 text ``depth'' not italicized. “Depth” should be italicized as it is the substantive paralleled by the other items in the context (“Breadth” and “Length” --- both italicized) and “Vertical” is merely the modifier.} embraces the organismal drives and attitudes, the varying levels of self\hyp{}realization and the general phenomenon of reaction to environment.
 \vs p112 1:8 \ublistelem{3.}\bibnobreakspace \bibemph{Breadth} embraces the domain of co\hyp{}ordination, association, and selfhood organization.
 \vs p112 1:9 \pc The type of personality bestowed upon Urantia mortals has a potentiality of seven dimensions of self\hyp{}expression or person\hyp{}realization. These dimensional phenomena are realizable as three on the finite level, three on the absonite level, and one on the absolute level. On subabsolute levels this seventh or totality dimension is experiencible as the \bibemph{fact} of personality. This supreme dimension is an associable absolute and, while not infinite, is dimensionally potential for subinfinite penetration of the absolute.
 \vs p112 1:10 The finite dimensions of personality have to do with cosmic length, depth, and breadth. Length denotes meaning; depth signifies value; breadth embraces insight --- the capacity to experience unchallengeable consciousness of cosmic reality.
