--- a/tex/p114.tex
+++ b/tex/p114.tex
@@ -32,7 +32,7 @@
 \vs p114 2:6 No one knows how long these 24 Urantia counsellors will continue in their present status, detached from the regular program of universe activities. They will no doubt continue to serve in their present capacities until some change in planetary status ensues, such as the end of a dispensation, the assumption of full authority by Machiventa Melchizedek, the final adjudication of the Lucifer rebellion, or the reappearance of Michael on the world of his final bestowal. The present resident governor general of Urantia seems inclined to the opinion that all but Machiventa may be released for Paradise ascension the moment the system of Satania is restored to the constellation circuits. But other opinions are also current.
 \usection{The Resident Governor General}
 \vs p114 3:1 Every 100 years of Urantia time, the Jerusem corps of 24 planetary supervisors designate one of their number to sojourn on your world to act as their executive representative, as resident governor general. During the times of the preparation of these narratives this executive officer was changed, the 19\ts{th} so to serve being succeeded by the 20\ts{th}. The name of the current planetary supervisor is withheld from you only because mortal man is so prone to venerate, even to deify, his extraordinary compatriots and superhuman superiors.
-\vs p114 3:2 The resident governor general has no actual personal authority in the management of world affairs except as the representative of the 24 Jerusem counsellors. He acts as the co\hyp{}ordinator of superhuman administration and is the respected head and universally recognized leader of the celestial beings functioning on Urantia. All orders of angelic hosts regard him as their co\hyp{}ordinating director, while the United Midwayers\fnc{In 1955 text in lower case ``united midwayers''.}, since the departure of 1\hyp{}2\hyp{}3 the first to become one of the 24 counsellors, really look upon the successive governors general as their planetary fathers.
+\vs p114 3:2 The resident governor general has no actual personal authority in the management of world affairs except as the representative of the 24 Jerusem counsellors. He acts as the co\hyp{}ordinator of superhuman administration and is the respected head and universally recognized leader of the celestial beings functioning on Urantia. All orders of angelic hosts regard him as their co\hyp{}ordinating director, while the United Midwayers\fnst{In 1955 text in lower case ``united midwayers''.}, since the departure of 1\hyp{}2\hyp{}3 the first to become one of the 24 counsellors, really look upon the successive governors general as their planetary fathers.
 \vs p114 3:3 Although the governor general does not possess actual and personal authority on the planet, he hands down scores of rulings and decisions each day which are accepted as final by all personalities concerned. He is much more of a fatherly adviser than a technical ruler. In certain ways he functions as would a Planetary Prince, but his administration much more closely resembles that of the Material Sons.
 \vs p114 3:4 \pc The Urantia government is represented in the councils of Jerusem in accordance with an arrangement whereby the returning governor general sits as a temporary member of the System Sovereign’s cabinet of Planetary Princes. It was expected, when Machiventa was designated vicegerent Prince, that he would immediately assume his place in the council of the Planetary Princes of Satania, but thus far he has made no gesture in this direction.
 \vs p114 3:5 The supermaterial government of Urantia does not maintain a very close organic relationship with the higher units of the local universe. In a way, the resident governor general represents Salvington as well as Jerusem since he acts on behalf of the 24 counsellors, who are directly representative of Michael and Gabriel. And being a Jerusem citizen, the planetary governor can function as a spokesman for the System Sovereign. The constellation authorities are represented directly by a Vorondadek Son, the Edentia observer.
