--- a/tex/p118.tex
+++ b/tex/p118.tex
@@ -62,7 +62,7 @@
 \vs p118 5:3 Mortal consciousness proceeds from the fact, to the meaning, and then to the value. Creator consciousness proceeds from the thought\hyp{}value, through the word\hyp{}meaning, to the fact of action. Always must God act to break the deadlock of the unqualified unity inherent in existential infinity. Always must Deity provide the pattern universe, the perfect personalities, the original truth, beauty, and goodness for which all subdeity creations strive. Always must God first find man that man may later find God. Always must there be a Universal Father before there can ever be universal sonship and consequent universal brotherhood.
 \usection{Omnipotence and Omnificence}
 \vs p118 6:1 God is truly omnipotent, but he is not omnificent --- he does not personally do all that is done. Omnipotence embraces the power\hyp{}potential of the Almighty Supreme and the Supreme Being, but the volitional acts of God the Supreme are not the personal doings of God the Infinite.
-\vs p118 6:2 To advocate the omnificence of primal Deity would be equal to disenfranchising well\hyp{}nigh 1,000,000 Creator Sons of Paradise, not to mention the innumerable hosts of various other orders of concurring creative assistants. There is but one uncaused Cause in the whole universe. All other causes are derivatives of this one First Great Source and Centre. And none of this philosophy does any violence to the free\hyp{}willness of the myriads of the children of Deity scattered through a vast universe.\fnc{And none of this philosophy does any violence to the \bibtextul{freewillness} of the myriads of\ldots{} \bibexpl{Free-willness is found at four other locations in the text and in all instances it refers to an attribute or characteristic of a being or beings. Freewill and free will each occur numerous times --- the former as an adjective (modifying such words as choice, action, or personality), while the two-word form is used when free modifies will itself (i.e. when will is under discussion). In light of these consistent usages, conforming this variant is appropriate as the original was probably the result of a dropped hyphen.}}
+\vs p118 6:2 To advocate the omnificence of primal Deity would be equal to disenfranchising well\hyp{}nigh 1,000,000 Creator Sons of Paradise, not to mention the innumerable hosts of various other orders of concurring creative assistants. There is but one uncaused Cause in the whole universe. All other causes are derivatives of this one First Great Source and Centre. And none of this philosophy does any violence to the free\hyp{}willness\fnst{In 1955 text ``freewillness''.} of the myriads of the children of Deity scattered through a vast universe.
 \vs p118 6:3 \pc Within a local frame, volition may appear to function as an uncaused cause, but it unfailingly exhibits inheritance factors which establish relationship with the unique, original, and absolute First Causes.
 \vs p118 6:4 All volition is relative. In the originating sense, only the Father\hyp{}I AM possesses finality of volition; in the absolute sense, only the Father, the Son, and the Spirit exhibit the prerogatives of volition unconditioned by time and unlimited by space. Mortal man is endowed with free will, the power of choice, and though such choosing is not absolute, nevertheless, it is relatively final on the finite level and concerning the destiny of the choosing personality.
 \vs p118 6:5 Volition on any level short of the absolute encounters limitations which are constitutive in the very personality exercising the power of choice. Man cannot choose beyond the range of that which is choosable. He cannot, for instance, choose to be other than a human being except that he can elect to become more than a man; he can choose to embark upon the voyage of universe ascension, but this is because the human choice and the divine will happen to be coincident upon this point. And what a son desires and the Father wills will certainly come to pass.
