--- a/tex/p119.tex
+++ b/tex/p119.tex
@@ -65,7 +65,7 @@
 \vs p119 7:3 \pc While we believed that this would be the method, we never knew, until the time of the event itself, that Michael would appear on earth as a helpless infant of the realm. Theretofore had he always appeared as a fully developed individual of the personality group of the bestowal selection, and it was a thrilling announcement which was broadcast from Salvington telling that the babe of Bethlehem had been born on Urantia.
 \vs p119 7:4 We then not only realized that our Creator and friend was taking the most precarious step in all his career, apparently risking his position and authority on this bestowal as a helpless infant, but we also understood that his experience in this final and mortal bestowal would eternally enthrone him as the undisputed and supreme sovereign of the universe of Nebadon. For a third of a century of earth time all eyes in all parts of this local universe were focused on Urantia. All intelligences realized that the last bestowal was in progress, and as we had long known of the Lucifer rebellion in Satania and of the Caligastia disaffection on Urantia, we well understood the intensity of the struggle which would ensue when our ruler condescended to incarnate on Urantia in the humble form and likeness of mortal flesh.
 \vs p119 7:5 Joshua ben Joseph, the Jewish baby, was conceived and was born into the world just as all other babies before and since \bibemph{except} that this particular baby was the incarnation of Michael of Nebadon, a divine Son of Paradise and the creator of all this local universe of things and beings. And this mystery of the incarnation of Deity within the human form of Jesus, otherwise of natural origin on the world, will forever remain unsolved. Even in eternity you will never know the technique and method of the incarnation of the Creator in the form and likeness of his creatures. That is the secret of Sonarington, and such mysteries are the exclusive possession of those divine Sons who have passed through the bestowal experience.
-\vs p119 7:6 Certain wise men of earth knew of Michael’s impending arrival. Through the contacts of one world with another, these wise men of spiritual insight learned of the forthcoming bestowal of Michael on Urantia. And the seraphim did, through the midway creatures, make announcement to a group of Chaldean priests whose leader was Ardnon. These men of God visited the newborn child in the manger. The only supernatural event associated with the birth of Jesus was this announcement to Ardnon and his associates by the seraphim of former attachment to Adam and Eve in the first garden.\fnc{\bibexpl{Informational: first printing; These men of God visited the newborn child in the manger. --- “in the manger” removed at the second printing. Presumably, this change was made because the original seems to be inconsistent with the narrative of Jesus’ birth in 122:8, which states that three wise men from the east visited Jesus when he was almost three weeks old --- about the time the family left the inn and over two weeks after they had moved out of the stable. However, it is certainly possible that Joseph and Mary might have taken the manger with them up to the room in the inn in order to continue to have a cradle for Jesus. The need for a cradle would have been no less in the room than in the stable, and if the manger was portable, as small feed-boxes often are, moving it along with the family seems quite reasonable.}}
+\vs p119 7:6 Certain wise men of earth knew of Michael’s impending arrival. Through the contacts of one world with another, these wise men of spiritual insight learned of the forthcoming bestowal of Michael on Urantia. And the seraphim did, through the midway creatures, make announcement to a group of Chaldean priests whose leader was Ardnon. These men of God visited the newborn child in the manger. The only supernatural event associated with the birth of Jesus was this announcement to Ardnon and his associates by the seraphim of former attachment to Adam and Eve in the first garden.\fnst{\bibexpl{Informational: first printing; These men of God visited the newborn child in the manger. --- “in the manger” removed at the second printing. Presumably, this change was made because the original seems to be inconsistent with the narrative of Jesus’ birth in 122:8, which states that three wise men from the east visited Jesus when he was almost three weeks old --- about the time the family left the inn and over two weeks after they had moved out of the stable. However, it is certainly possible that Joseph and Mary might have taken the manger with them up to the room in the inn in order to continue to have a cradle for Jesus. The need for a cradle would have been no less in the room than in the stable, and if the manger was portable, as small feed-boxes often are, moving it along with the family seems quite reasonable.}}
 \vs p119 7:7 Jesus’ human parents were average people of their day and generation, and this incarnated Son of God was thus born of woman and was reared in the ordinary manner of the children of that race and age.
 \vs p119 7:8 \pc The story of Michael’s sojourn on Urantia, the narrative of the mortal bestowal of the Creator Son on your world, is a matter beyond the scope and purpose of this narrative.
 \usection{Michael’s Postbestowal Status}
