--- a/tex/p123.tex
+++ b/tex/p123.tex
@@ -61,7 +61,7 @@
 \usection{School Days in Nazareth}
 \vs p123 5:1 Jesus was now seven years old, the age when Jewish children were supposed to begin their formal education in the synagogue schools. Accordingly, in August of this year he entered upon his eventful school life at Nazareth. Already this lad was a fluent reader, writer, and speaker of two languages, Aramaic and Greek. He was now to acquaint himself with the task of learning to read, write, and speak the Hebrew language. And he was truly eager for the new school life which was ahead of him.
 \vs p123 5:2 For three years --- until he was ten --- he attended the elementary school of the Nazareth synagogue. For these three years he studied the rudiments of the Book of the Law as it was recorded in the Hebrew tongue. For the following three years he studied in the advanced school and committed to memory, by the method of repeating aloud, the deeper teachings of the sacred law. He graduated from this school of the synagogue during his 13\ts{th} year and was turned over to his parents by the synagogue rulers as an educated “son of the commandment” --- henceforth a responsible citizen of the commonwealth of Israel, all of which entailed his attendance at the Passovers in Jerusalem; accordingly, he attended his first Passover that year in company with his father and mother.
-\vs p123 5:3 \pc At Nazareth the pupils sat on the floor in a semicircle, while their teacher, the chazan\fnst{A more accurate rendition of the Hebrew \textheb{חַזָּן} would have been ``chazzan''.}, an officer of the synagogue, sat facing them. Beginning with the Book of Leviticus, they passed on to the study of the other books of the Law\fnc{books of the \bibtextul{law}. \bibexpl{Here and in the paragraph 5 below, the ``Law'' being spoken of is the Hebrew Torah, i.e. the first part of the Hebrew Scriptures: \textheb{כתובים נביאים תורה}}.}, followed by the study of the Prophets and the Psalms\fnst{Here the Writings (Hebrew \textheb{כתובים}) are called the ``Psalms'' by the name of the first book of this section of Hebrew Scriptures, according to many Hebrew MSS, though not that of Talmud (which places Ruth first) and some of the early MSS I have examined, such as The Leningrad Codex (B19A), which places Chronicles first.}. The Nazareth synagogue possessed a complete copy of the Scriptures in Hebrew. Nothing but the Scriptures was studied prior to the 12\ts{th} year. In the summer months the hours for school were greatly shortened.
+\vs p123 5:3 \pc At Nazareth the pupils sat on the floor in a semicircle, while their teacher, the chazan\fnst{A more accurate rendition of the Hebrew \textheb{חַזָּן} would have been ``chazzan''.}, an officer of the synagogue, sat facing them. Beginning with the Book of Leviticus, they passed on to the study of the other books of the Law\fnst{In 1955 text ``law'' in lower case. Here and in the paragraph 5 below, the ``Law'' being spoken of is the Hebrew Torah, i.e., the first part of the Hebrew Scriptures: \textheb{כתובים נביאים תורה}.}, followed by the study of the Prophets and the Psalms\fnst{Here the Writings (Hebrew \textheb{כתובים}) are called the ``Psalms'' by the name of the first book of this section of Hebrew Scriptures, according to many Hebrew MSS, though not that of Talmud (which places Ruth first) and some of the early MSS I have examined, such as The Leningrad Codex (B19A), which places Chronicles first.}. The Nazareth synagogue possessed a complete copy of the Scriptures in Hebrew. Nothing but the Scriptures was studied prior to the 12\ts{th} year. In the summer months the hours for school were greatly shortened.
 \vs p123 5:4 Jesus early became a master of Hebrew, and as a young man, when no visitor of prominence happened to be sojourning in Nazareth, he would often be asked to read the Hebrew scriptures to the faithful assembled in the synagogue at the regular Sabbath services.
 \vs p123 5:5 These synagogue schools, of course, had no textbooks. In teaching, the chazan would utter a statement while the pupils would in unison repeat it after him. When having access to the written books of the Law, the student learned his lesson by reading aloud and by constant repetition.
 \vs p123 5:6 \pc Next, in addition to his more formal schooling, Jesus began to make contact with human nature from the four quarters of the earth as men from many lands passed in and out of his father’s repair shop. When he grew older, he mingled freely with the caravans as they tarried near the spring for rest and nourishment. Being a fluent speaker of Greek, he had little trouble in conversing with the majority of the caravan travellers and conductors.
@@ -70,7 +70,7 @@
 \vs p123 5:9 \pc Throughout his years at the synagogue he was a brilliant student, possessing a great advantage since he was conversant with three languages. The Nazareth chazan, on the occasion of Jesus’ finishing the course in his school, remarked to Joseph that he feared he “had learned more from Jesus’ searching questions” than he had “been able to teach the lad.”
 \vs p123 5:10 Throughout his course of study Jesus learned much and derived great inspiration from the regular Sabbath sermons in the synagogue. It was customary to ask distinguished visitors, stopping over the Sabbath in Nazareth, to address the synagogue. As Jesus grew up, he heard many great thinkers of the entire Jewish world expound their views, and many also who were hardly orthodox Jews since the synagogue of Nazareth was an advanced and liberal centre of Hebrew thought and culture.
 \vs p123 5:11 When entering school at seven years (at this time the Jews had just inaugurated a compulsory education law), it was customary for the pupils to choose their “birthday text,” a sort of golden rule to guide them throughout their studies, one upon which they often expatiated at their graduation when 13 years old. The text which Jesus chose was from the Prophet Isaiah: “The spirit of the Lord God is upon me, for the Lord has anointed me; he has sent me to bring good news to the meek, to bind up the brokenhearted, to proclaim liberty to the captives, and to set the spiritual prisoners free.”\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Jesus-with-Joseph.jpg}\caption{Young Jesus with Joseph by Michael Malm}\end{figure}}
-\vs p123 5:12 \pc Nazareth was one of the 24 priest centres of the Hebrew nation. But the Galilean priesthood was more liberal in the interpretation of the traditional laws than were the Judean scribes and rabbis. And at Nazareth they were also more liberal regarding the observance of the Sabbath. It was therefore the custom for Joseph to take Jesus out for walks on Sabbath afternoons, one of their favourite jaunts being to climb the high hill near their home, from which they could obtain a panoramic view of all Galilee. To the north\hyp{}west, on clear days, they could see the long ridge of Mount Carmel running down to the sea; and many times Jesus heard his father relate the story of Elijah, one of the first of that long line of Hebrew prophets, who reproved Ahab and exposed the priests of Baal. To the north Mount Hermon raised its snowy peak in majestic splendour and monopolized the skyline, almost 900\,m of the upper slopes glistening white with perpetual snow. Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east, when the sun shone upon their marble walls, they could see the Gr\ae co\hyp{}Roman cities of the Decapolis, with their amphitheatres and pretentious temples. And when they lingered toward the going down of the sun, to the west they could make out the sailing vessels on the distant Mediterranean.\fnc{ \bibexpl{Informational: first printing; Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east\ldots{} --- Punctuation and wording changes were rejected by the committee. The context for this sentence is the “panoramic view” from atop the Nazareth hill: Jesus and his father are standing on top of the hill and are moving their gaze from Mt. Carmel in the north\hyp{}west around an arc to the north, east, south and west. Mt. Hermon is to their north, and from springs in its foothills near Dan (north\hyp{}east of Nazareth) the Jordan valley extends to the Dead Sea in the south. Thus, as Jesus and Joseph follow the line of the river valley along the arc of their survey, as the Jordan approaches the Dead Sea, father and son “discern\ldots{}far beyond, the rocky hills of Moab.” This interpretation is further supported by the punctuation of the following sentence which does not read “Also, to the south and the east,\ldots{}” (suggesting a change in direction from the last reference), but rather, “Also to the south and the east,\ldots{}” which implies that the last referenced location (Moab) was in the same direction.}}
+\vs p123 5:12 \pc Nazareth was one of the 24 priest centres of the Hebrew nation. But the Galilean priesthood was more liberal in the interpretation of the traditional laws than were the Judean scribes and rabbis. And at Nazareth they were also more liberal regarding the observance of the Sabbath. It was therefore the custom for Joseph to take Jesus out for walks on Sabbath afternoons, one of their favourite jaunts being to climb the high hill near their home, from which they could obtain a panoramic view of all Galilee. To the north\hyp{}west, on clear days, they could see the long ridge of Mount Carmel running down to the sea; and many times Jesus heard his father relate the story of Elijah, one of the first of that long line of Hebrew prophets, who reproved Ahab and exposed the priests of Baal. To the north Mount Hermon raised its snowy peak in majestic splendour and monopolized the skyline, almost 900\,m of the upper slopes glistening white with perpetual snow. Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east, when the sun shone upon their marble walls, they could see the Gr\ae co\hyp{}Roman cities of the Decapolis, with their amphitheatres and pretentious temples. And when they lingered toward the going down of the sun, to the west they could make out the sailing vessels on the distant Mediterranean.\fnst{Informational: first printing; Far to the east they could discern the Jordan valley and, far beyond, the rocky hills of Moab. Also to the south and the east\ldots{} --- Punctuation and wording changes were rejected by the committee. The context for this sentence is the “panoramic view” from atop the Nazareth hill: Jesus and his father are standing on top of the hill and are moving their gaze from Mt. Carmel in the north\hyp{}west around an arc to the north, east, south and west. Mt. Hermon is to their north, and from springs in its foothills near Dan (north\hyp{}east of Nazareth) the Jordan valley extends to the Dead Sea in the south. Thus, as Jesus and Joseph follow the line of the river valley along the arc of their survey, as the Jordan approaches the Dead Sea, father and son “discern\ldots{}far beyond, the rocky hills of Moab.” This interpretation is further supported by the punctuation of the following sentence which does not read “Also, to the south and the east,\ldots{}” (suggesting a change in direction from the last reference), but rather, “Also to the south and the east,\ldots{}” which implies that the last referenced location (Moab) was in the same direction.}
 \vs p123 5:13 From four directions Jesus could observe the caravan trains as they wended their way in and out of Nazareth, and to the south he could overlook the broad and fertile plain country of Esdraelon, stretching off toward Mount Gilboa and Samaria.
 \vs p123 5:14 When they did not climb the heights to view the distant landscape, they strolled through the countryside and studied nature in her various moods in accordance with the seasons. Jesus’ earliest training, aside from that of the home hearth, had to do with a reverent and sympathetic contact with nature.
 \vs p123 5:15 \pc Before he was 8 years of age, he was known to all the mothers and young women of Nazareth, who had met him and talked with him at the spring, which was not far from his home, and which was one of the social centres of contact and gossip for the entire town. This year Jesus learned to milk the family cow and care for the other animals. During this and the following year he also learned to make cheese and to weave. When he was 10 years of age, he was an expert loom operator. It was about this time that Jesus and the neighbour boy Jacob became great friends of the potter who worked near the flowing spring; and as they watched Nathan’s deft fingers mould the clay on the potter’s wheel, many times both of them determined to be potters when they grew up. Nathan was very fond of the lads and often gave them clay to play with, seeking to stimulate their creative imaginations by suggesting competitive efforts in modelling various objects and animals.
