--- a/tex/p126.tex
+++ b/tex/p126.tex
@@ -11,7 +11,7 @@
 \vs p126 0:4 \pc The story of his exploits among the wise men of the temple in Jerusalem was gratifying to all Nazareth, especially to his former teachers in the synagogue school. For a time his praise was on everybody’s lips. All the village recounted his childhood wisdom and praiseworthy conduct and predicted that he was destined to become a great leader in Israel; at last a really great teacher was to come out of Nazareth in Galilee. And they all looked forward to the time when he would be 15 years of age so that he might be permitted regularly to read the Scriptures in the synagogue on the Sabbath day.
 \usection{His Fourteenth Year (A.D.\,8)}
 \vs p126 1:1 This is the calendar year of his 14\ts{th} birthday. He had become a good yoke maker and worked well with both canvas and leather. He was also rapidly developing into an expert carpenter and cabinetmaker. This summer he made frequent trips to the top of the hill to the north\hyp{}west of Nazareth for prayer and meditation. He was gradually becoming more self\hyp{}conscious of the nature of his bestowal on earth.
-\vs p126 1:2 This hill, a little more than 100 years previously, had been the “high place of Baal,” and now it was the site of the tomb of Simeon, a reputed holy man of Israel. From the summit of this hill of Simeon, Jesus looked out over Nazareth and the surrounding country. He would gaze upon Megiddo and recall the story of the Egyptian army winning its first great victory in Asia; and how, later on, another such army defeated the Judean king Josiah. Not far away he could look upon Taanach, where Deborah and Barak defeated Sisera. In the distance he could view the hills of Dothan, where he had been taught Joseph’s brethren sold him into Egyptian slavery. He then would shift his gaze over to Ebal and Gerizim and recount to himself the traditions of Abraham, Jacob, and Abimelech. And thus he recalled and turned over in his mind the historic and traditional events of his father Joseph’s people.\fnc{Not far away he could look upon \bibtextul{Tannach}\ldots{} \bibexpl{The corrected spelling is the standard transliteration of the name.}}
+\vs p126 1:2 This hill, a little more than 100 years previously, had been the “high place of Baal,” and now it was the site of the tomb of Simeon, a reputed holy man of Israel. From the summit of this hill of Simeon, Jesus looked out over Nazareth and the surrounding country. He would gaze upon Megiddo and recall the story of the Egyptian army winning its first great victory in Asia; and how, later on, another such army defeated the Judean king Josiah. Not far away he could look upon Tannach, where Deborah and Barak defeated Sisera. In the distance he could view the hills of Dothan, where he had been taught Joseph’s brethren sold him into Egyptian slavery. He then would shift his gaze over to Ebal and Gerizim and recount to himself the traditions of Abraham, Jacob, and Abimelech. And thus he recalled and turned over in his mind the historic and traditional events of his father Joseph’s people.
 \vs p126 1:3 He continued to carry on his advanced courses of reading under the synagogue teachers, and he also continued with the home education of his brothers and sisters as they grew up to suitable ages.
 \vs p126 1:4 Early this year Joseph arranged to set aside the income from his Nazareth and Capernaum property to pay for Jesus’ long course of study at Jerusalem, it having been planned that he should go to Jerusalem in August of the following year when he would be 15 years of age.
 \vs p126 1:5 By the beginning of this year both Joseph and Mary entertained frequent doubts about the destiny of their first\hyp{}born son. He was indeed a brilliant and lovable child, but he was so difficult to understand, so hard to fathom, and again, nothing extraordinary or miraculous ever happened. Scores of times had his proud mother stood in breathless anticipation, expecting to see her son engage in some superhuman or miraculous performance, but always were her hopes dashed down in cruel disappointment. And all this was discouraging, even disheartening. The devout people of those days truly believed that prophets and men of promise always demonstrated their calling and established their divine authority by performing miracles and working wonders. But Jesus did none of these things; wherefore was the confusion of his parents steadily increased as they contemplated his future.
