--- a/tex/p134.tex
+++ b/tex/p134.tex
@@ -86,7 +86,7 @@
 \vs p134 7:2 This is the year of Jesus’ solitary wanderings through Palestine and Syria. Throughout this year of travel he was known by various names in different parts of the country: the carpenter of Nazareth, the boatbuilder of Capernaum, the scribe of Damascus, and the teacher of Alexandria.
 \vs p134 7:3 At Antioch the Son of Man lived for over two months, working, observing, studying, visiting, ministering, and all the while learning how man lives, how he thinks, feels, and reacts to the environment of human existence. For three weeks of this period he worked as a tentmaker. He remained longer in Antioch than at any other place he visited on this trip. 10 years later, when the Apostle Paul was preaching in Antioch and heard his followers speak of the doctrines of the \bibemph{Damascus scribe,} he little knew that his pupils had heard the voice, and listened to the teachings, of the Master himself.
 \vs p134 7:4 From Antioch Jesus journeyed south along the coast to Caesarea, where he tarried for a few weeks, continuing down the coast to Joppa. From Joppa he travelled inland to Jamnia, Ashdod, and Gaza. From Gaza he took the inland trail to Beersheba, where he remained for a week.
-\vs p134 7:5 Jesus then started on his final tour, as a private individual, through the heart of Palestine, going from Beersheba in the south to Dan in the north. On this journey northward he stopped at Hebron, Bethlehem (where he saw his birthplace), Jerusalem (he did not visit Bethany), Beeroth, Lebonah, Sychar, Shechem, Samaria, Geba, En\hyp{}Gannim, Endor, Madon; passing through Magdala and Capernaum, he journeyed on north; and passing east of the Waters of Merom, he went by Karahta to Dan, or Caesarea\hyp{}Philippi.
+\vs p134 7:5 Jesus then started on his final tour, as a private individual, through the heart of Palestine, going from Beersheba in the south to Dan in the north. On this journey northward he stopped at Hebron, Bethlehem (where he saw his birthplace), Jerusalem (he did not visit Bethany), Beeroth, Lebonah, Sychar, Shechem\fnst{In 1955 text ``Schecham''. See also \bibref[186:3.2]{p186 3:2}.}, Samaria, Geba, En\hyp{}Gannim, Endor, Madon; passing through Magdala and Capernaum, he journeyed on north; and passing east of the Waters of Merom, he went by Karahta to Dan, or Caesarea\hyp{}Philippi.
 \vs p134 7:6 The indwelling Thought Adjuster now led Jesus to forsake the dwelling places of men and betake himself up to Mount Hermon that he might finish his work of mastering his human mind and complete the task of effecting his full consecration to the remainder of his lifework on earth.
 \vs p134 7:7 This was one of those unusual and extraordinary epochs in the Master’s earth life on Urantia. Another and very similar one was the experience he passed through when alone in the hills near Pella just subsequent to his baptism. This period of isolation on Mount Hermon marked the termination of his purely human career, that is, the technical termination of the mortal bestowal, while the later isolation marked the beginning of the more divine phase of the bestowal. And Jesus lived alone with God for six weeks on the slopes of Mount Hermon.
 \usection{The Sojourn on Mount Hermon}
