--- a/tex/p135.tex
+++ b/tex/p135.tex
@@ -85,7 +85,7 @@
 \vs p135 10:3 Herod Antipas, in whose territory John had been preaching, became alarmed lest he and his disciples should start a rebellion. Herod also resented John’s public criticisms of his domestic affairs. In view of all this, Herod decided to put John in prison. Accordingly, very early in the morning of June 12, before the multitude arrived to hear the preaching and witness the baptizing, the agents of Herod placed John under arrest. As weeks passed and he was not released, his disciples scattered over all Palestine, many of them going into Galilee to join the followers of Jesus.
 \usection{John in Prison}
 \vs p135 11:1 John had a lonely and somewhat bitter experience in prison. Few of his followers were permitted to see him. He longed to see Jesus but had to be content with hearing of his work through those of his followers who had become believers in the Son of Man. He was often tempted to doubt Jesus and his divine mission. If Jesus were the Messiah, why did he do nothing to deliver him from this unbearable imprisonment? For more than a year and a half this rugged man of God’s outdoors languished in that despicable prison. And this experience was a great test of his faith in, and loyalty to, Jesus. Indeed, this whole experience was a great test of John’s faith even in God. Many times was he tempted to doubt even the genuineness of his own mission and experience.
-\vs p135 11:2 \pc After he had been in prison several months, a group of his disciples came to him and, after reporting concerning the public activities of Jesus, said: “So you see, Teacher, that he who was with you at the upper Jordan prospers and receives all who come to him. He even feasts with publicans and sinners. You bore courageous witness to him, and yet he does nothing to effect your deliverance.” But John answered his friends: “This man can do nothing unless it has been given him by his Father in heaven. You well remember that I said, ‘I am not the Messiah, but I am one sent on before to prepare the way for him.’ And that I did. He who has the bride is the bridegroom, but the friend of the bridegroom who stands near by\fnc{In the 1955 text: near\hyp{}by.} and hears him rejoices greatly because of the bridegroom’s voice. This, my joy, therefore is fulfilled. He must increase but I must decrease. I am of this earth and have declared my message. Jesus of Nazareth comes down to the earth from heaven and is above us all. The Son of Man has descended from God, and the words of God he will declare to you. For the Father in heaven gives not the spirit by measure to his own Son. The Father loves his Son and will presently put all things in the hands of this Son. He who believes in the Son has eternal life. And these words which I speak are true and abiding.”
+\vs p135 11:2 \pc After he had been in prison several months, a group of his disciples came to him and, after reporting concerning the public activities of Jesus, said: “So you see, Teacher, that he who was with you at the upper Jordan prospers and receives all who come to him. He even feasts with publicans and sinners. You bore courageous witness to him, and yet he does nothing to effect your deliverance.” But John answered his friends: “This man can do nothing unless it has been given him by his Father in heaven. You well remember that I said, ‘I am not the Messiah, but I am one sent on before to prepare the way for him.’ And that I did. He who has the bride is the bridegroom, but the friend of the bridegroom who stands near by\fnst{In 1955 text ``nar\hyp{}by''.} and hears him rejoices greatly because of the bridegroom’s voice. This, my joy, therefore is fulfilled. He must increase but I must decrease. I am of this earth and have declared my message. Jesus of Nazareth comes down to the earth from heaven and is above us all. The Son of Man has descended from God, and the words of God he will declare to you. For the Father in heaven gives not the spirit by measure to his own Son. The Father loves his Son and will presently put all things in the hands of this Son. He who believes in the Son has eternal life. And these words which I speak are true and abiding.”
 \vs p135 11:3 \pc These disciples were amazed at John’s pronouncement, so much so that they departed in silence. John was also much agitated, for he perceived that he had uttered a prophecy. Never again did he wholly doubt the mission and divinity of Jesus. But it was a sore disappointment to John that Jesus sent him no word, that he came not to see him, and that he exercised none of his great power to deliver him from prison. But Jesus knew all about this. He had great love for John, but being now cognizant of his divine nature and knowing fully the great things in preparation for John when he departed from this world and also knowing that John’s work on earth was finished, he constrained himself not to interfere in the natural outworking of the great preacher\hyp{}prophet’s career.
 \vs p135 11:4 \pc This long suspense in prison was humanly unbearable. Just a few days before his death John again sent trusted messengers to Jesus, inquiring: “Is my work done? Why do I languish in prison? Are you truly the Messiah, or shall we look for another?” And when these two disciples gave this message to Jesus, the Son of Man replied: \textcolour{ubdarkred}{“Go back to John and tell him that I have not forgotten but to suffer me also this, for it becomes us to fulfil all righteousness. Tell John what you have seen and heard --- that the poor have good tidings preached to them --- and, finally, tell the beloved herald of my earth mission that he shall be abundantly blessed in the age to come if he finds no occasion to doubt and stumble over me.”} And this was the last word John received from Jesus. This message greatly comforted him and did much to stabilize his faith and prepare him for the tragic end of his life in the flesh which followed so soon upon the heels of this memorable occasion.
 \usection{Death of John the Baptist}
