--- a/tex/p136.tex
+++ b/tex/p136.tex
@@ -33,7 +33,7 @@
 \vs p136 3:2 After his baptism he entered upon the 40 days of adjusting himself to the changed relationships of the world and the universe occasioned by the personalization of his Adjuster. During this isolation in the Perean hills he determined upon the policy to be pursued and the methods to be employed in the new and changed phase of earth life which he was about to inaugurate.
 \vs p136 3:3 Jesus did not go into retirement for the purpose of fasting and for the affliction of his soul. He was not an ascetic, and he came forever to destroy all such notions regarding the approach to God. His reasons for seeking this retirement were entirely different from those which had actuated Moses and Elijah, and even John the Baptist. Jesus was then wholly self\hyp{}conscious concerning his relation to the universe of his making and also to the universe of universes, supervised by the Paradise Father, his Father in heaven. He now fully recalled the bestowal charge and its instructions administered by his elder brother, Immanuel, ere he entered upon his Urantia incarnation. He now clearly and fully comprehended all these far\hyp{}flung relationships, and he desired to be away for a season of quiet meditation so that he could think out the plans and decide upon the procedures for the prosecution of his public labours in behalf of this world and for all other worlds in his local universe.
 \vs p136 3:4 \pc While wandering about in the hills, seeking a suitable shelter, Jesus encountered his universe chief executive, Gabriel, the Bright and Morning Star of Nebadon. Gabriel now re\hyp{}established personal communication with the Creator Son of the universe; they met directly for the first time since Michael took leave of his associates on Salvington when he went to Edentia preparatory to entering upon the Urantia bestowal. Gabriel, by direction of Immanuel and on authority of the Uversa Ancients of Days, now laid before Jesus information indicating that his bestowal experience on Urantia was practically finished so far as concerned the earning of the perfected sovereignty of his universe and the termination of the Lucifer rebellion. The former was achieved on the day of his baptism when the personalization of his Adjuster demonstrated the perfection and completion of his bestowal in the likeness of mortal flesh, and the latter was a fact of history on that day when he came down from Mount Hermon to join the waiting lad, Tiglath. Jesus was now informed, upon the highest authority of the local universe and the superuniverse, that his bestowal work was finished in so far as it affected his personal status in relation to sovereignty and rebellion. He had already had this assurance direct from Paradise in the baptismal vision and in the phenomenon of the personalization of his indwelling Thought Adjuster.
-\vs p136 3:5 While he tarried on the mountain, talking with Gabriel, the Constellation Father of Edentia appeared to Jesus and Gabriel in person, saying: “The records are completed. The sovereignty of Michael number 611,121 over his universe of Nebadon rests in completion at the right hand of the Universal Father. I bring to you the bestowal release of Immanuel, your sponsor\hyp{}brother for the Urantia incarnation. You are at liberty now or at any subsequent time, in the manner of your own choosing, to terminate your incarnation bestowal, ascend to the right hand of your Father, receive your sovereignty, and assume your well\hyp{}earned unconditional rulership of all Nebadon. I also testify to the completion of the records of the superuniverse, by authorization of the Ancients of Days, having to do with the termination of all sin\hyp{}rebellion in your universe and endowing you with full and unlimited authority to deal with any and all such possible upheavals in the future. Technically, your work on Urantia and in the flesh of the mortal creature is finished. Your course from now on is a matter of your own choosing.”\fnc{The sovereignty of Michael \bibtextul{No.} 611,121 over his universe\ldots{} \bibexpl{See note for \bibref[24:1.11]{p024 1:11}.}}
+\vs p136 3:5 While he tarried on the mountain, talking with Gabriel, the Constellation Father of Edentia appeared to Jesus and Gabriel in person, saying: “The records are completed. The sovereignty of Michael number\fnst{In 1955 text ``No.'' instead of ``number''.} 611,121 over his universe of Nebadon rests in completion at the right hand of the Universal Father. I bring to you the bestowal release of Immanuel, your sponsor\hyp{}brother for the Urantia incarnation. You are at liberty now or at any subsequent time, in the manner of your own choosing, to terminate your incarnation bestowal, ascend to the right hand of your Father, receive your sovereignty, and assume your well\hyp{}earned unconditional rulership of all Nebadon. I also testify to the completion of the records of the superuniverse, by authorization of the Ancients of Days, having to do with the termination of all sin\hyp{}rebellion in your universe and endowing you with full and unlimited authority to deal with any and all such possible upheavals in the future. Technically, your work on Urantia and in the flesh of the mortal creature is finished. Your course from now on is a matter of your own choosing.”
 \vs p136 3:6 When the Most High Father of Edentia had taken leave, Jesus held long converse with Gabriel regarding the welfare of the universe and, sending greetings to Immanuel, proffered his assurance that, in the work which he was about to undertake on Urantia, he would be ever mindful of the counsel he had received in connection with the prebestowal charge administered on Salvington.
 \vs p136 3:7 \pc Throughout all of these 40 days of isolation James and John the sons of Zebedee were engaged in searching for Jesus. Many times they were not far from his abiding place, but never did they find him.
 \usection{Plans for Public Work}
