--- a/tex/p138.tex
+++ b/tex/p138.tex
@@ -58,7 +58,7 @@
 \vs p138 7:1 Jesus had planned for a quiet missionary campaign of five months’ personal work. He did not tell the apostles how long this was to last; they worked from week to week. And early on this first day of the week, just as he was about to announce this to his twelve apostles, Simon Peter, James Zebedee, and Judas Iscariot came to have private converse with him. Taking Jesus aside, Peter made bold to say: “Master, we come at the behest of our associates to inquire whether the time is not now ripe to enter into the kingdom. And will you proclaim the kingdom at Capernaum, or are we to move on to Jerusalem? And when shall we learn, each of us, the positions we are to occupy with you in the establishment of the kingdom --- ” and Peter would have gone on asking further questions, but Jesus raised an admonitory hand and stopped him. And beckoning the other apostles standing near by to join them, Jesus said: \textcolour{ubdarkred}{“My little children, how long shall I bear with you! Have I not made it plain to you that my kingdom is not of this world? I have told you many times that I have not come to sit on David’s throne, and now how is it that you are inquiring which place each of you will occupy in the Father’s kingdom? Can you not perceive that I have called you as ambassadors of a spiritual kingdom? Do you not understand that soon, very soon, you are to represent me in the world and in the proclamation of the kingdom, even as I now represent my Father who is in heaven? Can it be that I have chosen you and instructed you as messengers of the kingdom, and yet you do not comprehend the nature and significance of this coming kingdom of divine pre\hyp{}eminence in the hearts of men? My friends, hear me once more. Banish from your minds this idea that my kingdom is a rule of power or a reign of glory. Indeed, all power in heaven and on earth will presently be given into my hands, but it is not the Father’s will that we use this divine endowment to glorify ourselves during this age. In another age you shall indeed sit with me in power and glory, but it behoves us now to submit to the will of the Father and to go forth in humble obedience to execute his bidding on earth.”}
 \vs p138 7:2 Once more were his associates shocked, stunned. Jesus sent them away two and two to pray, asking them to return to him at noontime. On this crucial forenoon they each sought to find God, and each endeavoured to cheer and strengthen the other, and they returned to Jesus as he had bidden them.
 \vs p138 7:3 Jesus now recounted for them the coming of John, the baptism in the Jordan, the marriage feast at Cana, the recent choosing of the six, and the withdrawal from them of his own brothers in the flesh, and warned them that the enemy of the kingdom would seek also to draw them away. After this short but earnest talk the apostles all arose, under Peter’s leadership, to declare their undying devotion to their Master and to pledge their unswerving loyalty to the kingdom, as Thomas expressed it, “To this coming kingdom, no matter what it is and even if I do not fully understand it.” They all truly \bibemph{believed in Jesus,} even though they did not fully comprehend his teaching.
-\vs p138 7:4 Jesus now asked them how much money they had among them; he also inquired as to what provision had been made for their families. When it developed that they had hardly sufficient funds to maintain themselves for two weeks, he said: \textcolour{ubdarkred}{“It is not the will of my Father that we begin our work in this way. We will remain here by the sea two weeks and fish or do whatever our hands find to do; and in the meantime, under the guidance of Andrew, the first chosen apostle, you shall so organize yourselves as to provide for everything needful in your future work, both for the present personal ministry and also when I shall subsequently ordain you to preach the gospel and instruct believers.”} They were all greatly cheered by these words; this was their first clear\hyp{}cut and positive intimation that Jesus designed later on to enter upon more aggressive and pretentious public efforts.\fnc{\ldots{}this was their first \bibtextul{clearcut} and positive intimation\ldots{} \bibexpl{This word is found eight additional times; all are hyphenated.}}
+\vs p138 7:4 Jesus now asked them how much money they had among them; he also inquired as to what provision had been made for their families. When it developed that they had hardly sufficient funds to maintain themselves for two weeks, he said: \textcolour{ubdarkred}{“It is not the will of my Father that we begin our work in this way. We will remain here by the sea two weeks and fish or do whatever our hands find to do; and in the meantime, under the guidance of Andrew, the first chosen apostle, you shall so organize yourselves as to provide for everything needful in your future work, both for the present personal ministry and also when I shall subsequently ordain you to preach the gospel and instruct believers.”} They were all greatly cheered by these words; this was their first clear\hyp{}cut\fnst{In 1955 text ``clearcut'' un\hyp{}hyphenated. This word is found eight additional times; all are hyphenated.} and positive intimation that Jesus designed later on to enter upon more aggressive and pretentious public efforts.
 \vs p138 7:5 The apostles spent the remainder of the day perfecting their organization and completing arrangements for boats and nets for embarking on the morrow’s fishing as they had all decided to devote themselves to fishing; most of them had been fishermen, even Jesus was an experienced boatman and fisherman. Many of the boats which they used the next few years had been built by Jesus’ own hands. And they were good and trustworthy boats.
 \vs p138 7:6 Jesus enjoined them to devote themselves to fishing for two weeks, adding, \textcolour{ubdarkred}{“And then will you go forth to become fishers of men.”} They fished in three groups, Jesus going out with a different group each night. And they all so much enjoyed Jesus! He was a good fisherman, a cheerful companion, and an inspiring friend; the more they worked with him, the more they loved him. Said Matthew one day: “The more you understand some people, the less you admire them, but of this man, even the less I comprehend him, the more I love him.”
 \vs p138 7:7 This plan of fishing two weeks and going out to do personal work in behalf of the kingdom for two weeks was followed for more than five months, even to the end of this year of A.D.\,26, until after the cessation of those special persecutions which had been directed against John’s disciples subsequent to his imprisonment.
