--- a/tex/p145.tex
+++ b/tex/p145.tex
@@ -14,7 +14,7 @@
 \vs p145 1:3 But this was in no sense a miraculous draught of fishes. Jesus was a close student of nature; he was an experienced fisherman and knew the habits of the fish in the Sea of Galilee. On this occasion he merely directed these men to the place where the fish were usually to be found at this time of day. But Jesus’ followers always regarded this as a miracle.\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[width=\tunemarkup{pgkoboaurahd}{0.8}\columnwidth]{images/Fishes.jpg}\caption{The Draught of Fishes by William Hole}\end{figure}}
 \usection{Afternoon at the Synagogue}
 \vs p145 2:1 The next Sabbath, at the afternoon service in the synagogue, Jesus preached his sermon on \textcolour{ubdarkred}{“The Will of the Father in Heaven.”} In the morning Simon Peter had preached on “The Kingdom.” At the Thursday evening meeting of the synagogue Andrew had taught, his subject being “The New Way.” At this particular time more people believed in Jesus in Capernaum than in any other one city on earth.
-\vs p145 2:2 As Jesus taught in the synagogue this Sabbath afternoon, according to custom he took the first text from the Law\fnc{text from the \bibtextul{law}. See the note on \bibref[123:5.3]{p123 5:3}.}, reading from the Book of Exodus: \textcolour{ubdarkred}{“And you shall serve the Lord, your God, and he shall bless your bread and your water, and all sickness shall be taken away from you.”} He chose the second text from the Prophets, reading from Isaiah: \textcolour{ubdarkred}{“Arise and shine, for your light has come, and the glory of the Lord has risen upon you. Darkness may cover the earth and gross darkness the people, but the spirit of the Lord shall arise upon you, and the divine glory shall be seen with you. Even the gentiles shall come to this light, and many great minds shall surrender to the brightness of this light.”}
+\vs p145 2:2 As Jesus taught in the synagogue this Sabbath afternoon, according to custom he took the first text from the Law\fnst{In 1955 text ``law'' in lower case. See the note on \bibref[123:5.3]{p123 5:3}.}, reading from the Book of Exodus: \textcolour{ubdarkred}{“And you shall serve the Lord, your God, and he shall bless your bread and your water, and all sickness shall be taken away from you.”} He chose the second text from the Prophets, reading from Isaiah: \textcolour{ubdarkred}{“Arise and shine, for your light has come, and the glory of the Lord has risen upon you. Darkness may cover the earth and gross darkness the people, but the spirit of the Lord shall arise upon you, and the divine glory shall be seen with you. Even the gentiles shall come to this light, and many great minds shall surrender to the brightness of this light.”}
 \vs p145 2:3 This sermon was an effort on Jesus’ part to make clear the fact that religion is a \bibemph{personal experience.} Among other things, the Master said:
 \vs p145 2:4 \textcolour{ubdarkred}{“You well know that, while a kindhearted father loves his family as a whole, he so regards them as a group because of his strong affection for each individual member of that family. No longer must you approach the Father in heaven as a child of Israel but as a \bibemph{child of God.} As a group, you are indeed the children of Israel, but as individuals, each one of you is a child of God. I have come, not to reveal the Father to the children of Israel, but rather to bring this knowledge of God and the revelation of his love and mercy to the individual believer as a genuine personal experience. The prophets have all taught you that Yahweh cares for his people, that God loves Israel. But I have come among you to proclaim a greater truth, one which many of the later prophets also grasped, that God loves \bibemph{you ---} every one of you --- as individuals. All these generations have you had a national or racial religion; now have I come to give you a personal religion.}
 \vs p145 2:5 \textcolour{ubdarkred}{“But even this is not a new idea. Many of the spiritually minded among you have known this truth, inasmuch as some of the prophets have so instructed you. Have you not read in the Scriptures where the Prophet Jeremiah says: ‘In those days they shall no more say, the fathers have eaten sour grapes and the children’s teeth are set on edge. Every man shall die for his own iniquity; every man who eats sour grapes, his teeth shall be set on edge. Behold, the days shall come when I will make a new covenant with my people, not according to the covenant which I made with their fathers when I brought them out of the land of Egypt, but according to the new way. I will even write my law in their hearts. I will be their God, and they shall be my people. In that day they shall not say, one man to his neighbour, do you know the Lord? Nay! For they shall all know me personally, from the least to the greatest.’}
