--- a/tex/p146.tex
+++ b/tex/p146.tex
@@ -46,7 +46,7 @@
 \vs p146 3:10 \pc The special instruction given by Jesus during their stay at Zebulun had chiefly to do with further discussions of the mutual obligations of the kingdom and embraced teaching designed to make clear the differences between personal religious experience and the amities of social religious obligations. This was one of the few times the Master ever discussed the social aspects of religion. Throughout his entire earth life Jesus gave his followers very little instruction regarding the socialization of religion.
 \vs p146 3:11 In Zebulun the people were of a mixed race, hardly Jew or gentile, and few of them really believed in Jesus, notwithstanding they had heard of the healing of the sick at Capernaum.
 \usection{The Gospel at Iron}
-\vs p146 4:1 At Iron, as in many of even the smaller cities of Galilee and Judea, there was a synagogue, and during the earlier times of Jesus’ ministry it was his custom to speak in these synagogues on the Sabbath day. Sometimes he would speak at the morning service, and Peter or one of the other apostles would preach at the afternoon hour. Jesus and the apostles would also often teach and preach at the weekday evening assemblies at the synagogue. Although the religious leaders at Jerusalem became increasingly antagonistic toward Jesus, they exercised no direct control over the synagogues outside of that city. It was not until later in Jesus’ public ministry that they were able to create such a widespread sentiment against him as to bring about the almost universal closing of the synagogues to his teaching. At this time all the synagogues of Galilee and Judea were open to him.\fnc{\ldots{}teach and preach at the \bibtextul{week-day} evening assemblies\ldots{} \bibexpl{The closed form weekday, unlike week-end/week end, is the one found in both Webster’s and OED; further, as noted for \bibref[142:8.4]{p0142 8:4}, it was decided that “weekday” and “weekend” should have the same format (as they do in modern usage).}}
+\vs p146 4:1 At Iron, as in many of even the smaller cities of Galilee and Judea, there was a synagogue, and during the earlier times of Jesus’ ministry it was his custom to speak in these synagogues on the Sabbath day. Sometimes he would speak at the morning service, and Peter or one of the other apostles would preach at the afternoon hour. Jesus and the apostles would also often teach and preach at the weekday\fnst{In 1955 text ``week\hyp{}day'' hyphenated.} evening assemblies at the synagogue. Although the religious leaders at Jerusalem became increasingly antagonistic toward Jesus, they exercised no direct control over the synagogues outside of that city. It was not until later in Jesus’ public ministry that they were able to create such a widespread sentiment against him as to bring about the almost universal closing of the synagogues to his teaching. At this time all the synagogues of Galilee and Judea were open to him.
 \vs p146 4:2 Iron was the site of extensive mineral mines for those days, and since Jesus had never shared the life of the miner, he spent most of his time, while sojourning at Iron, in the mines. While the apostles visited the homes and preached in the public places, Jesus worked in the mines with these underground labourers. The fame of Jesus as a healer had spread even to this remote village, and many sick and afflicted sought help at his hands, and many were greatly benefited by his healing ministry. But in none of these cases did the Master perform a so\hyp{}called miracle of healing save in that of the leper.
 \vs p146 4:3 \pc Late on the afternoon of the third day at Iron, as Jesus was returning from the mines, he chanced to pass through a narrow side street on his way to his lodging place. As he drew near the squalid hovel of a certain leprous man, the afflicted one, having heard of his fame as a healer, made bold to accost him as he passed his door, saying as he knelt before him: “Lord, if only you would, you could make me clean. I have heard the message of your teachers, and I would enter the kingdom if I could be made clean.” And the leper spoke in this way because among the Jews lepers were forbidden even to attend the synagogue or otherwise engage in public worship. This man really believed that he could not be received into the coming kingdom unless he could find a cure for his leprosy. And when Jesus saw him in his affliction and heard his words of clinging faith, his human heart was touched, and the divine mind was moved with compassion. As Jesus looked upon him, the man fell upon his face and worshipped. Then the Master stretched forth his hand and, touching him, said: \textcolour{ubdarkred}{“I will --- be clean.”} And immediately he was healed; the leprosy no longer afflicted him.
 \vs p146 4:4 When Jesus had lifted the man upon his feet, he charged him: \textcolour{ubdarkred}{“See that you tell no man about your healing but rather go quietly about your business, showing yourself to the priest and offering those sacrifices commanded by Moses in testimony of your cleansing.”} But this man did not do as Jesus had instructed him. Instead, he began to publish abroad throughout the town that Jesus had cured his leprosy, and since he was known to all the village, the people could plainly see that he had been cleansed of his disease. He did not go to the priests as Jesus had admonished him. As a result of his spreading abroad the news that Jesus had healed him, the Master was so thronged by the sick that he was forced to rise early the next day and leave the village. Although Jesus did not again enter the town, he remained two days in the outskirts near the mines, continuing to instruct the believing miners further regarding the gospel of the kingdom.
