--- a/tex/p149.tex
+++ b/tex/p149.tex
@@ -41,7 +41,7 @@
 \vs p149 3:2 The religious leaders at Jerusalem were becoming well\hyp{}nigh frantic as a result of the recent conversion of young Abraham and by the desertion of the three spies who had been baptized by Peter, and who were now out with the evangelists on this second preaching tour of Galilee. The Jewish leaders were increasingly blinded by fear and prejudice, while their hearts were hardened by the continued rejection of the appealing truths of the gospel of the kingdom. When men shut off the appeal to the spirit that dwells within them, there is little that can be done to modify their attitude.
 \vs p149 3:3 When Jesus first met with the evangelists at the Bethsaida camp, in concluding his address, he said: \textcolour{ubdarkred}{“You should remember that in body and mind --- emotionally --- men react individually. The only \bibemph{uniform} thing about men is the indwelling spirit. Though divine spirits may vary somewhat in the nature and extent of their experience, they react uniformly to all spiritual appeals. Only through, and by appeal to, this spirit can mankind ever attain unity and brotherhood.”} But many of the leaders of the Jews had closed the doors of their hearts to the spiritual appeal of the gospel. From this day on they ceased not to plan and plot for the Master’s destruction. They were convinced that Jesus must be apprehended, convicted, and executed as a religious offender, a violator of the cardinal teachings of the Jewish sacred law.
 \usection{Progress of the Preaching Tour}
-\vs p149 4:1 Jesus did very little public work on this preaching tour, but he conducted many evening classes with the believers in most of the cities and villages where he chanced to sojourn with James and John. At one of these evening sessions one of the younger evangelists asked Jesus a question about anger, and the Master, among other things, said in reply:\fnc{\ldots{}a question about anger, and the \bibtextul{Master} among other \bibtextul{things} said, in reply: \bibexpl{See also note for \bibref[149:7.1]{p0149 7:1}. This sentence required two edits to make it flow correctly: at this location a comma was inserted after “the Master” and per the following item, a pre-existing comma that originally followed “said” was moved in front of it --- to follow “things”}}
+\vs p149 4:1 Jesus did very little public work on this preaching tour, but he conducted many evening classes with the believers in most of the cities and villages where he chanced to sojourn with James and John. At one of these evening sessions one of the younger evangelists asked Jesus a question about anger, and the Master, among other things, said in reply:\fnst{In 1955 text ``and the Master among other things said, in reply''. See also note for \bibref[149:7.1]{p149 7:1}. This sentence required two edits to make it flow correctly: at this location a comma was inserted after “the Master” and per the following item, a pre\hyp{}existing comma that originally followed “said” was moved in front of it --- to follow “things”.}
 \vs p149 4:2 \pc \textcolour{ubdarkred}{“Anger is a material manifestation which represents, in a general way, the measure of the failure of the spiritual nature to gain control of the combined intellectual and physical natures. Anger indicates your lack of tolerant brotherly love plus your lack of self\hyp{}respect and self\hyp{}control. Anger depletes the health, debases the mind, and handicaps the spirit teacher of man’s soul. Have you not read in the Scriptures that ‘wrath kills the foolish man,’ and that man ‘tears himself in his anger’? That ‘he who is slow of wrath is of great understanding,’ while ‘he who is hasty of temper exalts folly’? You all know that ‘a soft answer turns away wrath,’ and how ‘grievous words stir up anger.’ ‘Discretion defers anger,’ while ‘he who has no control over his own self is like a defenceless city without walls.’ ‘Wrath is cruel and anger is outrageous.’ ‘Angry men stir up strife, while the furious multiply their transgressions.’ ‘Be not hasty in spirit, for anger rests in the bosom of fools.’”} Before Jesus ceased speaking, he said further: \textcolour{ubdarkred}{“Let your hearts be so dominated by love that your spirit guide will have little trouble in delivering you from the tendency to give vent to those outbursts of animal anger which are inconsistent with the status of divine sonship.”}
 \vs p149 4:3 \pc On this same occasion the Master talked to the group about the desirability of possessing well\hyp{}balanced characters. He recognized that it was necessary for most men to devote themselves to the mastery of some vocation, but he deplored all tendency toward overspecialization, toward becoming narrow\hyp{}minded and circumscribed in life’s activities. He called attention to the fact that any virtue, if carried to extremes, may become a vice. Jesus always preached temperance and taught consistency --- proportionate adjustment of life problems. He pointed out that overmuch sympathy and pity may degenerate into serious emotional instability; that enthusiasm may drive on into fanaticism. He discussed one of their former associates whose imagination had led him off into visionary and impractical undertakings. At the same time he warned them against the dangers of the dullness of overconservative mediocrity.
 \vs p149 4:4 And then Jesus discoursed on the dangers of courage and faith, how they sometimes lead unthinking souls on to recklessness and presumption. He also showed how prudence and discretion, when carried too far, lead to cowardice and failure. He exhorted his hearers to strive for originality while they shunned all tendency toward eccentricity. He pleaded for sympathy without sentimentality, piety without sanctimoniousness. He taught reverence free from fear and superstition.
