--- a/tex/p162.tex
+++ b/tex/p162.tex
@@ -29,7 +29,7 @@
 \vs p162 2:1 The first afternoon that Jesus taught in the temple, a considerable company sat listening to his words depicting the liberty of the new gospel and the joy of those who believe the good news, when a curious listener interrupted him to ask: “Teacher, how is it you can quote the Scriptures and teach the people so fluently when I am told that you are untaught in the learning of the rabbis?” Jesus replied: \textcolour{ubdarkred}{“No man has taught me the truths which I declare to you. And this teaching is not mine but His who sent me. If any man really desires to do my Father’s will, he shall certainly know about my teaching, whether it be God’s or whether I speak for myself. He who speaks for himself seeks his own glory, but when I declare the words of the Father, I thereby seek the glory of him who sent me. But before you try to enter into the new light, should you not rather follow the light you already have? Moses gave you the law, yet how many of you honestly seek to fulfil its demands? Moses in this law enjoins you, saying, ‘You shall not kill’; notwithstanding this command some of you seek to kill the Son of Man.”}
 \vs p162 2:2 \pc When the crowd heard these words, they fell to wrangling among themselves. Some said he was mad; some that he had a devil. Others said this was indeed the prophet of Galilee whom the scribes and Pharisees had long sought to kill. Some said the religious authorities were afraid to molest him; others thought that they laid not hands upon him because they had become believers in him. After considerable debate one of the crowd stepped forward and asked Jesus, “Why do the rulers seek to kill you?” And he replied: \textcolour{ubdarkred}{“The rulers seek to kill me because they resent my teaching about the good news of the kingdom, a gospel that sets men free from the burdensome traditions of a formal religion of ceremonies which these teachers are determined to uphold at any cost. They circumcise in accordance with the law on the Sabbath day, but they would kill me because I once on the Sabbath day set free a man held in the bondage of affliction. They follow after me on the Sabbath to spy on me but would kill me because on another occasion I chose to make a grievously stricken man completely whole on the Sabbath day. They seek to kill me because they well know that, if you honestly believe and dare to accept my teaching, their system of traditional religion will be overthrown, forever destroyed. Thus will they be deprived of authority over that to which they have devoted their lives since they steadfastly refuse to accept this new and more glorious gospel of the kingdom of God. And now do I appeal to every one of you: Judge not according to outward appearances but rather judge by the true spirit of these teachings; judge righteously.”}
 \vs p162 2:3 Then said another inquirer: “Yes, Teacher, we do look for the Messiah, but when he comes, we know that his appearance will be in mystery. We know whence you are. You have been among your brethren from the beginning. The deliverer will come in power to restore the throne of David’s kingdom. Do you really claim to be the Messiah?” And Jesus replied: \textcolour{ubdarkred}{“You claim to know me and to know whence I am. I wish your claims were true, for indeed then would you find abundant life in that knowledge. But I declare that I have not come to you for myself; I have been sent by the Father, and he who sent me is true and faithful. By refusing to hear me, you are refusing to receive Him who sends me. You, if you will receive this gospel, shall come to know Him who sent me. I know the Father, for I have come from the Father to declare and reveal him to you.”}
-\vs p162 2:4 The agents of the scribes wanted to lay hands upon him, but they feared the multitude, for many believed in him. Jesus’ work since his baptism had become well known to all Jewry, and as many of these people recounted these things, they said among themselves: “Even though this teacher is from Galilee, and even though he does not meet all of our expectations of the Messiah, we wonder if the deliverer, when he does come, will really do anything more wonderful than this Jesus of Nazareth has already done.”\fnc{\ldots{}we wonder if the deliverer, when he does come, will really do anything more wonderful than this Jesus of Nazareth has already \bibtextul{done?} \bibexpl{This is an indirect question contained within a declarative sentence, so the period rather than the question mark is the correct closing punctuation mark.}}
+\vs p162 2:4 The agents of the scribes wanted to lay hands upon him, but they feared the multitude, for many believed in him. Jesus’ work since his baptism had become well known to all Jewry, and as many of these people recounted these things, they said among themselves: “Even though this teacher is from Galilee, and even though he does not meet all of our expectations of the Messiah, we wonder if the deliverer, when he does come, will really do anything more wonderful than this Jesus of Nazareth has already done.”\fnst{In 1955 text ``done?'' with the question mark. This is an indirect question contained within a declarative sentence, so the period rather than the question mark is the correct closing punctuation mark.}
 \vs p162 2:5 When the Pharisees and their agents heard the people talking this way, they took counsel with their leaders and decided that something should be done forthwith to put a stop to these public appearances of Jesus in the temple courts. The leaders of the Jews, in general, were disposed to avoid a clash with Jesus, believing that the Roman authorities had promised him immunity. They could not otherwise account for his boldness in coming at this time to Jerusalem; but the officers of the Sanhedrin did not wholly believe this rumour. They reasoned that the Roman rulers would not do such a thing secretly and without the knowledge of the highest governing body of the Jewish nation.
 \vs p162 2:6 Accordingly, Eber, the proper officer of the Sanhedrin, with two assistants was dispatched to arrest Jesus. As Eber made his way toward Jesus, the Master said: \textcolour{ubdarkred}{“Fear not to approach me. Draw near while you listen to my teaching. I know you have been sent to apprehend me, but you should understand that nothing will befall the Son of Man until his hour comes. You are not arrayed against me; you come only to do the bidding of your masters, and even these rulers of the Jews verily think they are doing God’s service when they secretly seek my destruction.}
 \vs p162 2:7 \textcolour{ubdarkred}{“I bear none of you ill will. The Father loves you, and therefore do I long for your deliverance from the bondage of prejudice and the darkness of tradition. I offer you the liberty of life and the joy of salvation. I proclaim the new and living way, the deliverance from evil and the breaking of the bondage of sin. I have come that you might have life, and have it eternally. You seek to be rid of me and my disquieting teachings. If you could only realize that I am to be with you only a little while! In just a short time I go to Him who sent me into this world. And then will many of you diligently seek me, but you shall not discover my presence, for where I am about to go you cannot come. But all who truly seek to find me shall sometime attain the life that leads to my Father’s presence.”}
