--- a/tex/p165.tex
+++ b/tex/p165.tex
@@ -8,7 +8,7 @@
 \author{Midwayer Commission}
 \vs p165 0:1 On Tuesday, January 3, A.D.\,30, Abner, the former chief of the twelve apostles of John the Baptist, a Nazarite and onetime head of the Nazarite school at Engedi, now chief of the seventy messengers of the kingdom, called his associates together and gave them final instructions before sending them on a mission to all of the cities and villages of Perea. This Perean mission continued for almost three months and was the last ministry of the Master. From these labours Jesus went directly to Jerusalem to pass through his final experiences in the flesh. The seventy, supplemented by the periodic labours of Jesus and the twelve apostles, worked in the following cities and towns and some 50 additional villages: Zaphon, Gadara, Macad, Arbela, Ramath, Edrei, Bosora, Caspin, Mispeh, Gerasa, Ragaba, Succoth, Amathus, Adam, Penuel, Capitolias, Dion, Hatita, Gadda, Philadelphia, Jogbehah, Gilead, Beth\hyp{}Nimrah, Tyrus, Elealah, Livias, Heshbon, Callirrhoe, Beth\hyp{}Peor, Shittim, Sibmah, Medeba, Beth\hyp{}Meon, Areopolis, and Aroer.
 \vs p165 0:2 Throughout this tour of Perea the women’s corps, now numbering 62, took over most of the work of ministration to the sick. This was the final period of the development of the higher spiritual aspects of the gospel of the kingdom, and there was, accordingly, an absence of miracle working. No other part of Palestine was so thoroughly worked by the apostles and disciples of Jesus, and in no other region did the better classes of citizens so generally accept the Master’s teaching.
-\vs p165 0:3 Perea at this time was about equally gentile and Jewish, the Jews having been generally removed from these regions during the times of Judas Maccabee. Perea was the most beautiful and picturesque province of all Palestine. It was generally referred to by the Jews as “the land beyond the Jordan.”\fnc{\ldots{}from these regions during the times of Judas \bibtextul{Maccabeus.} \bibexpl{Although Maccabeus is a more accurate transliteration of the Greek, Maccabee is very common in English works and is used in all other occurrences of the word in the Urantia papers. Therefore, the committee decided to standardize on “Maccabee.”}}
+\vs p165 0:3 Perea at this time was about equally gentile and Jewish, the Jews having been generally removed from these regions during the times of Judas Maccabeus.. Perea was the most beautiful and picturesque province of all Palestine. It was generally referred to by the Jews as “the land beyond the Jordan.”
 \vs p165 0:4 Throughout this period Jesus divided his time between the camp at Pella and trips with the twelve to assist the seventy in the various cities where they taught and preached. Under Abner’s instructions the seventy baptized all believers, although Jesus had not so charged them.
 \usection{At the Pella Camp}
 \vs p165 1:1 By the middle of January more than 1200 persons were gathered together at Pella, and Jesus taught this multitude at least once each day when he was in residence at the camp, usually speaking at 9:00 if not prevented by rain. Peter and the other apostles taught each afternoon. The evenings Jesus reserved for the usual sessions of questions and answers with the twelve and other advanced disciples. The evening groups averaged about 50.
