--- a/tex/p167.tex
+++ b/tex/p167.tex
@@ -18,7 +18,7 @@
 \vs p167 1:5 \pc Then went Jesus over to where the sick man sat and, taking him by the hand, said: \textcolour{ubdarkred}{“Arise and go your way. You have not asked to be healed, but I know the desire of your heart and the faith of your soul.”} Before the man left the room, Jesus returned to his seat and, addressing those at the table, said: \textcolour{ubdarkred}{“Such works my Father does, not to tempt you into the kingdom, but to reveal himself to those who are already in the kingdom. You can perceive that it would be like the Father to do just such things because which one of you, having a favourite animal that fell in the well on the Sabbath day, would not go right out and draw him up?”} And since no one would answer him, and inasmuch as his host evidently approved of what was going on, Jesus stood up and spoke to all present: \textcolour{ubdarkred}{“My brethren, when you are bidden to a marriage feast, sit not down in the chief seat, lest, perchance, a more honoured man than you has been invited, and the host will have to come to you and request that you give your place to this other and honoured guest. In this event, with shame you will be required to take a lower place at the table. When you are bidden to a feast, it would be the part of wisdom, on arriving at the festive table, to seek for the lowest place and take your seat therein, so that, when the host looks over the guests, he may say to you: ‘My friend, why sit in the seat of the least? come up higher’; and thus will such a one have glory in the presence of his fellow guests. Forget not, every one who exalts himself shall be humbled, while he who truly humbles himself shall be exalted. Therefore, when you entertain at dinner or give a supper, invite not always your friends, your brethren, your kinsmen, or your rich neighbours that they in return may bid you to their feasts, and thus will you be recompensed. When you give a banquet, sometimes bid the poor, the maimed, and the blind. In this way you shall be blessed in your heart, for you well know that the lame and the halt cannot repay you for your loving ministry.”}
 \usection{Parable of the Great Supper}
 \vs p167 2:1 As Jesus finished speaking at the breakfast table of the Pharisee, one of the lawyers present, desiring to relieve the silence, thoughtlessly said: “Blessed is he who shall eat bread in the kingdom of God” --- that being a common saying of those days. And then Jesus spoke a parable, which even his friendly host was compelled to take to heart. He said:
-\vs p167 2:2 \textcolour{ubdarkred}{“A certain ruler gave a great supper, and having bidden many guests, he dispatched his servants at suppertime to say to those who were invited, ‘Come, for everything is now ready.’ And they all with one accord began to make excuses. The first said, ‘I have just bought a farm, and I must needs go to prove it\fnc{I must needs \bibtextul{to go} prove it. \bibexpl{This is simply bad English and has to be corrected.}}; I pray you have me excused.’ Another said, ‘I have bought five yoke of oxen, and I must go to receive them; I pray you have me excused.’ And another said, ‘I have just married a wife, and therefore I cannot come.’ So the servants went back and reported this to their master. When the master of the house heard this, he was very angry, and turning to his servants, he said: ‘I have made ready this marriage feast; the fatlings are killed, and all is in readiness for my guests, but they have spurned my invitation; they have gone every man after his lands and his merchandise, and they even show disrespect to my servants who bid them come to my feast. Go out quickly, therefore, into the streets and lanes of the city, out into the highways and the byways, and bring hither the poor and the outcast, the blind and the lame, that the marriage feast may have guests.’ And the servants did as their lord commanded, and even then there was room for more guests. Then said the lord to his servants: ‘Go now out into the roads and the countryside and constrain those who are there to come in that my house may be filled. I declare that none of those who were first bidden shall taste of my supper.’ And the servants did as their master commanded, and the house was filled.”}
+\vs p167 2:2 \textcolour{ubdarkred}{“A certain ruler gave a great supper, and having bidden many guests, he dispatched his servants at suppertime to say to those who were invited, ‘Come, for everything is now ready.’ And they all with one accord began to make excuses. The first said, ‘I have just bought a farm, and I must needs go to prove it\fnst{In 1955 text the wrong word order ``I must needs to go prove it''.}; I pray you have me excused.’ Another said, ‘I have bought five yoke of oxen, and I must go to receive them; I pray you have me excused.’ And another said, ‘I have just married a wife, and therefore I cannot come.’ So the servants went back and reported this to their master. When the master of the house heard this, he was very angry, and turning to his servants, he said: ‘I have made ready this marriage feast; the fatlings are killed, and all is in readiness for my guests, but they have spurned my invitation; they have gone every man after his lands and his merchandise, and they even show disrespect to my servants who bid them come to my feast. Go out quickly, therefore, into the streets and lanes of the city, out into the highways and the byways, and bring hither the poor and the outcast, the blind and the lame, that the marriage feast may have guests.’ And the servants did as their lord commanded, and even then there was room for more guests. Then said the lord to his servants: ‘Go now out into the roads and the countryside and constrain those who are there to come in that my house may be filled. I declare that none of those who were first bidden shall taste of my supper.’ And the servants did as their master commanded, and the house was filled.”}
 \vs p167 2:3 \pc And when they heard these words, they departed; every man went to his own place. At least one of the sneering Pharisees present that morning comprehended the meaning of this parable, for he was baptized that day and made public confession of his faith in the gospel of the kingdom. Abner preached on this parable that night at the general council of believers.
 \vs p167 2:4 The next day all of the apostles engaged in the philosophic exercise of endeavouring to interpret the meaning of this parable of the great supper. Though Jesus listened with interest to all of these differing interpretations, he steadfastly refused to offer them further help in understanding the parable. He would only say, \textcolour{ubdarkred}{“Let every man find out the meaning for himself and in his own soul.”}
 \usection{The Woman with the Spirit of Infirmity}
