--- a/tex/p169.tex
+++ b/tex/p169.tex
@@ -39,7 +39,7 @@
 \vs p169 2:8 \pc When the Pharisees who were present heard this, they began to sneer and scoff since they were much given to the acquirement of riches. These unfriendly hearers sought to engage Jesus in unprofitable argumentation, but he refused to debate with his enemies. When the Pharisees fell to wrangling among themselves, their loud speaking attracted large numbers of the multitude encamped thereabouts; and when they began to dispute with each other, Jesus withdrew, going to his tent for the night.
 \usection{The Rich Man and the Beggar}
 \vs p169 3:1 When the meeting became too noisy, Simon Peter, standing up, took charge, saying: “Men and brethren, it is not seemly thus to dispute among yourselves. The Master has spoken, and you do well to ponder his words. And this is no new doctrine which he proclaimed to you. Have you not also heard the allegory of the Nazarites concerning the rich man and the beggar? Some of us heard John the Baptist thunder this parable of warning to those who love riches and covet dishonest wealth. And while this olden parable is not according to the gospel we preach, you would all do well to heed its lessons until such a time as you comprehend the new light of the kingdom of heaven. The story as John told it was like this:
-\vs p169 3:2 “There was a certain rich man named Dives, who, being clothed in purple and fine linen, lived in mirth and splendour every day. And there was a certain beggar named Lazarus, who was laid at this rich man’s gate, covered with sores and desiring to be fed with the crumbs which fell from the rich man’s table; yes, even the dogs came and licked his sores. And it came to pass that the beggar died and was carried away by the angels to rest in Abraham’s bosom. And then, presently, this rich man also died and was buried with great pomp and regal splendour. When the rich man departed from this world, he waked up in Hades, and finding himself in torment, he lifted up his eyes and beheld Abraham afar off and Lazarus in his bosom. And then Dives cried aloud: ‘Father Abraham, have mercy on me and send over Lazarus that he may dip the tip of his finger in water to cool my tongue, for I am in great anguish because of my punishment.’ And then Abraham replied: ‘My son, you should remember that in your lifetime you enjoyed the good things while Lazarus in like manner suffered the evil. But now all this is changed, seeing that Lazarus is comforted while you are tormented. And besides, between us and you there is a great gulf so that we cannot go to you, neither can you come over to us.’ Then said Dives to Abraham: ‘I pray you send Lazarus back to my father’s house, inasmuch as I have five brothers, that he may so testify as to prevent my brothers from coming to this place of torment.’ But Abraham said: ‘My son, they have Moses and the prophets; let them hear them.’ And then answered Dives: ‘No, No, Father Abraham! but if one go to them from the dead, they will repent.’ And then said Abraham: ‘If they hear not Moses and the prophets, neither will they be persuaded even if one were to rise from the dead.’”\fnc{And there was a certain beggar named Lazarus, who \bibtextul{laid} at this rich man’s gate,\ldots{} \bibexpl{This sentence, as structured, does require “lay” rather than “laid,” the former being the past tense of the intransitive verb “to lie;” the latter being the past of the transitive verb “to lay.” However, it is the committee’s opinion that the error here is not poor grammar by the author, but a lost word in transcription. The authors of Part IV of The Urantia Book generally follow the text of the American Standard Version (ASV) of 1901, with certain modernizations and corrections as needed. The ASV text of Luke 16:19--21 is as follows: “Now there was a certain rich man, and he was clothed in purple and fine linen, faring sumptuously every day: and a certain beggar named Lazarus was laid at his gate, full of sores, and desiring to be fed with the crumbs that fell from the rich man’s table; yea, even the dogs came and licked his sores.” In view of the apparent reliance of The Urantia Book on the ASV at this point, the committee decided to reject “lay” and reconstruct the verb as “was laid.” Additional contextual support for this argument is based on the beggar’s inability to fend for himself. If “even the dogs came and licked his sores,” he surely would have been carried to the rich man’s gate by others, who would then have laid him there.}}
+\vs p169 3:2 “There was a certain rich man named Dives, who, being clothed in purple and fine linen, lived in mirth and splendour every day. And there was a certain beggar named Lazarus, who was laid\fnst{In 1955 text ``who laid''.  This sentence, as structured, does require “lay” rather than “laid,” the former being the past tense of the intransitive verb “to lie;” the latter being the past of the transitive verb “to lay.” However, it is the committee’s opinion that the error here is not poor grammar by the author, but a lost word in transcription. The authors of Part IV of The Urantia Book generally follow the text of the American Standard Version (ASV) of 1901, with certain modernizations and corrections as needed. The ASV text of Luke 16:19--21 is as follows: “Now there was a certain rich man, and he was clothed in purple and fine linen, faring sumptuously every day: and a certain beggar named Lazarus was laid at his gate, full of sores, and desiring to be fed with the crumbs that fell from the rich man’s table; yea, even the dogs came and licked his sores.” In view of the apparent reliance of The Urantia Book on the ASV at this point, the committee decided to reject “lay” and reconstruct the verb as “was laid.” Additional contextual support for this argument is based on the beggar’s inability to fend for himself. If “even the dogs came and licked his sores,” he surely would have been carried to the rich man’s gate by others, who would then have laid him there.} at this rich man’s gate, covered with sores and desiring to be fed with the crumbs which fell from the rich man’s table; yes, even the dogs came and licked his sores. And it came to pass that the beggar died and was carried away by the angels to rest in Abraham’s bosom. And then, presently, this rich man also died and was buried with great pomp and regal splendour. When the rich man departed from this world, he waked up in Hades, and finding himself in torment, he lifted up his eyes and beheld Abraham afar off and Lazarus in his bosom. And then Dives cried aloud: ‘Father Abraham, have mercy on me and send over Lazarus that he may dip the tip of his finger in water to cool my tongue, for I am in great anguish because of my punishment.’ And then Abraham replied: ‘My son, you should remember that in your lifetime you enjoyed the good things while Lazarus in like manner suffered the evil. But now all this is changed, seeing that Lazarus is comforted while you are tormented. And besides, between us and you there is a great gulf so that we cannot go to you, neither can you come over to us.’ Then said Dives to Abraham: ‘I pray you send Lazarus back to my father’s house, inasmuch as I have five brothers, that he may so testify as to prevent my brothers from coming to this place of torment.’ But Abraham said: ‘My son, they have Moses and the prophets; let them hear them.’ And then answered Dives: ‘No, No, Father Abraham! but if one go to them from the dead, they will repent.’ And then said Abraham: ‘If they hear not Moses and the prophets, neither will they be persuaded even if one were to rise from the dead.’”
 \vs p169 3:3 After Peter had recited this ancient parable of the Nazarite brotherhood, and since the crowd had quieted down, Andrew arose and dismissed them for the night. Although both the apostles and his disciples frequently asked Jesus questions about the parable of Dives and Lazarus, he never consented to make comment thereon.
 \usection{The Father and His Kingdom}
 \vs p169 4:1 Jesus always had trouble trying to explain to the apostles that, while they proclaimed the establishment of the kingdom of God, the Father in heaven \bibemph{was not a king.} At the time Jesus lived on earth and taught in the flesh, the people of Urantia knew mostly of kings and emperors in the governments of the nations, and the Jews had long contemplated the coming of the kingdom of God. For these and other reasons, the Master thought best to designate the spiritual brotherhood of man as the kingdom of heaven and the spirit head of this brotherhood as the \bibemph{Father in heaven.} Never did Jesus refer to his Father as a king. In his intimate talks with the apostles he always referred to himself as the Son of Man and as their elder brother. He depicted all his followers as servants of mankind and messengers of the gospel of the kingdom.
