--- a/tex/p172.tex
+++ b/tex/p172.tex
@@ -47,7 +47,7 @@
 \vs p172 4:3 As the evening drew on, they walked about the temple courts in silence, and after Jesus had surveyed these familiar scenes once more, recalling his emotions in connection with previous visits, not excepting the earlier ones, he said, \textcolour{ubdarkred}{“Let us go up to Bethany for our rest.”} Jesus, with Peter and John, went to the home of Simon, while the other apostles lodged among their friends in Bethany and Bethpage.
 \usection{The Apostles’ Attitude}
 \vs p172 5:1 This Sunday evening as they returned to Bethany, Jesus walked in front of the apostles. Not a word was spoken until they separated after arriving at Simon’s house. No twelve human beings ever experienced such diverse and inexplicable emotions as now surged through the minds and souls of these ambassadors of the kingdom. These sturdy Galileans were confused and disconcerted; they did not know what to expect next; they were too surprised to be much afraid. They knew nothing of the Master’s plans for the next day, and they asked no questions. They went to their lodgings, though they did not sleep much, save the twins. But they did not keep armed watch over Jesus at Simon’s house.
-\vs p172 5:2 Andrew was thoroughly bewildered, well\hyp{}nigh confused. He was the one apostle who did not seriously undertake to evaluate the popular outburst of acclaim. He was too preoccupied with the thought of his responsibility as chief of the apostolic corps to give serious consideration to the meaning or significance of the loud hosannas of the multitude. Andrew was busy watching some of his associates who he feared might be led away by their emotions during the excitement, particularly Peter, James, John, and Simon Zelotes. Throughout this day and those which immediately followed, Andrew was troubled with serious doubts, but he never expressed any of these misgivings to his apostolic associates. He was concerned about the attitude of some of the twelve who he knew were armed with swords; but he did not know that his own brother, Peter, was carrying such a weapon. And so the procession into Jerusalem made a comparatively superficial impression upon Andrew; he was too busy with the responsibilities of his office to be otherwise affected.\fnc{Andrew was busy watching some of his associates \bibtextul{whom} he feared might be led away by their emotions\ldots{} \bibexpl{The pronoun here is the subject of the verb phrase “might be led away;” not the object of “feared.” To clarify, Andrew feared they might be led away by their emotions; he was not watching his associates, whom he feared. --- He did not fear them, but he was afraid they might be led astray.Also:First printing: He was concerned about the attitude of some of the twelve \bibtextul{whom} he knew were armed with swords\ldots{}Changed to: He was concerned about the attitude of some of the twelve \bibtextul{who} he knew were armed with swords\ldots{} --- The pronoun is the subject of the verb “were armed,” not the object of “knew” nor of “were armed;” therefore “who” is the correct form. To illustrate: \ldots{}some of the twelve whom he knew Peter had armed\ldots{}[he knew Peter had armed them] \ldots{}some of the twelve who he knew were armed\ldots{} [he knew they were armed] The sentence might have been written “He was concerned about the attitude of the twelve, some of whom he knew were armed with swords.” In which case, “whom” would be the object of the prepositional phrase “some of whom,” while the phrase itself would be the subject of “were armed,” but it was not.}}
+\vs p172 5:2 Andrew was thoroughly bewildered, well\hyp{}nigh confused. He was the one apostle who did not seriously undertake to evaluate the popular outburst of acclaim. He was too preoccupied with the thought of his responsibility as chief of the apostolic corps to give serious consideration to the meaning or significance of the loud hosannas of the multitude. Andrew was busy watching some of his associates who\fnst{IN 1955 text ``whom''. The pronoun here is the subject of the verb phrase “might be led away;” not the object of “feared.” To clarify, Andrew feared they might be led away by their emotions; he was not watching his associates, whom he feared. --- He did not fear them, but he was afraid they might be led astray. Also:First printing: He was concerned about the attitude of some of the twelve \bibtextul{whom} he knew were armed with swords\ldots{} Changed to: He was concerned about the attitude of some of the twelve \bibtextul{who} he knew were armed with swords\ldots{} --- The pronoun is the subject of the verb “were armed,” not the object of “knew” nor of “were armed;” therefore “who” is the correct form. To illustrate: \ldots{}some of the twelve whom he knew Peter had armed\ldots{}[he knew Peter had armed them] \ldots{}some of the twelve who he knew were armed\ldots{} [he knew they were armed] The sentence might have been written “He was concerned about the attitude of the twelve, some of whom he knew were armed with swords.” In which case, “whom” would be the object of the prepositional phrase “some of whom,” while the phrase itself would be the subject of “were armed,” but it was not.} he feared might be led away by their emotions during the excitement, particularly Peter, James, John, and Simon Zelotes. Throughout this day and those which immediately followed, Andrew was troubled with serious doubts, but he never expressed any of these misgivings to his apostolic associates. He was concerned about the attitude of some of the twelve who he knew were armed with swords; but he did not know that his own brother, Peter, was carrying such a weapon. And so the procession into Jerusalem made a comparatively superficial impression upon Andrew; he was too busy with the responsibilities of his office to be otherwise affected.
 \vs p172 5:3 Simon Peter was at first almost swept off his feet by this popular manifestation of enthusiasm; but he was considerably sobered by the time they returned to Bethany that night. Peter simply could not figure out what the Master was about. He was terribly disappointed that Jesus did not follow up this wave of popular favour with some kind of a pronouncement. Peter could not understand why Jesus did not speak to the multitude when they arrived at the temple, or at least permit one of the apostles to address the crowd. Peter was a great preacher, and he disliked to see such a large, receptive, and enthusiastic audience go to waste. He would so much have liked to preach the gospel of the kingdom to that throng right there in the temple; but the Master had specifically charged them that they were to do no teaching or preaching while in Jerusalem this Passover week. The reaction from the spectacular procession into the city was disastrous to Simon Peter; by night he was sobered and inexpressibly saddened.
 \vs p172 5:4 To James Zebedee, this Sunday was a day of perplexity and profound confusion; he could not grasp the purport of what was going on; he could not comprehend the Master’s purpose in permitting this wild acclaim and then in refusing to say a word to the people when they arrived at the temple. As the procession moved down Olivet toward Jerusalem, more especially when they were met by the thousands of pilgrims who poured forth to welcome the Master, James was cruelly torn by his conflicting emotions of elation and gratification at what he saw and by his profound feeling of fear as to what would happen when they reached the temple. And then was he downcast and overcome by disappointment when Jesus climbed off the donkey and proceeded to walk leisurely about the temple courts. James could not understand the reason for throwing away such a magnificent opportunity to proclaim the kingdom. By night, his mind was held firmly in the grip of a distressing and dreadful uncertainty.
 \vs p172 5:5 John Zebedee came somewhere near understanding why Jesus did this; at least he grasped in part the spiritual significance of this so\hyp{}called triumphal entry into Jerusalem. As the multitude moved on toward the temple, and as John beheld his Master sitting there astride the colt, he recalled hearing Jesus onetime quote the passage of Scripture, the utterance of Zechariah, which described the coming of the Messiah as a man of peace and riding into Jerusalem on an ass. As John turned this Scripture over in his mind, he began to comprehend the symbolic significance of this Sunday\hyp{}afternoon pageant. At least, he grasped enough of the meaning of this Scripture to enable him somewhat to enjoy the episode and to prevent his becoming overmuch depressed by the apparent purposeless ending of the triumphal procession. John had a type of mind which naturally tended to think and feel in symbols.
