--- a/tex/p186.tex
+++ b/tex/p186.tex
@@ -30,7 +30,7 @@
 \vs p186 2:11 Pilate spoke more truly than he knew when, after Jesus had been scourged, he presented him before the multitude, exclaiming, “Behold the man!” Indeed, the fear\hyp{}ridden Roman governor little dreamed that at just that moment the universe stood at attention, gazing upon this unique scene of its beloved Sovereign thus subjected in humiliation to the taunts and blows of his darkened and degraded mortal subjects. And as Pilate spoke, there echoed throughout all Nebadon, “Behold God and man!” Throughout a universe, untold millions have ever since that day continued to behold that man, while the God of Havona, the supreme ruler of the universe of universes, accepts the man of Nazareth as the satisfaction of the ideal of the mortal creatures of this local universe of time and space. In his matchless life he never failed to reveal God to man. Now, in these final episodes of his mortal career and in his subsequent death, he made a new and touching revelation of man to God.
 \usection{The Dependable David Zebedee}
 \vs p186 3:1 Shortly after Jesus was turned over to the Roman soldiers at the conclusion of the hearing before Pilate, a detachment of the temple guards hastened out to Gethsemane to disperse or arrest the followers of the Master. But long before their arrival these followers had scattered. The apostles had retired to designated hiding places; the Greeks had separated and gone to various homes in Jerusalem; the other disciples had likewise disappeared. David Zebedee believed that Jesus’ enemies would return; so he early removed some five or six tents up the ravine near where the Master so often retired to pray and worship. Here he proposed to hide and at the same time maintain a centre, or co\hyp{}ordinating station, for his messenger service. David had hardly left the camp when the temple guards arrived. Finding no one there, they contented themselves with burning the camp and then hastened back to the temple. On hearing their report, the Sanhedrin was satisfied that the followers of Jesus were so thoroughly frightened and subdued that there would be no danger of an uprising or any attempt to rescue Jesus from the hands of his executioners. They were at last able to breathe easily, and so they adjourned, every man going his way to prepare for the Passover.
-\vs p186 3:2 As soon as Jesus was turned over to the Roman soldiers by Pilate for crucifixion, a messenger hastened away to Gethsemane to inform David, and within five minutes runners were on their way to Bethsaida, Pella, Philadelphia, Sidon, Shechem, Hebron, Damascus, and Alexandria. And these messengers carried the news that Jesus was about to be crucified by the Romans at the insistent behest of the rulers of the Jews.\fnc{Philadelphia, Sidon, \bibtextul{Schechem,} Hebron, Damascus, and Alexandria\ldots{} \bibexpl{The standard transliteration is Shechem. [A similar problem occurred at \bibref[134:7.5]{p0134 7:5}.]}}
+\vs p186 3:2 As soon as Jesus was turned over to the Roman soldiers by Pilate for crucifixion, a messenger hastened away to Gethsemane to inform David, and within five minutes runners were on their way to Bethsaida, Pella, Philadelphia, Sidon, Shechem\fnst{In 1955 text ``Schechem''. See also \bibref[134:7.5]{p134 7:5}.}, Hebron, Damascus, and Alexandria. And these messengers carried the news that Jesus was about to be crucified by the Romans at the insistent behest of the rulers of the Jews.
 \vs p186 3:3 Throughout this tragic day, until the message finally went forth that the Master had been laid in the tomb, David sent messengers about every half hour with reports to the apostles, the Greeks, and Jesus’ earthly family, assembled at the home of Lazarus in Bethany. When the messengers departed with the word that Jesus had been buried, David dismissed his corps of local runners for the Passover celebration and for the coming Sabbath of rest, instructing them to report to him quietly on Sunday morning at the home of Nicodemus, where he proposed to go in hiding for a few days with Andrew and Simon Peter.
 \vs p186 3:4 This peculiar\hyp{}minded David Zebedee was the only one of the leading disciples of Jesus who was inclined to take a literal and plain matter\hyp{}of\hyp{}fact view of the Master’s assertion that he would die and \textcolour{ubdarkred}{“rise again on the third day.”} David had once heard him make this prediction and, being of a literal turn of mind, now proposed to assemble his messengers early Sunday morning at the home of Nicodemus so that they would be on hand to spread the news in case Jesus rose from the dead. David soon discovered that none of Jesus’ followers were looking for him to return so soon from the grave; therefore did he say little about his belief and nothing about the mobilization of all his messenger force on early Sunday morning except to the runners who had been dispatched on Friday forenoon to distant cities and believer centres.
 \vs p186 3:5 And so these followers of Jesus, scattered throughout Jerusalem and its environs, that night partook of the Passover and the following day remained in seclusion.
@@ -45,7 +45,7 @@
 \vs p186 5:2 It was man and not God who planned and executed the death of Jesus on the cross. True, the Father refused to interfere with the march of human events on Urantia, but the Father in Paradise did not decree, demand, or require the death of his Son as it was carried out on earth. It is a fact that in some manner, sooner or later, Jesus would have had to divest himself of his mortal body, his incarnation in the flesh, but he could have executed such a task in countless ways without dying on a cross between two thieves. All of this was man’s doing, not God’s.
 \vs p186 5:3 At the time of the Master’s baptism he had already completed the technique of the required experience on earth and in the flesh which was necessary for the completion of his seventh and last universe bestowal. At this very time Jesus’ duty on earth was done. All the life he lived thereafter, and even the manner of his death, was a purely personal ministry on his part for the welfare and uplifting of his mortal creatures on this world and on other worlds.
 \vs p186 5:4 The gospel of the good news that mortal man may, by faith, become spirit\hyp{}conscious that he is a son of God, is not dependent on the death of Jesus. True, indeed, all this gospel of the kingdom has been tremendously illuminated by the Master’s death, but even more so by his life.
-\vs p186 5:5 All that the Son of Man said or did on earth greatly embellished the doctrines of sonship with God and of the brotherhood of men, but these essential relationships of God and men are inherent in the universe facts of God’s love for his creatures and the innate mercy of the divine Sons. These touching and divinely beautiful relations between man and his Maker, on this world and on all others throughout the universe of universes, have existed from eternity; and they are not in any sense dependent on these periodic bestowal enactments of the Creator Sons of God, who thus assume the nature and likeness of their created intelligences as a part of the price which they must pay for the final acquirement of unlimited sovereignty over their respective local universes.\fnc{\ldots{}relations between man and his \bibtextul{Maker} on this world and on all others\ldots{} \bibexpl{The addition of this comma properly sets off the following parenthetical phrase.}}
+\vs p186 5:5 All that the Son of Man said or did on earth greatly embellished the doctrines of sonship with God and of the brotherhood of men, but these essential relationships of God and men are inherent in the universe facts of God’s love for his creatures and the innate mercy of the divine Sons. These touching and divinely beautiful relations between man and his Maker,\fnst{In 1955 text no comma after ``Maker''.} on this world and on all others throughout the universe of universes, have existed from eternity; and they are not in any sense dependent on these periodic bestowal enactments of the Creator Sons of God, who thus assume the nature and likeness of their created intelligences as a part of the price which they must pay for the final acquirement of unlimited sovereignty over their respective local universes.
 \vs p186 5:6 The Father in heaven loved mortal man on earth just as much before the life and death of Jesus on Urantia as he did after this transcendent exhibition of the copartnership of man and God. This mighty transaction of the incarnation of the God of Nebadon as a man on Urantia could not augment the attributes of the eternal, infinite, and universal Father, but it did enrich and enlighten all other administrators and creatures of the universe of Nebadon. While the Father in heaven loves us no more because of this bestowal of Michael, all other celestial intelligences do. And this is because Jesus not only made a revelation of God to man, but he also likewise made a new revelation of man to the Gods and to the celestial intelligences of the universe of universes.
 \vs p186 5:7 Jesus is not about to die as a sacrifice for sin. He is not going to atone for the inborn moral guilt of the human race. Mankind has no such racial guilt before God. Guilt is purely a matter of personal sin and knowing, deliberate rebellion against the will of the Father and the administration of his Sons.
 \vs p186 5:8 Sin and rebellion have nothing to do with the fundamental bestowal plan of the Paradise Sons of God, albeit it does appear to us that the salvage plan is a provisional feature of the bestowal plan.
