--- a/tex/p195.tex
+++ b/tex/p195.tex
@@ -60,7 +60,7 @@
 \vs p195 3:7 \pc The second century after Christ was the best time in all the world’s history for a good religion to make progress in the Western world. During the first century Christianity had prepared itself, by struggle and compromise, to take root and rapidly spread. Christianity adopted the emperor; later, he adopted Christianity. This was a great age for the spread of a new religion. There was religious liberty; travel was universal and thought was untrammelled.
 \vs p195 3:8 The spiritual impetus of nominally accepting Hellenized Christianity came to Rome too late to prevent the well\hyp{}started moral decline or to compensate for the already well\hyp{}established and increasing racial deterioration. This new religion was a cultural necessity for imperial Rome, and it is exceedingly unfortunate that it did not become a means of spiritual salvation in a larger sense.
 \vs p195 3:9 Even a good religion could not save a great empire from the sure results of lack of individual participation in the affairs of government, from overmuch paternalism, overtaxation and gross collection abuses, unbalanced trade with the Levant which drained away the gold, amusement madness, Roman standardization, the degradation of woman, slavery and race decadence, physical plagues, and a state church which became institutionalized nearly to the point of spiritual barrenness.
-\vs p195 3:10 Conditions, however, were not so bad at Alexandria. The early schools continued to hold much of Jesus’ teachings free from compromise. Pantaenus taught Clement and then went on to follow Nathaniel in proclaiming Christ in India. While some of the ideals of Jesus were sacrificed in the building of Christianity, it should in all fairness be recorded that, by the end of the second century, practically all the great minds of the Gr\ae co\hyp{}Roman world had become Christian. The triumph was approaching completion.\fnc{\bibtextul{Poutaenus} taught Clement and then went on to follow Nathaniel\ldots{} \bibexpl{The correct spelling of this name is Pantaenus; Dr. Sadler, in a March 17, 1959 letter to the Rev. Benjamin Adams of San Francisco, suggested the possible source of the error: “I think the spelling of the name of the teacher in Alexandria is undoubtedly an error in transcribing the manuscript into typewriting. An “an” was undoubtedly transcribed as an “ou”. I remember when we were sometimes in doubt as to whether a letter was an “n” or a “u” in the manuscript. Of course, we who were preparing this matter, did not know the name of this teacher so could have easily made this mistake.”}}
+\vs p195 3:10 Conditions, however, were not so bad at Alexandria. The early schools continued to hold much of Jesus’ teachings free from compromise. Pantaenus\fnst{In 1955 text ``Poutaenus''. The correct spelling of this name is Pantaenus; Dr. Sadler, in a March 17, 1959 letter to the Rev. Benjamin Adams of San Francisco, suggested the possible source of the error: “I think the spelling of the name of the teacher in Alexandria is undoubtedly an error in transcribing the manuscript into typewriting. An “an” was undoubtedly transcribed as an “ou”. I remember when we were sometimes in doubt as to whether a letter was an “n” or a “u” in the manuscript. Of course, we who were preparing this matter, did not know the name of this teacher so could have easily made this mistake.”} taught Clement and then went on to follow Nathaniel in proclaiming Christ in India. While some of the ideals of Jesus were sacrificed in the building of Christianity, it should in all fairness be recorded that, by the end of the second century, practically all the great minds of the Gr\ae co\hyp{}Roman world had become Christian. The triumph was approaching completion.
 \vs p195 3:11 And this Roman Empire lasted sufficiently long to ensure the survival of Christianity even after the empire collapsed. But we have often conjectured what would have happened in Rome and in the world if it had been the gospel of the kingdom which had been accepted in the place of Greek Christianity.
 \usection{The European Dark Ages}
 \vs p195 4:1 The church, being an adjunct to society and the ally of politics, was doomed to share in the intellectual and spiritual decline of the so\hyp{}called European “dark ages.” During this time, religion became more and more monasticized, asceticized, and legalized. In a spiritual sense, Christianity was hibernating. Throughout this period there existed, alongside this slumbering and secularized religion, a continuous stream of mysticism, a fantastic spiritual experience bordering on unreality and philosophically akin to pantheism.
