--- a/tex/p060.tex
+++ b/tex/p060.tex
@@ -57,7 +57,7 @@
 \vs p060 3:17 The land animals were little changed, but because of greater continental emergence, especially in North America, they rapidly multiplied. North America was the great field of the land\hyp{}animal evolution of these times, most of Europe being under water.
 \vs p060 3:18 The climate was still warm and uniform. The arctic regions were enjoying weather much like that of the present climate in central and southern North America.
 \vs p060 3:19 Great plant\hyp{}life evolution was taking place. Among the land plants the angiosperms predominated, and many present\hyp{}day trees first appeared, including beech, birch, oak, walnut, sycamore, maple, and modern palms. Fruits, grasses, and cereals were abundant, and these seed\hyp{}bearing grasses and trees were to the plant world what the ancestors of man were to the animal world --- they were second in evolutionary importance only to the appearance of man himself. \bibemph{Suddenly} and without previous gradation, the great family of flowering plants mutated. And this new flora soon overspread the entire world.
-\vs p060 3:20 \pc \bibemph{60,000,000} years ago, though the land reptiles were on the decline, the dinosaurs continued as monarchs of the land, the lead now being taken by the more agile and active types of the smaller leaping kangaroo varieties of the carnivorous dinosaurs. But sometime previously there had appeared new types of the herbivorous dinosaurs, whose rapid increase was due to the appearance of the grass family of land plants. One of these new grass\hyp{}eating dinosaurs was a true quadruped having two horns and a capelike shoulder flange. The land type of turtle, 6\,m across, appeared as did also the modern crocodile and true snakes of the modern type. Great changes were also occurring among the fishes and other forms of marine life.\fnc{But \bibtextul{some time} previously there had appeared new types of the herbivorous dinosaurs\ldots{} \bibexpl{The one-word form is correct as the reference is to an indefinite point in time rather than to an indefinite period of time. (see \bibemph{Webster’s})}}
+\vs p060 3:20 \pc \bibemph{60,000,000} years ago, though the land reptiles were on the decline, the dinosaurs continued as monarchs of the land, the lead now being taken by the more agile and active types of the smaller leaping kangaroo varieties of the carnivorous dinosaurs. But sometime\fnst{In 1955 text ``some time'' two words.} previously there had appeared new types of the herbivorous dinosaurs, whose rapid increase was due to the appearance of the grass family of land plants. One of these new grass\hyp{}eating dinosaurs was a true quadruped having two horns and a capelike shoulder flange. The land type of turtle, 6\,m across, appeared as did also the modern crocodile and true snakes of the modern type. Great changes were also occurring among the fishes and other forms of marine life.
 \vs p060 3:21 The wading and swimming prebirds of earlier ages had not been a success in the air, nor had the flying dinosaurs. They were a short\hyp{}lived species, soon becoming extinct. They, too, were subject to the dinosaur doom, destruction, because of having too little brain substance in comparison with body size. This second attempt to produce animals that could navigate the atmosphere failed, as did the abortive attempt to produce mammals during this and a preceding age.
 \vs p060 3:22 \pc \bibemph{55,000,000} years ago the evolutionary march was marked by the \bibemph{sudden} appearance of the first of the \bibemph{true birds,} a small pigeonlike creature which was the ancestor of all bird life. This was the third type of flying creature to appear on earth, and it sprang directly from the reptilian group, not from the contemporary flying dinosaurs nor from the earlier types of toothed land birds. And so this becomes known as the \bibemph{age of birds} as well as the declining age of reptiles.
 \usection{The End of the Chalk Period}
