--- a/tex/p133.tex
+++ b/tex/p133.tex
@@ -82,7 +82,7 @@
 \vs p133 7:6 \pc \textcolour{ubdarkred}{My son, I have already told you much about the mind of man and the divine spirit that lives therein, but now let me emphasize that self\hyp{}consciousness is a \bibemph{reality.} When any animal becomes self\hyp{}conscious, it becomes a primitive man. Such an attainment results from a co\hyp{}ordination of function between impersonal energy and spirit\hyp{}conceiving mind, and it is this phenomenon which warrants the bestowal of an absolute focal point for the human personality, the spirit of the Father in heaven.}
 \vs p133 7:7 \textcolour{ubdarkred}{Ideas are not simply a record of sensations; ideas are sensations plus the reflective interpretations of the personal self; and the self is more than the sum of one’s sensations. There begins to be something of an approach to unity in an evolving selfhood, and that unity is derived from the indwelling presence of a part of absolute unity which spiritually activates such a self\hyp{}conscious animal\hyp{}origin mind.}
 \vs p133 7:8 \textcolour{ubdarkred}{No mere animal could possess a time self\hyp{}consciousness. Animals possess a physiological co\hyp{}ordination of associated sensation\hyp{}recognition and memory thereof, but none experience a meaningful recognition of sensation or exhibit a purposeful association of these combined physical experiences such as is manifested in the conclusions of intelligent and reflective human interpretations. And this fact of self\hyp{}conscious existence, associated with the reality of his subsequent spiritual experience, constitutes man a potential son of the universe and foreshadows his eventual attainment of the Supreme Unity of the universe.}
-\vs p133 7:9 Neither is the human self merely the sum of the successive states of consciousness. Without the effective functioning of a consciousness sorter and associator there would not exist sufficient unity to warrant the designation of a selfhood. Such an ununified mind could hardly attain conscious levels of human status. If the associations of consciousness were just an accident, the minds of all men would then exhibit the uncontrolled and random associations of certain phases of mental madness.\fnc{\ldots{}functioning of a consciousness sorter and \bibtextul{associater}\ldots{} \bibexpl{While the meaning of ‘associater’ is clear and that variant is found in a reference dating to 1616 in the OED, it is probably the result of a keystroke error because the common form, ‘associator’, is the unanimous usage elsewhere in the text. [Unlike other archaic English words occasionally used in The Urantia Book to convey unique meanings (e.g., inconcussible at \bibref[118:3.3]{p0118 3:3} in the text) the ancient word-form ‘associater’ did not convey a meaning distinct from ‘associator’ and no such differentiation is apparent here.] The original spelling may have been caused by a typist’s inadvertent repetition of the ‘er’ pattern from sorter, but in any case, the committee chose to adopt the modern and consistently used form.}}
+\vs p133 7:9 Neither is the human self merely the sum of the successive states of consciousness. Without the effective functioning of a consciousness sorter and associator\fnst{In 1955 text ``associater''. While the meaning of ‘associater’ is clear and that variant is found in a reference dating to 1616 in the OED, it is probably the result of a keystroke error because the common form, ‘associator’, is the unanimous usage elsewhere in the text. Unlike other archaic English words occasionally used in the Urantia Papers to convey unique meanings (e.g., inconcussible at \bibref[118:3.3]{p118 3:3} in the text) the ancient word-form ‘associater’ did not convey a meaning distinct from ‘associator’ and no such differentiation is apparent here. The original spelling may have been caused by a typist’s inadvertent repetition of the ‘er’ pattern from sorter, but in any case, the committee chose to adopt the modern and consistently used form.} there would not exist sufficient unity to warrant the designation of a selfhood. Such an ununified mind could hardly attain conscious levels of human status. If the associations of consciousness were just an accident, the minds of all men would then exhibit the uncontrolled and random associations of certain phases of mental madness.
 \vs p133 7:10 \textcolour{ubdarkred}{A human mind, built up solely out of the consciousness of physical sensations, could never attain spiritual levels; this kind of material mind would be utterly lacking in a sense of moral values and would be without a guiding sense of spiritual dominance which is so essential to achieving harmonious personality unity in time, and which is inseparable from personality survival in eternity.}
 \vs p133 7:11 \textcolour{ubdarkred}{The human mind early begins to manifest qualities which are supermaterial; the truly reflective human intellect is not altogether bound by the limits of time. That individuals so differ in their life performances indicates, not only the varying endowments of heredity and the different influences of the environment, but also the degree of unification with the indwelling spirit of the Father which has been achieved by the self, the measure of the identification of the one with the other.}
 \vs p133 7:12 \textcolour{ubdarkred}{The human mind does not well stand the conflict of double allegiance. It is a severe strain on the soul to undergo the experience of an effort to serve both good and evil. The supremely happy and efficiently unified mind is the one wholly dedicated to the doing of the will of the Father in heaven. Unresolved conflicts destroy unity and may terminate in mind disruption. But the survival character of a soul is not fostered by attempting to secure peace of mind at any price, by the surrender of noble aspirations, and by the compromise of spiritual ideals; rather is such peace attained by the stalwart assertion of the triumph of that which is true, and this victory is achieved in the overcoming of evil with the potent force of good.}
