--- a/tex/p151.tex
+++ b/tex/p151.tex
@@ -58,7 +58,7 @@
 \vs p151 5:7 It was late in the evening when Jesus and his associates reached the shore, and since it was a calm and beautiful night, they all rested in the boats, not going ashore until shortly after sunrise the next morning. When they were gathered together, about 40 in all, Jesus said: \textcolour{ubdarkred}{“Let us go up into yonder hills and tarry for a few days while we ponder over the problems of the Father’s kingdom.”}
 \usection{The Kheresa Lunatic}
 \vs p151 6:1 Although most of the near\hyp{}by eastern shore of the lake sloped up gently to the highlands beyond, at this particular spot there was a steep hillside, the shore in some places dropping sheer down into the lake. Pointing up to the side of the near\hyp{}by hill, Jesus said: \textcolour{ubdarkred}{“Let us go up on this hillside for our breakfast and under some of the shelters rest and talk.”}
-\vs p151 6:2 This entire hillside was covered with caverns which had been hewn out of the rock. Many of these niches were ancient sepulchres. About halfway up the hillside on a small, relatively level spot was the cemetery of the little village of Kheresa. As Jesus and his associates passed near this burial ground, a lunatic who lived in these hillside caverns rushed up to them. This demented man was well known about these parts, having onetime been bound with fetters and chains and confined in one of the grottoes. Long since he had broken his shackles and now roamed at will among the tombs and abandoned sepulchres.\fnc{\ldots{}with fetters and chains and confined in one of the \bibtextul{grottos}\ldots{} \bibexpl{Though both forms are correct, this word is found elsewhere in the text as grottoes. Therefore, text standardization was adopted on the latter.}}
+\vs p151 6:2 This entire hillside was covered with caverns which had been hewn out of the rock. Many of these niches were ancient sepulchres. About halfway up the hillside on a small, relatively level spot was the cemetery of the little village of Kheresa. As Jesus and his associates passed near this burial ground, a lunatic who lived in these hillside caverns rushed up to them. This demented man was well known about these parts, having onetime been bound with fetters and chains and confined in one of the grottos. Long since he had broken his shackles and now roamed at will among the tombs and abandoned sepulchres.
 \vs p151 6:3 This man, whose name was Amos, was afflicted with a periodic form of insanity. There were considerable spells when he would find some clothing and deport himself fairly well among his fellows. During one of these lucid intervals he had gone over to Bethsaida, where he heard the preaching of Jesus and the apostles, and at that time had become a half\hyp{}hearted believer in the gospel of the kingdom. But soon a stormy phase of his trouble appeared, and he fled to the tombs, where he moaned, cried out aloud, and so conducted himself as to terrorize all who chanced to meet him.
 \vs p151 6:4 When Amos recognized Jesus, he fell down at his feet and exclaimed: “I know you, Jesus, but I am possessed of many devils, and I beseech that you will not torment me.” This man truly believed that his periodic mental affliction was due to the fact that, at such times, evil or unclean spirits entered into him and dominated his mind and body. His troubles were mostly emotional --- his brain was not grossly diseased.
 \vs p151 6:5 Jesus, looking down upon the man crouching like an animal at his feet, reached down and, taking him by the hand, stood him up and said to him: \textcolour{ubdarkred}{“Amos, you are not possessed of a devil; you have already heard the good news that you are a son of God. I command you to come out of this spell.”} And when Amos heard Jesus speak these words, there occurred such a transformation in his intellect that he was immediately restored to his right mind and the normal control of his emotions. By this time a considerable crowd had assembled from the near\hyp{}by village, and these people, augmented by the swine herders from the highland above them, were astonished to see the lunatic sitting with Jesus and his followers, in possession of his right mind and freely conversing with them.
