--- a/tex/p153.tex
+++ b/tex/p153.tex
@@ -15,7 +15,7 @@
 \vs p153 1:4 \pc This crisis in Jesus’ earth life began with the feeding of the 5,000 and ended with this sermon in the synagogue; the crisis in the lives of the apostles began with this sermon in the synagogue and continued for a whole year, ending only with the Master’s trial and crucifixion.
 \vs p153 1:5 \pc As they sat there in the synagogue that afternoon before Jesus began to speak, there was just one great mystery, just one supreme question, in the minds of all. Both his friends and his foes pondered just one thought, and that was: “Why did he himself so deliberately and effectively turn back the tide of popular enthusiasm?” And it was immediately before and immediately after this sermon that the doubts and disappointments of his disgruntled adherents grew into unconscious opposition and eventually turned into actual hatred. It was after this sermon in the synagogue that Judas Iscariot entertained his first conscious thought of deserting. But he did, for the time being, effectively master all such inclinations.
 \vs p153 1:6 Everyone was in a state of perplexity. Jesus had left them dumbfounded and confounded. He had recently engaged in the greatest demonstration of supernatural power to characterize his whole career. The feeding of the 5,000 was the one event of his earth life which made the greatest appeal to the Jewish concept of the expected Messiah. But this extraordinary advantage was immediately and unexplainedly offset by his prompt and unequivocal refusal to be made king.
-\vs p153 1:7 On Friday evening, and again on Sabbath morning, the Jerusalem leaders had laboured long and earnestly with Jairus to prevent Jesus’ speaking in the synagogue, but it was of no avail. Jairus’s only reply to all this pleading was: “I have granted this request, and I will not violate my word.”\fnc{\bibtextul{Jairus’} only reply to all this pleading was\ldots{} \bibexpl{The corrected form is supported by usage elsewhere \bibref[152:1.1]{p0152 1:1} and \bibref[152:1.3]{p0152 1:3}. The Chicago Manual of Style recommendations have been evolving over time, with the 9\ts{th} - 11\ts{th} editions favouring the original version here, but the (12\ts{th}) and 13\ts{th}, supporting the revision. This evolution is recognized by the other contemporary sources, with Fowler (1926) noting that the form s’ is still retained “in poetic or reverential contexts\ldots{}But elsewhere we now add the s\ldots{}” Strunk (1918) however, in that author’s famously opinionated way, has as its very first rule of usage: “Form the possessive singular of nouns by adding ’s. Follow this rule whatever the final consonant\ldots{} Exceptions are the possessive of ancient proper names in -es and -is and the possessive Jesus’\ldots{}” [author’s emphasis] Usage in the 1955 text follows, with only this exception, the more modern practices supported by Fowler and Strunk. (An important supporting example being Lazarus’s, which would be found without its ’s under the older rules.)}}
+\vs p153 1:7 On Friday evening, and again on Sabbath morning, the Jerusalem leaders had laboured long and earnestly with Jairus to prevent Jesus’ speaking in the synagogue, but it was of no avail. Jairus’s only reply to all this pleading was: “I have granted this request, and I will not violate my word.”
 \usection{The Epochal Sermon}
 \vs p153 2:1 Jesus introduced this sermon by reading from the Law as found in Deuteronomy: \textcolour{ubdarkred}{“But it shall come to pass, if this people will not hearken to the voice of God, that the curses of transgression shall surely overtake them. The Lord shall cause you to be smitten by your enemies; you shall be removed into all the kingdoms of the earth. And the Lord shall bring you and the king you have set up over you into the hands of a strange nation. You shall become an astonishment, a proverb, and a byword among all nations. Your sons and your daughters shall go into captivity. The strangers among you shall rise high in authority while you are brought very low. And these things shall be upon you and your seed forever because you would not hearken to the word of the Lord. Therefore shall you serve your enemies who shall come against you. You shall endure hunger and thirst and wear this alien yoke of iron. The Lord shall bring against you a nation from afar, from the end of the earth, a nation whose tongue you shall not understand, a nation of fierce countenance, a nation which will have little regard for you. And they shall besiege you in all your towns until the high fortified walls wherein you have trusted come down; and all the land shall fall into their hands. And it shall come to pass that you will be driven to eat the fruit of your own bodies, the flesh of your sons and daughters, during this time of siege, because of the straitness wherewith your enemies shall press you.”}
 \vs p153 2:2 And when Jesus had finished this reading, he turned to the Prophets and read from Jeremiah: \textcolour{ubdarkred}{“‘If you will not hearken to the words of my servants the prophets whom I have sent you, then will I make this house like Shiloh, and I will make this city a curse to all the nations of the earth.’ And the priests and the teachers heard Jeremiah speak these words in the house of the Lord. And it came to pass that, when Jeremiah had made an end of speaking all that the Lord had commanded him to speak to all the people, the priests and teachers laid hold of him, saying, ‘You shall surely die.’ And all the people crowded around Jeremiah in the house of the Lord. And when the princes of Judah heard these things, they sat in judgment on Jeremiah. Then spoke the priests and the teachers to the princes and to all the people, saying: ‘This man is worthy to die, for he has prophesied against our city, and you have heard him with your own ears.’ Then spoke Jeremiah to all the princes and to all the people: ‘The Lord sent me to prophesy against this house and against this city all the words which you have heard. Now, therefore, amend your ways and reform your doings and obey the voice of the Lord your God that you may escape the evil which has been pronounced against you. As for me, behold I am in your hands. Do with me as seems good and right in your eyes. But know you for certain that, if you put me to death, you shall bring innocent blood upon yourselves and upon this people, for of a truth the Lord has sent me to speak all these words in your ears.’}
@@ -35,7 +35,7 @@
 \vs p153 3:2 One of the visiting Pharisees, mounting a lampstand,\tunemarkup{pgnexus10}{\linebreak} shouted out this question: “You tell us that you are the bread of life. How can you give us your flesh to eat or your blood to drink? What avail is your teaching if it cannot be carried out?” And Jesus answered this question, saying: \textcolour{ubdarkred}{“I did not teach you that my flesh is the bread of life nor that my blood is the water thereof. But I did say that my life in the flesh is a bestowal of the bread of heaven. The fact of the Word of God bestowed in the flesh and the phenomenon of the Son of Man subject to the will of God, constitute a reality of experience which is equivalent to the divine sustenance. You cannot eat my flesh nor can you drink my blood, but you can become one in spirit with me even as I am one in spirit with the Father. You can be nourished by the eternal word of God, which is indeed the bread of life, and which has been bestowed in the likeness of mortal flesh; and you can be watered in soul by the divine spirit, which is truly the water of life. The Father has sent me into the world to show how he desires to indwell and direct all men; and I have so lived this life in the flesh as to inspire all men likewise ever to seek to know and do the will of the indwelling heavenly Father.”}
 \vs p153 3:3 Then one of the Jerusalem spies who had been observing Jesus and his apostles, said: “We notice that neither you nor your apostles wash your hands properly before you eat bread. You must well know that such a practice as eating with defiled and unwashed hands is a transgression of the law of the elders. Neither do you properly wash your drinking cups and eating vessels. Why is it that you show such disrespect for the traditions of the fathers and the laws of our elders?” And when Jesus heard him speak, he answered: \textcolour{ubdarkred}{“Why is it that you transgress the commandments of God by the laws of your tradition? The commandment says, ‘Honour your father and your mother,’ and directs that you share with them your substance if necessary; but you enact a law of tradition which permits undutiful children to say that the money wherewith the parents might have been assisted has been ‘given to God.’ The law of the elders thus relieves such crafty children of their responsibility, notwithstanding that the children subsequently use all such monies for their own comfort. Why is it that you in this way make void the commandment by your own tradition? Well did Isaiah prophesy of you hypocrites, saying: ‘This people honours me with their lips, but their heart is far from me. In vain do they worship me, teaching as their doctrines the precepts of men.’}
 \vs p153 3:4 \textcolour{ubdarkred}{“You can see how it is that you desert the commandment while you hold fast to the tradition of men. Altogether willing are you to reject the word of God while you maintain your own traditions. And in many other ways do you dare to set up your own teachings above the law and the prophets.”}
-\vs p153 3:5 Jesus then directed his remarks to all present. He said: “But hearken to me, all of you. It is not that which enters into the mouth that spiritually defiles the man, but rather that which proceeds out of the mouth and from the heart.” But even the apostles failed fully to grasp the meaning of his words, for Simon Peter also asked him: “Lest some of your hearers be unnecessarily offended, would you explain to us the meaning of these words?” And then said Jesus to Peter: \textcolour{ubdarkred}{“Are you also hard of understanding? Know you not that every plant which my heavenly Father has not planted shall be rooted up? Turn now your attention to those who would know the truth. You cannot compel men to love the truth. Many of these teachers are blind guides. And you know that, if the blind lead the blind, both shall fall into the pit. But hearken while I tell you the truth concerning those things which morally defile and spiritually contaminate men. I declare it is not that which enters the body by the mouth or gains access to the mind through the eyes and ears, that defiles the man. Man is only defiled by that evil which may originate within the heart, and which finds expression in the words and deeds of such unholy persons. Do you not know it is from the heart that there come forth evil thoughts, wicked projects of murder, theft, and adulteries, together with jealousy, pride, anger, revenge, railings, and false witness? And it is just such things that defile men, and not that they eat bread with ceremonially unclean hands.”}\fnc{He said: “But hearken to \bibtextul{me} all of you. \bibexpl{The comma properly separates the phrases, making this sentence much easier to read.}}
+\vs p153 3:5 Jesus then directed his remarks to all present. He said: “But hearken to me,\fnst{In 1955 text no comma after ``me''.} all of you. It is not that which enters into the mouth that spiritually defiles the man, but rather that which proceeds out of the mouth and from the heart.” But even the apostles failed fully to grasp the meaning of his words, for Simon Peter also asked him: “Lest some of your hearers be unnecessarily offended, would you explain to us the meaning of these words?” And then said Jesus to Peter: \textcolour{ubdarkred}{“Are you also hard of understanding? Know you not that every plant which my heavenly Father has not planted shall be rooted up? Turn now your attention to those who would know the truth. You cannot compel men to love the truth. Many of these teachers are blind guides. And you know that, if the blind lead the blind, both shall fall into the pit. But hearken while I tell you the truth concerning those things which morally defile and spiritually contaminate men. I declare it is not that which enters the body by the mouth or gains access to the mind through the eyes and ears, that defiles the man. Man is only defiled by that evil which may originate within the heart, and which finds expression in the words and deeds of such unholy persons. Do you not know it is from the heart that there come forth evil thoughts, wicked projects of murder, theft, and adulteries, together with jealousy, pride, anger, revenge, railings, and false witness? And it is just such things that defile men, and not that they eat bread with ceremonially unclean hands.”}
 \vs p153 3:6 The Pharisaic commissioners of the Jerusalem Sanhedrin were now almost convinced that Jesus must be apprehended on a charge of blasphemy or on one of flouting the sacred law of the Jews; wherefore their efforts to involve him in the discussion of, and possible attack upon, some of the traditions of the elders, or so\hyp{}called oral laws of the nation. No matter how scarce water might be, these traditionally enslaved Jews would never fail to go through with the required ceremonial washing of the hands before every meal. It was their belief that “it is better to die than to transgress the commandments of the elders.” The spies asked this question because it had been reported that Jesus had said, “Salvation is a matter of clean hearts rather than of clean hands.” But such beliefs, when they once become a part of one’s religion, are hard to get away from. Even many years after this day the Apostle Peter was still held in the bondage of fear to many of these traditions about things clean and unclean, only being finally delivered by experiencing an extraordinary and vivid dream. All of this can the better be understood when it is recalled that these Jews looked upon eating with unwashed hands in the same light as commerce with a harlot, and both were equally punishable by excommunication.
 \vs p153 3:7 Thus did the Master elect to discuss and expose the folly of the whole rabbinic system of rules and regulations which was represented by the oral law --- the traditions of the elders, all of which were regarded as more sacred and more binding upon the Jews than even the teachings of the Scriptures. And Jesus spoke out with less reserve because he knew the hour had come when he could do nothing more to prevent an open rupture of relations with these religious leaders.
 \usection{Last Words in the Synagogue}
