--- a/tex/p160.tex
+++ b/tex/p160.tex
@@ -35,7 +35,7 @@
 \vs p160 2:10 \pc I repeat, such inspiring and ennobling association finds its ideal possibilities in the human marriage relation. True, much is attained out of marriage, and many, many marriages utterly fail to produce these moral and spiritual fruits. Too many times marriage is entered by those who seek other values which are lower than these superior accompaniments of human maturity. Ideal marriage must be founded on something more stable than the fluctuations of sentiment and the fickleness of mere sex attraction; it must be based on genuine and mutual personal devotion. And thus, if you can build up such trustworthy and effective small units of human association, when these are assembled in the aggregate, the world will behold a great and glorified social structure, the civilization of mortal maturity. Such a race might begin to realize something of your Master’s ideal of “peace on earth and good will among men.” While such a society would not be perfect or entirely free from evil, it would at least approach the stabilization of maturity.
 \usection{The Lures of Maturity}
 \vs p160 3:1 The effort toward maturity necessitates work, and work requires energy. Whence the power to accomplish all this? The physical things can be taken for granted, but the Master has well said, \textcolour{ubdarkred}{“Man cannot live by bread alone.”} Granted the possession of a normal body and reasonably good health, we must next look for those lures which will act as a stimulus to call forth man’s slumbering spiritual forces. Jesus has taught us that God lives in man; then how can we induce man to release these soul\hyp{}bound powers of divinity and infinity? How shall we induce men to let go of God that he may spring forth to the refreshment of our own souls while in transit outward and then to serve the purpose of enlightening, uplifting, and blessing countless other souls? How best can I awaken these latent powers for good which lie dormant in your souls? One thing I am sure of: Emotional excitement is not the ideal spiritual stimulus. Excitement does not augment energy; it rather exhausts the powers of both mind and body. Whence then comes the energy to do these great things? Look to your Master. Even now he is out in the hills taking in power while we are here giving out energy. The secret of all this problem is wrapped up in spiritual communion, in worship. From the human standpoint it is a question of combined meditation and relaxation. Meditation makes the contact of mind with spirit; relaxation determines the capacity for spiritual receptivity. And this interchange of strength for weakness, courage for fear, the will of God for the mind of self, constitutes worship. At least, that is the way the philosopher views it.
-\vs p160 3:2 When these experiences are frequently repeated, they crystallize into habits, strength\hyp{}giving and worshipful habits, and such habits eventually formulate themselves into a spiritual character, and such a character is finally recognized by one’s fellows as a \bibemph{mature personality.} These practices are difficult and time\hyp{}consuming at first, but when they become habitual, they are at once restful and timesaving. The more complex society becomes, and the more the lures of civilization multiply, the more urgent will become the necessity for God\hyp{}knowing individuals to form such protective habitual practices designed to conserve and augment their spiritual energies.\fnc{\ldots{}they are at once restful and \bibtextul{time-saving.} \bibexpl{Though the original is clear, the closed form is the common one and was the approved form in Webster’s 1934.}}
+\vs p160 3:2 When these experiences are frequently repeated, they crystallize into habits, strength\hyp{}giving and worshipful habits, and such habits eventually formulate themselves into a spiritual character, and such a character is finally recognized by one’s fellows as a \bibemph{mature personality.} These practices are difficult and time\hyp{}consuming at first, but when they become habitual, they are at once restful and time\hyp{}saving. The more complex society becomes, and the more the lures of civilization multiply, the more urgent will become the necessity for God\hyp{}knowing individuals to form such protective habitual practices designed to conserve and augment their spiritual energies.
 \vs p160 3:3 Another requirement for the attainment of maturity is the co\hyp{}operative adjustment of social groups to an ever\hyp{}changing environment. The immature individual arouses the antagonisms of his fellows; the mature man wins the hearty co\hyp{}operation of his associates, thereby many times multiplying the fruits of his life efforts.
 \vs p160 3:4 My philosophy tells me that there are times when I must fight, if need be, for the defence of my concept of righteousness, but I doubt not that the Master, with a more mature type of personality, would easily and gracefully gain an equal victory by his superior and winsome technique of tact and tolerance. All too often, when we battle for the right, it turns out that both the victor and the vanquished have sustained defeat. I heard the Master say only yesterday that the \textcolour{ubdarkred}{“wise man, when seeking entrance through the locked door, would not destroy the door but rather would seek for the key wherewith to unlock it.”} Too often we engage in a fight merely to convince ourselves that we are not afraid.
 \vs p160 3:5 This new gospel of the kingdom renders a great service to the art of living in that it supplies a new and richer incentive for higher living. It presents a new and exalted goal of destiny, a supreme life purpose. And these new concepts of the eternal and divine goal of existence are in themselves transcendent stimuli, calling forth the reaction of the very best that is resident in man’s higher nature. On every mountaintop of intellectual thought are to be found relaxation for the mind, strength for the soul, and communion for the spirit. From such vantage points of high living, man is able to transcend the material irritations of the lower levels of thinking --- worry, jealousy, envy, revenge, and the pride of immature personality. These high\hyp{}climbing souls deliver themselves from a multitude of the crosscurrent conflicts of the trifles of living, thus becoming free to attain consciousness of the higher currents of spirit concept and celestial communication. But the life purpose must be jealously guarded from the temptation to seek for easy and transient attainment; likewise must it be so fostered as to become immune to the disastrous threats of fanaticism.
